--- a/bib/references.bib
+++ b/bib/references.bib
@@ -1075,9 +1075,9 @@
 	title = {Enhancing the Effectiveness of Joint Production and Maintenance
 	         Scheduling Based on a Multi-Agent System and a {{Pigouvian}}
 	         Approach of Externalities},
-	author = {Kedy, Ghislain Serge Mepouly and Penda, Malcolm Chumchoua and Nneme
-	          Nneme, L{\'e}andre and Mayi, Olivier Thierry Sosso and Lehman, L{\'
-	          e}opold Gustave},
+	author = {Kedy, Ghislain Serge Mepouly and Penda, Malcolm Chumchoua and
+	          Nneme Nneme, L{\'e}andre and Mayi, Olivier Thierry Sosso and Lehman
+	          , L{\' e}opold Gustave},
 	year = {2024},
 	month = mar,
 	journal = {Production Engineering},
