--- a/papers/actor-based-large-neighborhood-search/figures/strategic_objective_value_resource_subtraction_plot.tex
+++ b/papers/actor-based-large-neighborhood-search/figures/strategic_objective_value_resource_subtraction_plot.tex
@@ -1,6 +1,6 @@
 \tikzpicture[gnuplot]
 %% generated with GNUPLOT 6.0p1 (Lua 5.2; terminal rev. Jun 2020, script rev. 118)
-%% tir 17 dec 2024 22:45:43 CET
+%% fre 03 jan 2025 11:58:20 CET
 \path (0.000,0.000) rectangle (16.000,12.000);
 \gpcolor{rgb color={0.753,0.753,0.753}}
 \gpsetlinetype{gp lt border}
@@ -11,7 +11,7 @@
 \gpsetlinewidth{1.00}
 \draw[gp path] (2.424,1.845)--(2.604,1.845);
 \draw[gp path] (15.447,1.845)--(15.267,1.845);
-\node[gp node right] at (2.240,1.845) {$1.85\times10^{11}$};
+\node[gp node right] at (2.240,1.845) {$1.8\times10^{11}$};
 \gpcolor{rgb color={0.753,0.753,0.753}}
 \gpsetlinewidth{2.00}
 \draw[gp path] (2.424,3.383)--(15.447,3.383);
@@ -19,7 +19,7 @@
 \gpsetlinewidth{1.00}
 \draw[gp path] (2.424,3.383)--(2.604,3.383);
 \draw[gp path] (15.447,3.383)--(15.267,3.383);
-\node[gp node right] at (2.240,3.383) {$1.9\times10^{11}$};
+\node[gp node right] at (2.240,3.383) {$1.85\times10^{11}$};
 \gpcolor{rgb color={0.753,0.753,0.753}}
 \gpsetlinewidth{2.00}
 \draw[gp path] (2.424,4.922)--(15.447,4.922);
@@ -27,7 +27,7 @@
 \gpsetlinewidth{1.00}
 \draw[gp path] (2.424,4.922)--(2.604,4.922);
 \draw[gp path] (15.447,4.922)--(15.267,4.922);
-\node[gp node right] at (2.240,4.922) {$1.95\times10^{11}$};
+\node[gp node right] at (2.240,4.922) {$1.9\times10^{11}$};
 \gpcolor{rgb color={0.753,0.753,0.753}}
 \gpsetlinewidth{2.00}
 \draw[gp path] (2.424,6.460)--(15.447,6.460);
@@ -35,7 +35,7 @@
 \gpsetlinewidth{1.00}
 \draw[gp path] (2.424,6.460)--(2.604,6.460);
 \draw[gp path] (15.447,6.460)--(15.267,6.460);
-\node[gp node right] at (2.240,6.460) {$2\times10^{11}$};
+\node[gp node right] at (2.240,6.460) {$1.95\times10^{11}$};
 \gpcolor{rgb color={0.753,0.753,0.753}}
 \gpsetlinewidth{2.00}
 \draw[gp path] (2.424,7.998)--(15.447,7.998);
@@ -43,7 +43,7 @@
 \gpsetlinewidth{1.00}
 \draw[gp path] (2.424,7.998)--(2.604,7.998);
 \draw[gp path] (15.447,7.998)--(15.267,7.998);
-\node[gp node right] at (2.240,7.998) {$2.05\times10^{11}$};
+\node[gp node right] at (2.240,7.998) {$2\times10^{11}$};
 \gpcolor{rgb color={0.753,0.753,0.753}}
 \gpsetlinewidth{2.00}
 \draw[gp path] (2.424,9.537)--(15.447,9.537);
@@ -51,7 +51,7 @@
 \gpsetlinewidth{1.00}
 \draw[gp path] (2.424,9.537)--(2.604,9.537);
 \draw[gp path] (15.447,9.537)--(15.267,9.537);
-\node[gp node right] at (2.240,9.537) {$2.1\times10^{11}$};
+\node[gp node right] at (2.240,9.537) {$2.05\times10^{11}$};
 \gpcolor{rgb color={0.753,0.753,0.753}}
 \gpsetlinewidth{2.00}
 \draw[gp path] (2.424,11.075)--(15.447,11.075);
@@ -59,7 +59,7 @@
 \gpsetlinewidth{1.00}
 \draw[gp path] (2.424,11.075)--(2.604,11.075);
 \draw[gp path] (15.447,11.075)--(15.267,11.075);
-\node[gp node right] at (2.240,11.075) {$2.15\times10^{11}$};
+\node[gp node right] at (2.240,11.075) {$2.1\times10^{11}$};
 \gpcolor{rgb color={0.753,0.753,0.753}}
 \gpsetlinewidth{2.00}
 \draw[gp path] (2.424,1.845)--(2.424,11.075);
@@ -70,52 +70,44 @@
 \node[gp node left,rotate=270] at (2.424,1.661) {$0$};
 \gpcolor{rgb color={0.753,0.753,0.753}}
 \gpsetlinewidth{2.00}
-\draw[gp path] (4.284,1.845)--(4.284,11.075);
+\draw[gp path] (4.595,1.845)--(4.595,11.075);
 \gpcolor{color=gp lt color border}
 \gpsetlinewidth{1.00}
-\draw[gp path] (4.284,1.845)--(4.284,2.025);
-\draw[gp path] (4.284,11.075)--(4.284,10.895);
-\node[gp node left,rotate=270] at (4.284,1.661) {$50$};
+\draw[gp path] (4.595,1.845)--(4.595,2.025);
+\draw[gp path] (4.595,11.075)--(4.595,10.895);
+\node[gp node left,rotate=270] at (4.595,1.661) {$50$};
 \gpcolor{rgb color={0.753,0.753,0.753}}
 \gpsetlinewidth{2.00}
-\draw[gp path] (6.145,1.845)--(6.145,11.075);
+\draw[gp path] (6.765,1.845)--(6.765,11.075);
 \gpcolor{color=gp lt color border}
 \gpsetlinewidth{1.00}
-\draw[gp path] (6.145,1.845)--(6.145,2.025);
-\draw[gp path] (6.145,11.075)--(6.145,10.895);
-\node[gp node left,rotate=270] at (6.145,1.661) {$100$};
+\draw[gp path] (6.765,1.845)--(6.765,2.025);
+\draw[gp path] (6.765,11.075)--(6.765,10.895);
+\node[gp node left,rotate=270] at (6.765,1.661) {$100$};
 \gpcolor{rgb color={0.753,0.753,0.753}}
 \gpsetlinewidth{2.00}
-\draw[gp path] (8.005,1.845)--(8.005,11.075);
+\draw[gp path] (8.936,1.845)--(8.936,11.075);
 \gpcolor{color=gp lt color border}
 \gpsetlinewidth{1.00}
-\draw[gp path] (8.005,1.845)--(8.005,2.025);
-\draw[gp path] (8.005,11.075)--(8.005,10.895);
-\node[gp node left,rotate=270] at (8.005,1.661) {$150$};
+\draw[gp path] (8.936,1.845)--(8.936,2.025);
+\draw[gp path] (8.936,11.075)--(8.936,10.895);
+\node[gp node left,rotate=270] at (8.936,1.661) {$150$};
 \gpcolor{rgb color={0.753,0.753,0.753}}
 \gpsetlinewidth{2.00}
-\draw[gp path] (9.866,1.845)--(9.866,11.075);
+\draw[gp path] (11.106,1.845)--(11.106,11.075);
 \gpcolor{color=gp lt color border}
 \gpsetlinewidth{1.00}
-\draw[gp path] (9.866,1.845)--(9.866,2.025);
-\draw[gp path] (9.866,11.075)--(9.866,10.895);
-\node[gp node left,rotate=270] at (9.866,1.661) {$200$};
+\draw[gp path] (11.106,1.845)--(11.106,2.025);
+\draw[gp path] (11.106,11.075)--(11.106,10.895);
+\node[gp node left,rotate=270] at (11.106,1.661) {$200$};
 \gpcolor{rgb color={0.753,0.753,0.753}}
 \gpsetlinewidth{2.00}
-\draw[gp path] (11.726,1.845)--(11.726,11.075);
+\draw[gp path] (13.277,1.845)--(13.277,11.075);
 \gpcolor{color=gp lt color border}
 \gpsetlinewidth{1.00}
-\draw[gp path] (11.726,1.845)--(11.726,2.025);
-\draw[gp path] (11.726,11.075)--(11.726,10.895);
-\node[gp node left,rotate=270] at (11.726,1.661) {$250$};
-\gpcolor{rgb color={0.753,0.753,0.753}}
-\gpsetlinewidth{2.00}
-\draw[gp path] (13.587,1.845)--(13.587,11.075);
-\gpcolor{color=gp lt color border}
-\gpsetlinewidth{1.00}
-\draw[gp path] (13.587,1.845)--(13.587,2.025);
-\draw[gp path] (13.587,11.075)--(13.587,10.895);
-\node[gp node left,rotate=270] at (13.587,1.661) {$300$};
+\draw[gp path] (13.277,1.845)--(13.277,2.025);
+\draw[gp path] (13.277,11.075)--(13.277,10.895);
+\node[gp node left,rotate=270] at (13.277,1.661) {$250$};
 \gpcolor{rgb color={0.753,0.753,0.753}}
 \gpsetlinewidth{2.00}
 \draw[gp path] (15.447,1.845)--(15.447,11.075);
@@ -123,103 +115,90 @@
 \gpsetlinewidth{1.00}
 \draw[gp path] (15.447,1.845)--(15.447,2.025);
 \draw[gp path] (15.447,11.075)--(15.447,10.895);
-\node[gp node left,rotate=270] at (15.447,1.661) {$350$};
+\node[gp node left,rotate=270] at (15.447,1.661) {$300$};
 \draw[gp path] (2.424,11.075)--(2.424,1.845)--(15.447,1.845)--(15.447,11.075)--cycle;
 \gpcolor{rgb color={0.000,0.000,0.000}}
 \gpsetlinewidth{2.00}
-\draw[gp path] (2.424,6.805)--(2.424,6.754)--(2.424,6.729)--(2.424,6.691)--(2.424,6.636)%
-  --(2.424,6.597)--(2.424,6.587)--(2.424,6.521)--(2.424,6.499)--(2.461,6.455)--(2.461,6.405)%
-  --(2.461,6.398)--(2.461,6.383)--(2.461,6.355)--(2.461,6.332)--(2.461,6.324)--(2.461,6.309)%
-  --(2.461,6.292)--(2.461,6.283)--(2.461,6.273)--(2.498,6.261)--(2.498,6.248)--(2.498,6.241)%
-  --(2.498,6.204)--(2.498,6.136)--(2.498,6.133)--(2.498,6.114)--(2.498,6.089)--(2.498,6.085)%
-  --(2.498,6.065)--(2.498,6.048)--(2.498,6.047)--(2.536,6.039)--(2.536,6.037)--(2.536,6.031)%
-  --(2.536,6.018)--(2.536,6.009)--(2.536,6.007)--(2.573,6.002)--(2.573,6.000)--(2.573,5.997)%
-  --(2.573,5.992)--(2.573,5.990)--(2.573,5.988)--(2.573,5.978)--(2.573,5.973)--(2.573,5.968)%
-  --(2.573,5.929)--(2.610,5.916)--(2.610,5.915)--(2.610,5.911)--(2.610,5.895)--(2.610,5.890)%
-  --(2.610,5.884)--(2.610,5.880)--(2.610,5.879)--(2.610,5.859)--(2.647,5.851)--(2.647,5.838)%
-  --(2.647,5.834)--(2.647,5.823)--(2.647,5.816)--(2.684,5.808)--(2.684,5.800)--(2.684,5.787)%
-  --(2.684,5.770)--(2.684,5.764)--(2.722,5.759)--(2.722,5.753)--(2.722,5.752)--(2.722,5.748)%
-  --(2.722,5.740)--(2.722,5.737)--(2.722,5.717)--(2.722,5.715)--(2.759,5.712)--(2.759,5.707)%
-  --(2.759,5.701)--(2.759,5.700)--(2.759,5.698)--(2.759,5.691)--(2.759,5.689)--(2.796,5.687)%
-  --(2.796,5.682)--(2.796,5.681)--(2.796,5.679)--(2.796,5.675)--(2.833,5.675)--(2.833,5.674)%
-  --(2.833,5.669)--(2.833,5.663)--(2.833,5.660)--(2.833,5.659)--(2.871,5.654)--(2.871,5.649)%
-  --(2.908,5.643)--(2.908,5.639)--(2.908,5.638)--(2.908,5.637)--(2.908,5.630)--(2.945,5.629)%
-  --(2.945,5.623)--(2.945,5.622)--(2.945,5.619)--(2.982,5.619)--(2.982,5.617)--(2.982,5.614)%
-  --(2.982,5.611)--(3.019,5.610)--(3.019,5.609)--(3.019,5.600)--(3.019,5.592)--(3.057,5.584)%
-  --(3.057,5.578)--(3.057,5.571)--(3.094,5.568)--(3.094,5.558)--(3.094,5.549)--(3.094,5.547)%
-  --(3.094,5.546)--(3.131,5.546)--(3.131,5.545)--(3.168,5.545)--(3.168,5.542)--(3.168,5.540)%
-  --(3.168,5.532)--(3.168,5.529)--(3.168,5.525)--(3.168,5.516)--(3.205,5.509)--(3.205,5.507)%
-  --(3.243,5.506)--(3.243,5.505)--(3.243,5.502)--(3.243,5.493)--(3.280,5.491)--(3.280,5.490)%
-  --(3.317,5.486)--(3.317,5.484)--(3.317,5.476)--(3.354,5.475)--(3.354,5.473)--(3.354,5.467)%
-  --(3.391,5.460)--(3.391,5.457)--(3.429,5.455)--(3.429,5.449)--(3.429,5.448)--(3.429,5.446)%
-  --(3.466,5.446)--(3.540,5.446)--(3.540,5.445)--(3.577,5.444)--(3.615,5.442)--(3.615,5.439)%
-  --(3.689,5.439)--(3.689,5.437)--(3.726,5.436)--(3.726,5.435)--(3.726,5.434)--(3.726,5.432)%
-  --(3.764,5.432)--(3.838,5.427)--(3.875,5.427)--(3.912,5.426)--(3.950,5.424)--(3.950,5.423)%
-  --(3.950,5.422)--(3.987,5.418)--(4.136,5.418)--(4.210,5.418)--(4.322,5.415)--(4.359,5.415)%
-  --(4.359,5.414)--(4.433,5.411)--(4.508,5.409)--(4.545,5.407)--(4.545,5.403)--(4.619,5.402)%
-  --(4.657,5.401)--(4.694,5.396)--(4.731,5.393)--(4.731,5.392)--(4.768,5.390)--(4.768,5.389)%
-  --(4.880,5.386)--(4.954,5.383)--(5.029,5.380)--(5.103,5.380)--(5.140,5.377)--(5.140,5.373)%
-  --(5.326,5.372)--(5.363,5.372)--(5.363,5.369)--(5.438,5.365)--(5.512,5.364)--(5.661,5.362)%
-  --(5.661,5.359)--(5.698,5.357)--(5.736,5.357)--(5.773,5.354)--(5.810,5.354)--(5.810,5.353)%
-  --(5.847,5.349)--(5.847,5.347)--(5.884,5.345)--(5.922,5.344)--(5.959,5.344)--(5.996,5.344)%
-  --(6.145,5.341)--(6.182,5.337)--(6.182,4.013)--(6.182,3.998)--(6.182,3.870)--(6.219,3.867)%
-  --(6.219,3.860)--(6.219,3.841)--(6.219,3.818)--(6.219,3.792)--(6.219,3.761)--(6.219,3.743)%
-  --(6.219,3.740)--(6.219,3.727)--(6.219,3.721)--(6.219,3.711)--(6.219,3.704)--(6.219,3.695)%
-  --(6.256,3.691)--(6.256,3.689)--(6.256,3.675)--(6.256,3.672)--(6.256,3.592)--(6.256,3.582)%
-  --(6.256,3.473)--(6.256,3.465)--(6.256,3.401)--(6.256,3.371)--(6.294,3.329)--(6.294,3.328)%
-  --(6.294,3.325)--(6.294,3.236)--(6.294,3.233)--(6.294,3.225)--(6.294,3.222)--(6.331,3.219)%
-  --(6.331,3.146)--(6.331,3.144)--(6.331,3.139)--(6.331,3.131)--(6.331,3.124)--(6.331,3.118)%
-  --(6.331,3.116)--(6.368,3.108)--(6.368,3.106)--(6.368,3.105)--(6.368,3.102)--(6.368,2.951)%
-  --(6.368,2.941)--(6.368,2.930)--(6.368,2.928)--(6.368,2.925)--(6.405,2.920)--(6.405,2.919)%
-  --(6.405,2.916)--(6.405,2.914)--(6.405,2.912)--(6.443,2.912)--(6.443,2.911)--(6.443,2.907)%
-  --(6.443,2.903)--(6.443,2.891)--(6.443,2.883)--(6.480,2.883)--(6.480,2.874)--(6.517,2.873)%
-  --(6.517,2.867)--(6.517,2.863)--(6.517,2.751)--(6.517,2.731)--(6.517,2.730)--(6.517,2.729)%
-  --(6.517,2.727)--(6.517,2.725)--(6.554,2.724)--(6.554,2.723)--(6.554,2.722)--(6.554,2.721)%
-  --(6.591,2.720)--(6.591,2.708)--(6.591,2.706)--(6.591,2.705)--(6.591,2.704)--(6.591,2.701)%
-  --(6.591,2.696)--(6.629,2.695)--(6.629,2.692)--(6.629,2.691)--(6.666,2.689)--(6.666,2.680)%
-  --(6.703,2.679)--(6.740,2.675)--(6.740,2.672)--(6.777,2.669)--(6.777,2.668)--(6.815,2.588)%
-  --(6.815,2.584)--(6.815,2.583)--(6.815,2.579)--(6.852,2.577)--(6.852,2.574)--(6.889,2.568)%
-  --(6.889,2.565)--(6.889,2.563)--(6.889,2.561)--(6.889,2.559)--(6.889,2.557)--(6.926,2.557)%
-  --(6.926,2.556)--(6.926,2.554)--(6.926,2.551)--(6.963,2.547)--(7.001,2.545)--(7.001,2.544)%
-  --(7.001,2.542)--(7.038,2.537)--(7.075,2.534)--(7.075,2.532)--(7.112,2.530)--(7.112,2.525)%
-  --(7.187,2.521)--(7.187,2.519)--(7.224,2.519)--(7.224,2.517)--(7.298,2.514)--(7.410,2.512)%
-  --(7.522,2.512)--(7.596,2.509)--(7.633,2.507)--(7.670,2.507)--(7.670,2.506)--(7.708,2.506)%
-  --(7.708,2.505)--(7.745,2.501)--(7.745,2.500)--(7.819,2.499)--(7.819,2.498)--(7.856,2.496)%
-  --(7.894,2.496)--(7.894,2.495)--(7.894,2.494)--(7.931,2.493)--(7.968,2.493)--(8.005,2.492)%
-  --(8.005,2.491)--(8.042,2.489)--(8.042,2.488)--(8.117,2.488)--(8.117,2.485)--(8.154,2.484)%
-  --(8.191,2.482)--(8.229,2.482)--(8.229,2.479)--(8.229,2.478)--(8.229,2.477)--(8.266,2.475)%
-  --(8.266,2.473)--(8.303,2.473)--(8.340,2.472)--(8.340,2.471)--(8.377,2.470)--(8.489,2.469)%
-  --(8.489,2.467)--(8.526,2.466)--(8.563,2.466)--(8.601,2.466)--(8.675,2.465)--(8.712,2.465)%
-  --(8.712,2.463)--(8.787,2.460)--(8.787,2.459)--(8.824,2.458)--(8.824,2.457)--(8.898,2.456)%
-  --(9.010,2.455)--(9.122,2.455)--(9.270,2.452)--(9.345,2.450)--(9.382,2.450)--(9.419,2.448)%
-  --(9.456,2.447)--(9.642,2.445)--(9.680,2.444)--(9.940,6.138)--(9.940,6.088)--(9.940,6.017)%
-  --(9.940,5.947)--(9.940,5.840)--(9.940,5.810)--(9.940,5.735)--(9.940,5.703)--(9.940,5.634)%
-  --(9.940,5.586)--(9.940,5.557)--(9.940,5.522)--(9.977,5.499)--(9.977,5.475)--(9.977,5.450)%
-  --(9.977,5.426)--(9.977,5.412)--(9.977,5.381)--(9.977,5.361)--(9.977,5.359)--(9.977,5.337)%
-  --(9.977,5.332)--(9.977,5.267)--(10.015,5.262)--(10.015,5.246)--(10.015,5.236)--(10.015,5.235)%
-  --(10.015,5.217)--(10.052,5.209)--(10.052,5.188)--(10.052,5.178)--(10.052,5.157)--(10.052,5.156)%
-  --(10.089,5.145)--(10.089,5.127)--(10.089,5.123)--(10.089,5.121)--(10.089,5.106)--(10.089,5.084)%
-  --(10.089,5.071)--(10.089,5.066)--(10.126,5.059)--(10.126,5.056)--(10.126,5.054)--(10.126,5.045)%
-  --(10.126,5.034)--(10.163,5.033)--(10.163,5.028)--(10.163,5.025)--(10.163,5.022)--(10.201,5.018)%
-  --(10.201,5.008)--(10.201,4.996)--(10.201,4.992)--(10.201,4.990)--(10.201,4.978)--(10.201,4.969)%
-  --(10.238,4.966)--(10.238,4.964)--(10.238,4.962)--(10.238,4.953)--(10.275,4.947)--(10.275,4.942)%
-  --(10.312,4.941)--(10.312,4.939)--(10.312,4.936)--(10.312,4.935)--(10.349,4.932)--(10.349,4.928)%
-  --(10.387,4.923)--(10.387,4.915)--(10.387,4.906)--(10.387,4.899)--(10.461,4.896)--(10.461,4.890)%
-  --(10.461,4.885)--(10.461,4.882)--(10.498,4.881)--(10.498,4.874)--(10.684,4.873)--(10.722,4.872)%
-  --(10.759,4.871)--(10.759,4.870)--(10.759,4.864)--(10.759,4.857)--(10.759,4.856)--(10.796,4.856)%
-  --(10.833,4.855)--(10.833,4.853)--(10.870,4.851)--(10.870,4.847)--(10.908,4.841)--(10.945,4.840)%
-  --(11.019,4.839)--(11.019,4.838)--(11.056,4.827)--(11.056,4.826)--(11.094,4.824)--(11.131,4.818)%
-  --(11.131,4.813)--(11.168,4.812)--(11.168,4.811)--(11.205,4.799)--(11.242,4.797)--(11.242,4.796)%
-  --(11.428,4.791)--(11.503,4.791)--(11.503,4.790)--(11.540,4.789)--(11.540,4.788)--(11.577,4.787)%
-  --(11.577,4.784)--(11.615,4.781)--(11.615,4.777)--(11.652,4.776)--(11.652,4.775)--(11.689,4.774)%
-  --(11.726,4.774)--(11.763,4.773)--(11.763,4.771)--(11.801,4.770)--(11.875,4.769)--(11.949,4.768)%
-  --(12.024,4.765)--(12.024,4.761)--(12.284,4.760)--(12.433,4.758)--(12.470,4.756)--(12.545,4.753)%
-  --(12.768,4.753)--(12.805,4.752)--(12.805,4.751)--(12.842,4.742)--(12.880,4.742)--(12.954,4.742)%
-  --(12.954,4.740)--(12.991,4.739)--(12.991,4.738)--(12.991,4.737)--(13.066,4.735)--(13.103,4.733)%
-  --(13.140,4.732)--(13.214,4.731)--(13.214,4.729)--(13.252,4.728)--(13.252,4.725)--(13.326,4.721)%
-  --(13.401,4.719)--(13.438,4.718)--(13.438,4.713)--(13.475,4.709)--(13.512,4.708)--(13.587,4.706)%
-  --(13.624,4.705)--(13.661,10.086)--(13.661,10.075)--(13.698,10.068)--(13.773,10.058)--(13.773,10.054)%
-  --(13.810,10.048)--(14.070,10.045)--(15.187,10.039);
+\draw[gp path] (2.424,4.595)--(2.424,4.544)--(2.424,4.501)--(2.424,4.454)--(2.424,4.379)%
+  --(2.424,4.364)--(2.424,4.348)--(2.424,4.319)--(2.424,4.281)--(2.424,4.279)--(2.424,4.243)%
+  --(2.424,4.140)--(2.424,4.129)--(2.424,4.124)--(2.424,4.101)--(2.424,4.085)--(2.424,4.054)%
+  --(2.424,4.039)--(2.424,3.951)--(2.467,3.947)--(2.467,3.928)--(2.467,3.926)--(2.467,3.913)%
+  --(2.467,3.891)--(2.467,3.829)--(2.467,3.741)--(2.467,3.698)--(2.467,3.690)--(2.467,3.678)%
+  --(2.467,3.675)--(2.467,3.661)--(2.467,3.648)--(2.467,3.621)--(2.467,3.601)--(2.467,3.594)%
+  --(2.467,3.585)--(2.467,3.575)--(2.467,3.572)--(2.467,3.566)--(2.467,3.553)--(2.467,3.551)%
+  --(2.467,3.545)--(2.467,3.538)--(2.467,3.532)--(2.467,3.527)--(2.467,3.505)--(2.467,3.503)%
+  --(2.467,3.495)--(2.467,3.479)--(2.467,3.475)--(2.467,3.467)--(2.467,3.458)--(2.467,3.453)%
+  --(2.467,3.446)--(2.511,3.442)--(2.511,3.440)--(2.511,3.425)--(2.511,3.419)--(2.511,3.413)%
+  --(2.511,3.408)--(2.511,3.399)--(2.511,3.378)--(2.511,3.365)--(2.511,3.360)--(2.511,3.355)%
+  --(2.511,3.354)--(2.511,3.347)--(2.511,3.344)--(2.511,3.339)--(2.554,3.299)--(2.554,3.296)%
+  --(2.554,3.287)--(2.554,3.283)--(2.554,3.282)--(2.554,3.278)--(2.554,3.276)--(2.554,3.272)%
+  --(2.554,3.270)--(2.554,3.269)--(2.554,3.268)--(2.554,3.267)--(2.554,3.266)--(2.554,3.261)%
+  --(2.554,3.254)--(2.598,3.252)--(2.598,3.247)--(2.598,3.245)--(2.598,3.244)--(2.598,3.242)%
+  --(2.598,3.230)--(2.598,3.225)--(2.598,3.222)--(2.598,3.220)--(2.598,3.218)--(2.598,3.214)%
+  --(2.598,3.213)--(2.598,3.208)--(2.598,3.205)--(2.641,3.202)--(2.641,3.195)--(2.641,3.194)%
+  --(2.641,3.192)--(2.641,3.189)--(2.641,3.186)--(2.641,3.185)--(2.641,3.184)--(2.641,3.177)%
+  --(2.641,3.175)--(2.641,3.173)--(2.641,3.172)--(2.641,3.169)--(2.641,3.165)--(2.641,3.163)%
+  --(2.641,3.161)--(2.641,3.159)--(2.641,3.157)--(2.684,3.151)--(2.684,3.148)--(2.684,3.147)%
+  --(2.684,3.144)--(2.684,3.141)--(2.684,3.138)--(2.728,3.136)--(2.728,3.135)--(2.728,3.133)%
+  --(2.728,3.132)--(2.728,3.129)--(2.728,3.127)--(2.728,3.126)--(2.728,3.124)--(2.728,3.122)%
+  --(2.728,3.120)--(2.771,3.119)--(2.771,3.116)--(2.771,3.115)--(2.771,3.113)--(2.771,3.110)%
+  --(2.771,3.109)--(2.771,3.108)--(2.771,3.102)--(2.771,3.096)--(2.771,3.092)--(2.815,3.092)%
+  --(2.815,3.091)--(2.815,3.088)--(2.815,3.086)--(2.815,3.084)--(2.858,3.081)--(2.858,3.079)%
+  --(2.902,3.079)--(2.902,3.078)--(2.902,3.077)--(2.902,3.074)--(2.902,3.071)--(2.902,3.069)%
+  --(2.902,3.063)--(2.945,3.062)--(2.945,3.060)--(2.945,3.059)--(2.988,3.056)--(2.988,3.053)%
+  --(2.988,3.050)--(2.988,3.048)--(2.988,3.044)--(2.988,3.041)--(3.032,3.039)--(3.032,3.038)%
+  --(3.032,3.036)--(3.032,3.035)--(3.075,3.032)--(3.119,3.031)--(3.119,3.030)--(3.162,3.030)%
+  --(3.162,3.027)--(3.162,3.026)--(3.205,3.026)--(3.205,3.024)--(3.205,3.023)--(3.292,3.023)%
+  --(3.292,3.021)--(3.292,3.020)--(3.336,3.019)--(3.379,3.016)--(3.379,3.015)--(3.379,3.012)%
+  --(3.422,3.010)--(3.422,3.009)--(3.466,3.005)--(3.466,3.004)--(3.509,3.003)--(3.509,3.002)%
+  --(3.553,3.002)--(3.596,3.001)--(3.596,2.999)--(3.596,2.998)--(3.596,2.996)--(3.683,2.993)%
+  --(3.813,2.992)--(3.813,2.991)--(3.900,2.989)--(3.987,2.988)--(4.030,2.988)--(4.030,2.987)%
+  --(4.117,2.986)--(4.160,2.985)--(4.160,2.982)--(4.291,2.982)--(4.421,2.981)--(4.421,2.979)%
+  --(4.464,2.973)--(4.464,2.971)--(4.464,2.970)--(4.508,2.970)--(4.508,2.969)--(4.595,2.969)%
+  --(4.725,2.967)--(4.768,2.967)--(4.812,2.966)--(4.855,2.964)--(4.898,2.963)--(4.942,2.963)%
+  --(4.942,2.961)--(4.942,2.958)--(4.985,2.958)--(4.985,2.957)--(5.029,2.957)--(5.029,2.956)%
+  --(5.115,2.956)--(5.159,2.955)--(5.246,2.954)--(5.246,2.952)--(5.289,2.951)--(5.289,2.949)%
+  --(5.332,2.948)--(5.376,2.947)--(5.376,2.946)--(5.376,2.944)--(5.419,2.944)--(5.550,2.941)%
+  --(5.550,2.940)--(5.593,2.939)--(5.593,2.938)--(5.636,2.938)--(5.723,2.938)--(5.767,2.938)%
+  --(5.767,2.937)--(5.810,2.937)--(5.810,2.936)--(5.853,2.935)--(5.940,2.935)--(5.940,2.933)%
+  --(6.027,2.931)--(6.070,2.931)--(6.157,2.930)--(6.201,2.930)--(6.287,2.929)--(6.374,2.927)%
+  --(6.418,2.927)--(6.418,2.925)--(6.418,2.924)--(6.461,2.923)--(6.461,2.920)--(6.505,2.919)%
+  --(6.548,2.917)--(6.635,2.915)--(6.678,2.915)--(6.678,6.755)--(6.678,6.733)--(6.678,6.669)%
+  --(6.678,6.547)--(6.678,6.478)--(6.678,6.414)--(6.678,6.389)--(6.678,6.333)--(6.722,6.322)%
+  --(6.722,6.291)--(6.722,6.225)--(6.722,6.184)--(6.722,6.159)--(6.722,6.139)--(6.722,6.124)%
+  --(6.722,6.114)--(6.722,6.101)--(6.722,6.072)--(6.722,6.068)--(6.722,6.018)--(6.722,5.999)%
+  --(6.722,5.980)--(6.722,5.977)--(6.722,5.949)--(6.722,5.925)--(6.722,5.921)--(6.722,5.903)%
+  --(6.722,5.896)--(6.722,5.891)--(6.722,5.876)--(6.722,5.848)--(6.722,5.844)--(6.722,5.843)%
+  --(6.765,5.834)--(6.765,5.822)--(6.765,5.816)--(6.765,5.789)--(6.765,5.787)--(6.765,5.781)%
+  --(6.765,5.775)--(6.765,5.768)--(6.765,5.767)--(6.765,5.761)--(6.765,5.760)--(6.765,5.759)%
+  --(6.765,5.742)--(6.765,5.724)--(6.808,5.703)--(6.808,5.699)--(6.808,5.692)--(6.808,5.687)%
+  --(6.808,5.674)--(6.808,5.670)--(6.808,5.666)--(6.808,5.664)--(6.852,5.661)--(6.852,5.657)%
+  --(6.852,5.655)--(6.852,5.654)--(6.852,5.640)--(6.852,5.636)--(6.895,5.632)--(6.895,5.631)%
+  --(6.895,5.630)--(6.895,5.627)--(6.895,5.616)--(6.895,5.609)--(6.895,5.606)--(6.895,5.605)%
+  --(6.895,5.604)--(6.939,5.602)--(6.939,5.600)--(6.939,5.599)--(6.939,5.595)--(6.939,5.583)%
+  --(6.982,5.582)--(6.982,5.576)--(6.982,5.574)--(6.982,5.571)--(6.982,5.569)--(6.982,5.562)%
+  --(6.982,5.553)--(7.025,5.550)--(7.025,5.549)--(7.025,5.543)--(7.069,5.543)--(7.069,5.542)%
+  --(7.112,5.538)--(7.112,5.537)--(7.156,5.536)--(7.156,5.533)--(7.156,5.528)--(7.199,5.520)%
+  --(7.199,5.518)--(7.243,5.515)--(7.243,5.513)--(7.243,5.512)--(7.286,5.511)--(7.286,5.510)%
+  --(7.329,5.506)--(7.329,5.503)--(7.373,5.503)--(7.373,5.498)--(7.373,5.493)--(7.373,5.490)%
+  --(7.416,5.490)--(7.416,5.487)--(7.460,5.484)--(7.460,5.481)--(7.460,5.478)--(7.460,5.477)%
+  --(7.503,5.475)--(7.546,5.473)--(7.590,5.468)--(7.633,5.466)--(7.633,5.461)--(7.677,5.454)%
+  --(7.677,5.453)--(7.720,5.452)--(7.720,5.451)--(7.720,5.447)--(7.763,5.445)--(7.763,5.436)%
+  --(7.763,5.433)--(7.807,5.429)--(7.850,5.428)--(7.850,5.425)--(7.850,5.422)--(7.894,5.419)%
+  --(7.894,5.415)--(7.894,5.414)--(7.894,5.409)--(7.937,5.408)--(7.937,5.405)--(8.024,5.404)%
+  --(8.024,5.403)--(8.024,5.402)--(8.067,5.402)--(8.067,5.401)--(8.067,5.399)--(8.067,5.395)%
+  --(8.067,5.393)--(8.067,5.391)--(8.111,5.390)--(8.111,5.388)--(8.111,5.385)--(8.154,5.384)%
+  --(8.154,5.383)--(8.198,5.379)--(8.241,5.373)--(8.284,5.373)--(8.328,5.370)--(8.328,5.369)%
+  --(8.328,5.366)--(8.371,5.363)--(8.371,5.359)--(8.415,5.357)--(8.458,5.356)--(8.458,5.355)%
+  --(8.501,5.354)--(8.545,5.351)--(8.588,5.350)--(8.632,5.349)--(8.632,5.347)--(8.675,5.346)%
+  --(8.675,5.344)--(8.762,5.343)--(8.762,5.341)--(8.936,5.340)--(9.109,5.339)--(9.109,5.337)%
+  --(9.109,5.334)--(9.153,5.332)--(9.153,5.330)--(9.153,5.326)--(9.196,5.325)--(9.239,5.323)%
+  --(9.326,5.323)--(9.326,5.322)--(9.370,5.321)--(9.370,5.319)--(9.543,5.318)--(9.587,5.318)%
+  --(9.587,5.313)--(9.673,5.312)--(9.673,5.311)--(9.717,5.311)--(9.847,5.311)--(9.891,5.309)%
+  --(9.977,5.304)--(10.021,5.302)--(10.151,5.302)--(10.194,5.299)--(10.411,5.297)--(10.455,5.296)%
+  --(10.542,5.295)--(10.846,5.294)--(10.976,5.293)--(10.976,5.291)--(11.019,10.840)--(11.063,10.812)%
+  --(11.106,10.809)--(11.193,10.775)--(11.323,10.747)--(12.104,10.741)--(12.712,10.738)--(13.059,10.726)%
+  --(13.580,10.725)--(13.624,10.717);
 \gpcolor{color=gp lt color border}
 \gpsetlinewidth{1.00}
 \draw[gp path] (2.424,11.075)--(2.424,1.845)--(15.447,1.845)--(15.447,11.075)--cycle;
