--- a/papers/actor-based-large-neighborhood-search/refs.bib
+++ b/papers/actor-based-large-neighborhood-search/refs.bib
@@ -51,10 +51,24 @@
 	        2024 - Metaheuristics for bilevel optimization A comprehensive
 	        review.pdf:application/pdf},
 }
+@book{herlihy2020art,
+	title = {The art of multiprocessor programming},
+	author = {Herlihy, Maurice and Shavit, Nir and Luchangco, Victor and Spear,
+	          Michael},
+	year = {2020},
+	publisher = {Newnes},
+}
 @misc{total-energies,
-	author = {Total Energies},
+	author = {{Total Energies}},
 	howpublished = { \url{https://totalenergies.com} },
 	year = {2024},
+}
+
+
+@online{noauthor_rust_nodate,
+	author = {{The Rust Programming Language}},
+	title = {The Rust Programming Language},
+	url = {https://www.rust-lang.org/},
 }
 
 @misc{scipo-code-ordinator_api,
@@ -68,6 +82,7 @@
 @book{richards_fundamentals_2020,
 	title = {Fundamentals of Software Architecture: An Engineering Approach},
 	isbn = {978-1-4920-4342-3},
+	year = {2020},
 	shorttitle = {Fundamentals of Software Architecture},
 	abstract = {Salary surveys worldwide regularly place software architect in
 	            the top 10 best jobs, yet no real guide exists to help developers
