--- a/papers/actor-based-large-neighborhood-search/figures/strategic_objective_value_exclusion_plot.tex
+++ b/papers/actor-based-large-neighborhood-search/figures/strategic_objective_value_exclusion_plot.tex
@@ -1,169 +1,129 @@
 \tikzpicture[gnuplot]
 %% generated with GNUPLOT 6.0p1 (Lua 5.2; terminal rev. Jun 2020, script rev. 118)
-%% tir 17 dec 2024 22:32:59 CET
+%% fre 03 jan 2025 13:16:42 CET
 \path (0.000,0.000) rectangle (16.000,12.000);
 \gpcolor{rgb color={0.753,0.753,0.753}}
 \gpsetlinetype{gp lt border}
 \gpsetdashtype{gp dt solid}
 \gpsetlinewidth{2.00}
-\draw[gp path] (2.424,1.845)--(15.447,1.845);
+\draw[gp path] (2.240,1.845)--(15.447,1.845);
 \gpcolor{color=gp lt color border}
 \gpsetlinewidth{1.00}
-\draw[gp path] (2.424,1.845)--(2.604,1.845);
+\draw[gp path] (2.240,1.845)--(2.420,1.845);
 \draw[gp path] (15.447,1.845)--(15.267,1.845);
-\node[gp node right] at (2.240,1.845) {$1.91\times10^{11}$};
+\node[gp node right] at (2.056,1.845) {$9.2\times10^{10}$};
 \gpcolor{rgb color={0.753,0.753,0.753}}
 \gpsetlinewidth{2.00}
-\draw[gp path] (2.424,2.684)--(15.447,2.684);
+\draw[gp path] (2.240,3.164)--(15.447,3.164);
 \gpcolor{color=gp lt color border}
 \gpsetlinewidth{1.00}
-\draw[gp path] (2.424,2.684)--(2.604,2.684);
-\draw[gp path] (15.447,2.684)--(15.267,2.684);
-\node[gp node right] at (2.240,2.684) {$1.92\times10^{11}$};
+\draw[gp path] (2.240,3.164)--(2.420,3.164);
+\draw[gp path] (15.447,3.164)--(15.267,3.164);
+\node[gp node right] at (2.056,3.164) {$9.3\times10^{10}$};
 \gpcolor{rgb color={0.753,0.753,0.753}}
 \gpsetlinewidth{2.00}
-\draw[gp path] (2.424,3.523)--(15.447,3.523);
+\draw[gp path] (2.240,4.482)--(15.447,4.482);
 \gpcolor{color=gp lt color border}
 \gpsetlinewidth{1.00}
-\draw[gp path] (2.424,3.523)--(2.604,3.523);
-\draw[gp path] (15.447,3.523)--(15.267,3.523);
-\node[gp node right] at (2.240,3.523) {$1.93\times10^{11}$};
+\draw[gp path] (2.240,4.482)--(2.420,4.482);
+\draw[gp path] (15.447,4.482)--(15.267,4.482);
+\node[gp node right] at (2.056,4.482) {$9.4\times10^{10}$};
 \gpcolor{rgb color={0.753,0.753,0.753}}
 \gpsetlinewidth{2.00}
-\draw[gp path] (2.424,4.362)--(15.447,4.362);
+\draw[gp path] (2.240,5.801)--(15.447,5.801);
 \gpcolor{color=gp lt color border}
 \gpsetlinewidth{1.00}
-\draw[gp path] (2.424,4.362)--(2.604,4.362);
-\draw[gp path] (15.447,4.362)--(15.267,4.362);
-\node[gp node right] at (2.240,4.362) {$1.94\times10^{11}$};
+\draw[gp path] (2.240,5.801)--(2.420,5.801);
+\draw[gp path] (15.447,5.801)--(15.267,5.801);
+\node[gp node right] at (2.056,5.801) {$9.5\times10^{10}$};
 \gpcolor{rgb color={0.753,0.753,0.753}}
 \gpsetlinewidth{2.00}
-\draw[gp path] (2.424,5.201)--(15.447,5.201);
+\draw[gp path] (2.240,7.119)--(15.447,7.119);
 \gpcolor{color=gp lt color border}
 \gpsetlinewidth{1.00}
-\draw[gp path] (2.424,5.201)--(2.604,5.201);
-\draw[gp path] (15.447,5.201)--(15.267,5.201);
-\node[gp node right] at (2.240,5.201) {$1.95\times10^{11}$};
+\draw[gp path] (2.240,7.119)--(2.420,7.119);
+\draw[gp path] (15.447,7.119)--(15.267,7.119);
+\node[gp node right] at (2.056,7.119) {$9.6\times10^{10}$};
 \gpcolor{rgb color={0.753,0.753,0.753}}
 \gpsetlinewidth{2.00}
-\draw[gp path] (2.424,6.040)--(15.447,6.040);
+\draw[gp path] (2.240,8.438)--(15.447,8.438);
 \gpcolor{color=gp lt color border}
 \gpsetlinewidth{1.00}
-\draw[gp path] (2.424,6.040)--(2.604,6.040);
-\draw[gp path] (15.447,6.040)--(15.267,6.040);
-\node[gp node right] at (2.240,6.040) {$1.96\times10^{11}$};
+\draw[gp path] (2.240,8.438)--(2.420,8.438);
+\draw[gp path] (15.447,8.438)--(15.267,8.438);
+\node[gp node right] at (2.056,8.438) {$9.7\times10^{10}$};
 \gpcolor{rgb color={0.753,0.753,0.753}}
 \gpsetlinewidth{2.00}
-\draw[gp path] (2.424,6.880)--(15.447,6.880);
+\draw[gp path] (2.240,9.756)--(15.447,9.756);
 \gpcolor{color=gp lt color border}
 \gpsetlinewidth{1.00}
-\draw[gp path] (2.424,6.880)--(2.604,6.880);
-\draw[gp path] (15.447,6.880)--(15.267,6.880);
-\node[gp node right] at (2.240,6.880) {$1.97\times10^{11}$};
+\draw[gp path] (2.240,9.756)--(2.420,9.756);
+\draw[gp path] (15.447,9.756)--(15.267,9.756);
+\node[gp node right] at (2.056,9.756) {$9.8\times10^{10}$};
 \gpcolor{rgb color={0.753,0.753,0.753}}
 \gpsetlinewidth{2.00}
-\draw[gp path] (2.424,7.719)--(15.447,7.719);
+\draw[gp path] (2.240,11.075)--(15.447,11.075);
 \gpcolor{color=gp lt color border}
 \gpsetlinewidth{1.00}
-\draw[gp path] (2.424,7.719)--(2.604,7.719);
-\draw[gp path] (15.447,7.719)--(15.267,7.719);
-\node[gp node right] at (2.240,7.719) {$1.98\times10^{11}$};
-\gpcolor{rgb color={0.753,0.753,0.753}}
-\gpsetlinewidth{2.00}
-\draw[gp path] (2.424,8.558)--(15.447,8.558);
-\gpcolor{color=gp lt color border}
-\gpsetlinewidth{1.00}
-\draw[gp path] (2.424,8.558)--(2.604,8.558);
-\draw[gp path] (15.447,8.558)--(15.267,8.558);
-\node[gp node right] at (2.240,8.558) {$1.99\times10^{11}$};
-\gpcolor{rgb color={0.753,0.753,0.753}}
-\gpsetlinewidth{2.00}
-\draw[gp path] (2.424,9.397)--(15.447,9.397);
-\gpcolor{color=gp lt color border}
-\gpsetlinewidth{1.00}
-\draw[gp path] (2.424,9.397)--(2.604,9.397);
-\draw[gp path] (15.447,9.397)--(15.267,9.397);
-\node[gp node right] at (2.240,9.397) {$2\times10^{11}$};
-\gpcolor{rgb color={0.753,0.753,0.753}}
-\gpsetlinewidth{2.00}
-\draw[gp path] (2.424,10.236)--(15.447,10.236);
-\gpcolor{color=gp lt color border}
-\gpsetlinewidth{1.00}
-\draw[gp path] (2.424,10.236)--(2.604,10.236);
-\draw[gp path] (15.447,10.236)--(15.267,10.236);
-\node[gp node right] at (2.240,10.236) {$2.01\times10^{11}$};
-\gpcolor{rgb color={0.753,0.753,0.753}}
-\gpsetlinewidth{2.00}
-\draw[gp path] (2.424,11.075)--(15.447,11.075);
-\gpcolor{color=gp lt color border}
-\gpsetlinewidth{1.00}
-\draw[gp path] (2.424,11.075)--(2.604,11.075);
+\draw[gp path] (2.240,11.075)--(2.420,11.075);
 \draw[gp path] (15.447,11.075)--(15.267,11.075);
-\node[gp node right] at (2.240,11.075) {$2.02\times10^{11}$};
+\node[gp node right] at (2.056,11.075) {$9.9\times10^{10}$};
 \gpcolor{rgb color={0.753,0.753,0.753}}
 \gpsetlinewidth{2.00}
-\draw[gp path] (2.424,1.845)--(2.424,11.075);
+\draw[gp path] (2.240,1.845)--(2.240,11.075);
 \gpcolor{color=gp lt color border}
 \gpsetlinewidth{1.00}
-\draw[gp path] (2.424,1.845)--(2.424,2.025);
-\draw[gp path] (2.424,11.075)--(2.424,10.895);
-\node[gp node left,rotate=270] at (2.424,1.661) {$0$};
+\draw[gp path] (2.240,1.845)--(2.240,2.025);
+\draw[gp path] (2.240,11.075)--(2.240,10.895);
+\node[gp node left,rotate=270] at (2.240,1.661) {$0$};
 \gpcolor{rgb color={0.753,0.753,0.753}}
 \gpsetlinewidth{2.00}
-\draw[gp path] (4.052,1.845)--(4.052,11.075);
+\draw[gp path] (4.127,1.845)--(4.127,11.075);
 \gpcolor{color=gp lt color border}
 \gpsetlinewidth{1.00}
-\draw[gp path] (4.052,1.845)--(4.052,2.025);
-\draw[gp path] (4.052,11.075)--(4.052,10.895);
-\node[gp node left,rotate=270] at (4.052,1.661) {$50$};
+\draw[gp path] (4.127,1.845)--(4.127,2.025);
+\draw[gp path] (4.127,11.075)--(4.127,10.895);
+\node[gp node left,rotate=270] at (4.127,1.661) {$50$};
 \gpcolor{rgb color={0.753,0.753,0.753}}
 \gpsetlinewidth{2.00}
-\draw[gp path] (5.680,1.845)--(5.680,11.075);
+\draw[gp path] (6.013,1.845)--(6.013,11.075);
 \gpcolor{color=gp lt color border}
 \gpsetlinewidth{1.00}
-\draw[gp path] (5.680,1.845)--(5.680,2.025);
-\draw[gp path] (5.680,11.075)--(5.680,10.895);
-\node[gp node left,rotate=270] at (5.680,1.661) {$100$};
+\draw[gp path] (6.013,1.845)--(6.013,2.025);
+\draw[gp path] (6.013,11.075)--(6.013,10.895);
+\node[gp node left,rotate=270] at (6.013,1.661) {$100$};
 \gpcolor{rgb color={0.753,0.753,0.753}}
 \gpsetlinewidth{2.00}
-\draw[gp path] (7.308,1.845)--(7.308,11.075);
+\draw[gp path] (7.900,1.845)--(7.900,11.075);
 \gpcolor{color=gp lt color border}
 \gpsetlinewidth{1.00}
-\draw[gp path] (7.308,1.845)--(7.308,2.025);
-\draw[gp path] (7.308,11.075)--(7.308,10.895);
-\node[gp node left,rotate=270] at (7.308,1.661) {$150$};
+\draw[gp path] (7.900,1.845)--(7.900,2.025);
+\draw[gp path] (7.900,11.075)--(7.900,10.895);
+\node[gp node left,rotate=270] at (7.900,1.661) {$150$};
 \gpcolor{rgb color={0.753,0.753,0.753}}
 \gpsetlinewidth{2.00}
-\draw[gp path] (8.936,1.845)--(8.936,11.075);
+\draw[gp path] (9.787,1.845)--(9.787,11.075);
 \gpcolor{color=gp lt color border}
 \gpsetlinewidth{1.00}
-\draw[gp path] (8.936,1.845)--(8.936,2.025);
-\draw[gp path] (8.936,11.075)--(8.936,10.895);
-\node[gp node left,rotate=270] at (8.936,1.661) {$200$};
+\draw[gp path] (9.787,1.845)--(9.787,2.025);
+\draw[gp path] (9.787,11.075)--(9.787,10.895);
+\node[gp node left,rotate=270] at (9.787,1.661) {$200$};
 \gpcolor{rgb color={0.753,0.753,0.753}}
 \gpsetlinewidth{2.00}
-\draw[gp path] (10.563,1.845)--(10.563,11.075);
+\draw[gp path] (11.674,1.845)--(11.674,11.075);
 \gpcolor{color=gp lt color border}
 \gpsetlinewidth{1.00}
-\draw[gp path] (10.563,1.845)--(10.563,2.025);
-\draw[gp path] (10.563,11.075)--(10.563,10.895);
-\node[gp node left,rotate=270] at (10.563,1.661) {$250$};
+\draw[gp path] (11.674,1.845)--(11.674,2.025);
+\draw[gp path] (11.674,11.075)--(11.674,10.895);
+\node[gp node left,rotate=270] at (11.674,1.661) {$250$};
 \gpcolor{rgb color={0.753,0.753,0.753}}
 \gpsetlinewidth{2.00}
-\draw[gp path] (12.191,1.845)--(12.191,11.075);
+\draw[gp path] (13.560,1.845)--(13.560,11.075);
 \gpcolor{color=gp lt color border}
 \gpsetlinewidth{1.00}
-\draw[gp path] (12.191,1.845)--(12.191,2.025);
-\draw[gp path] (12.191,11.075)--(12.191,10.895);
-\node[gp node left,rotate=270] at (12.191,1.661) {$300$};
-\gpcolor{rgb color={0.753,0.753,0.753}}
-\gpsetlinewidth{2.00}
-\draw[gp path] (13.819,1.845)--(13.819,11.075);
-\gpcolor{color=gp lt color border}
-\gpsetlinewidth{1.00}
-\draw[gp path] (13.819,1.845)--(13.819,2.025);
-\draw[gp path] (13.819,11.075)--(13.819,10.895);
-\node[gp node left,rotate=270] at (13.819,1.661) {$350$};
+\draw[gp path] (13.560,1.845)--(13.560,2.025);
+\draw[gp path] (13.560,11.075)--(13.560,10.895);
+\node[gp node left,rotate=270] at (13.560,1.661) {$300$};
 \gpcolor{rgb color={0.753,0.753,0.753}}
 \gpsetlinewidth{2.00}
 \draw[gp path] (15.447,1.845)--(15.447,11.075);
@@ -171,137 +131,101 @@
 \gpsetlinewidth{1.00}
 \draw[gp path] (15.447,1.845)--(15.447,2.025);
 \draw[gp path] (15.447,11.075)--(15.447,10.895);
-\node[gp node left,rotate=270] at (15.447,1.661) {$400$};
-\draw[gp path] (2.424,11.075)--(2.424,1.845)--(15.447,1.845)--(15.447,11.075)--cycle;
+\node[gp node left,rotate=270] at (15.447,1.661) {$350$};
+\draw[gp path] (2.240,11.075)--(2.240,1.845)--(15.447,1.845)--(15.447,11.075)--cycle;
 \gpcolor{rgb color={0.000,0.000,0.000}}
 \gpsetlinewidth{2.00}
-\draw[gp path] (2.424,10.230)--(2.424,10.051)--(2.424,10.030)--(2.424,9.772)--(2.424,9.641)%
-  --(2.424,9.569)--(2.424,9.516)--(2.424,9.462)--(2.457,9.449)--(2.457,9.367)--(2.457,9.323)%
-  --(2.457,9.258)--(2.457,9.201)--(2.457,9.169)--(2.457,9.082)--(2.457,9.027)--(2.457,8.991)%
-  --(2.457,8.949)--(2.457,8.881)--(2.489,8.786)--(2.489,8.767)--(2.489,8.711)--(2.489,8.706)%
-  --(2.489,8.692)--(2.489,8.663)--(2.489,8.564)--(2.489,8.563)--(2.489,8.500)--(2.489,8.482)%
-  --(2.489,8.449)--(2.489,8.421)--(2.522,8.412)--(2.522,8.371)--(2.522,8.335)--(2.522,8.317)%
-  --(2.522,8.282)--(2.522,8.256)--(2.522,8.132)--(2.522,8.034)--(2.522,8.009)--(2.522,7.961)%
-  --(2.522,7.909)--(2.522,7.895)--(2.554,7.881)--(2.554,7.878)--(2.554,7.858)--(2.554,7.853)%
-  --(2.554,7.807)--(2.554,7.766)--(2.554,7.743)--(2.554,7.735)--(2.554,7.681)--(2.587,7.670)%
-  --(2.587,7.627)--(2.587,7.624)--(2.587,7.602)--(2.587,7.597)--(2.587,7.596)--(2.587,7.568)%
-  --(2.587,7.552)--(2.587,7.529)--(2.619,7.527)--(2.619,7.513)--(2.619,7.474)--(2.619,7.444)%
-  --(2.619,7.437)--(2.619,7.409)--(2.619,7.403)--(2.652,7.401)--(2.652,7.374)--(2.652,7.372)%
-  --(2.652,7.365)--(2.652,7.341)--(2.652,7.334)--(2.652,7.325)--(2.684,7.325)--(2.684,7.315)%
-  --(2.684,7.310)--(2.684,7.270)--(2.684,7.254)--(2.684,7.253)--(2.684,7.242)--(2.684,7.239)%
-  --(2.684,7.107)--(2.684,7.075)--(2.717,7.040)--(2.717,7.001)--(2.717,6.989)--(2.717,6.950)%
-  --(2.717,6.943)--(2.750,6.898)--(2.750,6.883)--(2.750,6.868)--(2.750,6.863)--(2.782,6.845)%
-  --(2.782,6.841)--(2.782,6.830)--(2.782,6.822)--(2.782,6.821)--(2.815,6.818)--(2.815,6.816)%
-  --(2.815,6.807)--(2.847,6.781)--(2.847,6.775)--(2.847,6.755)--(2.847,6.724)--(2.847,6.710)%
-  --(2.880,6.690)--(2.880,6.681)--(2.880,6.672)--(2.912,6.670)--(2.912,6.654)--(2.945,6.650)%
-  --(2.977,6.640)--(2.977,6.632)--(2.977,6.627)--(3.010,6.620)--(3.010,6.606)--(3.010,6.596)%
-  --(3.043,6.592)--(3.043,6.579)--(3.043,6.573)--(3.075,6.571)--(3.075,6.565)--(3.108,6.556)%
-  --(3.140,6.554)--(3.140,6.531)--(3.140,6.527)--(3.173,6.516)--(3.173,6.508)--(3.173,6.495)%
-  --(3.205,6.480)--(3.238,6.478)--(3.238,6.476)--(3.270,6.475)--(3.270,6.473)--(3.303,6.468)%
-  --(3.336,6.467)--(3.368,6.466)--(3.368,6.462)--(3.401,6.457)--(3.401,6.453)--(3.433,6.445)%
-  --(3.498,6.442)--(3.531,6.437)--(3.531,6.432)--(3.531,6.431)--(3.564,6.424)--(3.661,6.418)%
-  --(3.791,6.404)--(3.791,6.391)--(3.824,6.368)--(3.954,6.366)--(3.954,6.362)--(4.247,6.356)%
-  --(4.247,6.352)--(4.247,6.348)--(4.247,6.345)--(4.280,6.343)--(4.345,6.336)--(4.345,6.334)%
-  --(4.345,6.333)--(4.345,6.329)--(4.345,6.325)--(4.377,6.321)--(4.377,6.298)--(4.377,6.297)%
-  --(4.410,10.281)--(4.410,7.757)--(4.410,7.655)--(4.410,7.595)--(4.410,7.337)--(4.410,7.336)%
-  --(4.410,7.313)--(4.410,7.240)--(4.410,7.103)--(4.443,7.074)--(4.443,6.741)--(4.443,6.518)%
-  --(4.443,6.361)--(4.443,6.249)--(4.443,6.245)--(4.443,6.127)--(4.443,6.016)--(4.443,6.005)%
-  --(4.443,5.952)--(4.475,5.941)--(4.475,5.869)--(4.475,5.822)--(4.475,5.819)--(4.475,5.816)%
-  --(4.475,5.805)--(4.475,5.768)--(4.475,5.704)--(4.475,5.666)--(4.475,5.656)--(4.508,5.603)%
-  --(4.508,5.593)--(4.508,5.572)--(4.508,5.564)--(4.508,5.545)--(4.508,5.544)--(4.508,5.538)%
-  --(4.508,5.525)--(4.540,5.516)--(4.540,5.502)--(4.540,5.488)--(4.540,5.473)--(4.540,5.447)%
-  --(4.540,5.428)--(4.540,5.400)--(4.540,5.379)--(4.540,5.367)--(4.540,5.351)--(4.573,5.341)%
-  --(4.573,5.338)--(4.573,5.326)--(4.573,5.307)--(4.573,5.280)--(4.573,5.271)--(4.605,5.252)%
-  --(4.605,5.196)--(4.605,5.189)--(4.605,5.167)--(4.605,5.121)--(4.605,5.087)--(4.605,5.069)%
-  --(4.638,5.038)--(4.638,5.025)--(4.638,5.009)--(4.638,4.980)--(4.638,4.948)--(4.670,4.913)%
-  --(4.670,4.909)--(4.670,4.834)--(4.670,4.833)--(4.670,4.827)--(4.670,4.813)--(4.670,4.811)%
-  --(4.670,4.809)--(4.703,4.797)--(4.703,4.776)--(4.703,4.771)--(4.703,4.766)--(4.703,4.741)%
-  --(4.703,4.703)--(4.703,4.692)--(4.736,4.680)--(4.736,4.677)--(4.736,4.643)--(4.736,4.600)%
-  --(4.768,4.599)--(4.801,4.595)--(4.801,4.547)--(4.801,4.527)--(4.833,4.525)--(4.833,4.511)%
-  --(4.866,4.488)--(4.898,4.484)--(4.898,4.477)--(4.898,4.474)--(4.931,4.453)--(4.931,4.452)%
-  --(4.931,4.446)--(4.931,4.441)--(4.996,4.436)--(5.029,4.423)--(5.061,4.409)--(5.094,4.406)%
-  --(5.159,4.398)--(5.191,4.379)--(5.322,4.378)--(5.387,4.372)--(5.419,4.361)--(5.452,4.333)%
-  --(5.484,4.319)--(5.517,4.317)--(5.550,4.314)--(5.550,4.309)--(5.647,4.298)--(5.680,4.292)%
-  --(5.777,4.288)--(5.908,4.281)--(6.005,4.280)--(6.038,4.271)--(6.070,4.261)--(6.070,4.253)%
-  --(6.070,4.243)--(6.136,4.242)--(6.136,4.237)--(6.168,4.233)--(6.168,4.229)--(6.168,4.227)%
-  --(6.201,4.219)--(6.201,4.215)--(6.266,4.197)--(6.266,4.187)--(6.298,4.178)--(6.298,4.153)%
-  --(6.298,4.133)--(6.331,4.128)--(6.363,7.657)--(6.363,5.263)--(6.363,5.254)--(6.363,5.134)%
-  --(6.363,5.125)--(6.363,5.119)--(6.363,5.102)--(6.396,5.061)--(6.396,4.983)--(6.396,4.788)%
-  --(6.396,4.763)--(6.396,4.649)--(6.396,4.619)--(6.396,4.526)--(6.396,4.497)--(6.396,4.422)%
-  --(6.396,4.402)--(6.396,4.346)--(6.429,4.328)--(6.429,4.316)--(6.429,4.295)--(6.429,4.136)%
-  --(6.429,4.080)--(6.429,3.992)--(6.429,3.950)--(6.461,3.930)--(6.461,3.925)--(6.461,3.921)%
-  --(6.461,3.798)--(6.461,3.715)--(6.461,3.617)--(6.461,3.561)--(6.461,3.536)--(6.494,3.530)%
-  --(6.494,3.376)--(6.494,3.369)--(6.494,3.330)--(6.526,3.324)--(6.526,3.315)--(6.559,3.294)%
-  --(6.559,3.285)--(6.559,3.282)--(6.591,3.250)--(6.591,3.215)--(6.624,3.207)--(6.624,3.205)%
-  --(6.656,3.193)--(6.656,3.183)--(6.689,3.168)--(6.689,3.158)--(6.689,3.148)--(6.689,3.143)%
-  --(6.722,3.127)--(6.722,3.126)--(6.754,3.062)--(6.754,3.060)--(6.754,2.974)--(6.754,2.966)%
-  --(6.754,2.955)--(6.787,2.948)--(6.787,2.935)--(6.819,2.931)--(6.884,2.919)--(6.884,2.892)%
-  --(6.949,2.882)--(6.949,2.861)--(6.982,2.858)--(7.015,2.846)--(7.015,2.844)--(7.112,2.828)%
-  --(7.112,2.715)--(7.210,2.714)--(7.210,2.706)--(7.210,2.692)--(7.243,2.683)--(7.275,2.668)%
-  --(7.275,2.660)--(7.275,2.654)--(7.308,2.620)--(7.536,2.619)--(7.633,2.614)--(7.731,2.614)%
-  --(7.763,2.599)--(7.926,2.596)--(7.991,2.591)--(8.024,2.586)--(8.056,2.566)--(8.089,2.566)%
-  --(8.089,2.549)--(8.154,2.545)--(8.317,5.851)--(8.317,4.227)--(8.317,4.224)--(8.317,4.171)%
-  --(8.317,4.157)--(8.317,4.148)--(8.317,4.081)--(8.349,4.080)--(8.349,3.969)--(8.349,3.865)%
-  --(8.349,3.862)--(8.349,3.858)--(8.349,3.842)--(8.349,3.814)--(8.382,3.759)--(8.382,3.735)%
-  --(8.382,3.726)--(8.382,3.706)--(8.382,3.677)--(8.382,3.598)--(8.415,3.587)--(8.415,3.465)%
-  --(8.415,3.462)--(8.415,3.453)--(8.415,3.444)--(8.415,3.273)--(8.447,3.272)--(8.447,3.263)%
-  --(8.447,3.260)--(8.447,3.237)--(8.447,3.164)--(8.447,3.077)--(8.480,3.029)--(8.480,3.005)%
-  --(8.480,2.958)--(8.480,2.948)--(8.512,2.937)--(8.512,2.904)--(8.512,2.875)--(8.512,2.853)%
-  --(8.512,2.846)--(8.545,2.840)--(8.545,2.822)--(8.545,2.789)--(8.545,2.782)--(8.577,2.782)%
-  --(8.577,2.758)--(8.577,2.722)--(8.577,2.719)--(8.577,2.700)--(8.577,2.676)--(8.577,2.666)%
-  --(8.610,2.651)--(8.642,2.648)--(8.642,2.638)--(8.642,2.612)--(8.642,2.605)--(8.675,2.593)%
-  --(8.675,2.591)--(8.675,2.590)--(8.708,2.580)--(8.708,2.574)--(8.740,2.573)--(8.773,2.571)%
-  --(8.805,2.562)--(8.805,2.540)--(8.838,2.536)--(8.870,2.525)--(8.903,2.515)--(8.903,2.496)%
-  --(8.903,2.474)--(8.903,2.462)--(8.936,2.459)--(8.968,2.445)--(8.968,2.440)--(9.001,2.431)%
-  --(9.001,2.380)--(9.033,2.376)--(9.066,2.367)--(9.098,2.251)--(9.131,2.247)--(9.131,2.242)%
-  --(9.131,2.227)--(9.163,2.225)--(9.163,2.224)--(9.163,2.215)--(9.196,2.210)--(9.196,2.203)%
-  --(9.196,2.196)--(9.229,2.195)--(9.229,2.177)--(9.261,2.175)--(9.294,2.154)--(9.294,2.145)%
-  --(9.326,2.137)--(9.489,2.136)--(9.619,2.130)--(9.652,2.127)--(9.717,2.119)--(9.749,2.119)%
-  --(9.847,2.116)--(9.847,2.113)--(9.912,2.108)--(10.075,2.096)--(10.075,2.095)--(10.108,2.094)%
-  --(10.205,2.086)--(10.238,2.080)--(10.270,5.213)--(10.270,3.939)--(10.270,3.927)--(10.270,3.898)%
-  --(10.270,3.891)--(10.270,3.872)--(10.270,3.868)--(10.303,3.859)--(10.303,3.830)--(10.303,3.793)%
-  --(10.303,3.678)--(10.303,3.668)--(10.303,3.624)--(10.303,3.544)--(10.335,3.383)--(10.335,3.272)%
-  --(10.335,3.220)--(10.335,3.076)--(10.335,3.043)--(10.335,3.016)--(10.335,2.962)--(10.368,2.954)%
-  --(10.368,2.949)--(10.368,2.936)--(10.368,2.907)--(10.401,2.893)--(10.401,2.832)--(10.401,2.824)%
-  --(10.401,2.821)--(10.401,2.809)--(10.401,2.807)--(10.433,2.802)--(10.433,2.790)--(10.433,2.788)%
-  --(10.466,2.781)--(10.466,2.769)--(10.466,2.767)--(10.466,2.754)--(10.498,2.748)--(10.498,2.744)%
-  --(10.498,2.729)--(10.498,2.702)--(10.531,2.678)--(10.563,2.671)--(10.563,2.656)--(10.563,2.653)%
-  --(10.563,2.642)--(10.596,2.638)--(10.596,2.631)--(10.596,2.627)--(10.628,2.619)--(10.628,2.613)%
-  --(10.661,2.583)--(10.661,2.571)--(10.661,2.567)--(10.661,2.560)--(10.661,2.550)--(10.694,2.538)%
-  --(10.694,2.536)--(10.726,2.535)--(10.726,2.509)--(10.726,2.506)--(10.759,2.493)--(10.759,2.486)%
-  --(10.759,2.484)--(10.791,2.482)--(10.824,2.465)--(10.889,2.461)--(10.889,2.333)--(10.922,2.325)%
-  --(10.922,2.314)--(10.954,2.309)--(10.987,2.298)--(10.987,2.287)--(11.019,2.277)--(11.019,2.257)%
-  --(11.019,2.243)--(11.052,2.239)--(11.149,2.217)--(11.149,2.213)--(11.182,2.205)--(11.182,2.199)%
-  --(11.215,2.192)--(11.215,2.178)--(11.215,2.171)--(11.215,2.168)--(11.215,2.165)--(11.247,2.163)%
-  --(11.247,2.162)--(11.247,2.156)--(11.280,2.144)--(11.312,2.137)--(11.312,2.130)--(11.312,2.128)%
-  --(11.345,2.118)--(11.377,2.114)--(11.410,2.111)--(11.410,2.091)--(11.410,2.084)--(11.442,2.067)%
-  --(11.475,2.060)--(11.508,2.055)--(11.540,2.051)--(11.735,2.051)--(11.833,2.041)--(11.963,2.038)%
-  --(11.963,2.034)--(12.126,2.027)--(12.126,2.018)--(12.224,5.079)--(12.224,4.303)--(12.224,4.254)%
-  --(12.224,4.247)--(12.256,4.193)--(12.256,4.190)--(12.256,4.158)--(12.256,4.042)--(12.256,4.029)%
-  --(12.289,4.026)--(12.289,3.956)--(12.289,3.802)--(12.289,3.707)--(12.321,3.705)--(12.321,3.665)%
-  --(12.321,3.659)--(12.321,3.631)--(12.321,3.624)--(12.321,3.611)--(12.354,3.591)--(12.354,3.588)%
-  --(12.354,3.587)--(12.354,3.583)--(12.387,3.574)--(12.387,3.555)--(12.387,3.514)--(12.387,3.502)%
-  --(12.419,3.492)--(12.419,3.480)--(12.452,3.435)--(12.452,3.433)--(12.452,3.404)--(12.484,3.399)%
-  --(12.484,3.393)--(12.484,3.379)--(12.517,3.371)--(12.517,3.353)--(12.549,3.349)--(12.582,3.337)%
-  --(12.582,3.331)--(12.582,3.330)--(12.582,3.312)--(12.582,3.311)--(12.614,3.308)--(12.614,3.293)%
-  --(12.614,3.266)--(12.647,3.264)--(12.647,3.259)--(12.647,3.258)--(12.647,3.256)--(12.680,3.253)%
-  --(12.680,3.242)--(12.680,3.239)--(12.680,3.236)--(12.680,3.230)--(12.712,3.227)--(12.712,3.221)%
-  --(12.712,3.206)--(12.712,3.187)--(12.745,3.179)--(12.745,3.173)--(12.745,3.163)--(12.745,3.157)%
-  --(12.810,3.155)--(12.810,3.153)--(12.810,3.149)--(12.810,3.142)--(12.842,3.102)--(12.842,3.096)%
-  --(12.842,3.080)--(12.875,3.075)--(12.875,3.051)--(12.908,3.043)--(12.940,3.041)--(13.005,3.034)%
-  --(13.038,2.987)--(13.038,2.972)--(13.038,2.968)--(13.038,2.966)--(13.070,2.961)--(13.070,2.947)%
-  --(13.070,2.938)--(13.070,2.936)--(13.070,2.929)--(13.103,2.923)--(13.103,2.920)--(13.103,2.915)%
-  --(13.135,2.902)--(13.168,2.900)--(13.201,2.890)--(13.201,2.866)--(13.201,2.858)--(13.298,2.849)%
-  --(13.363,2.845)--(13.396,2.843)--(13.428,2.841)--(13.526,2.838)--(13.624,2.837)--(13.624,2.827)%
-  --(13.819,2.822)--(13.884,2.820)--(13.949,2.815)--(13.982,2.814)--(14.014,2.808)--(14.014,2.804)%
-  --(14.080,2.802)--(14.112,2.801)--(14.145,2.793);
+\draw[gp path] (2.240,2.260)--(2.240,2.258)--(2.278,2.258)--(2.353,2.244)--(2.391,2.240)%
+  --(2.429,2.233)--(2.504,2.221)--(2.504,2.202)--(2.542,2.197)--(2.580,2.196)--(2.693,2.176)%
+  --(2.768,2.171)--(2.806,2.169)--(2.844,2.168)--(2.919,2.162)--(3.070,2.156)--(3.070,2.149)%
+  --(3.108,2.147)--(3.259,2.141)--(3.372,2.133)--(3.636,2.132)--(3.825,2.131)--(3.976,2.130)%
+  --(4.051,8.628)--(4.051,4.905)--(4.051,4.886)--(4.051,4.884)--(4.051,4.872)--(4.051,4.848)%
+  --(4.051,4.729)--(4.051,4.711)--(4.051,4.661)--(4.051,4.623)--(4.051,4.620)--(4.051,4.603)%
+  --(4.051,4.548)--(4.089,4.513)--(4.089,4.480)--(4.089,4.471)--(4.089,4.468)--(4.089,4.450)%
+  --(4.089,4.435)--(4.127,4.409)--(4.127,4.408)--(4.127,4.397)--(4.127,4.392)--(4.127,4.381)%
+  --(4.127,4.368)--(4.164,4.351)--(4.164,4.345)--(4.164,4.330)--(4.164,4.312)--(4.164,4.301)%
+  --(4.164,4.291)--(4.202,4.289)--(4.202,4.276)--(4.202,4.271)--(4.202,4.265)--(4.240,4.264)%
+  --(4.240,4.240)--(4.240,4.236)--(4.278,4.230)--(4.278,4.226)--(4.278,4.222)--(4.315,4.203)%
+  --(4.315,4.194)--(4.315,4.177)--(4.391,4.166)--(4.391,4.143)--(4.429,4.132)--(4.429,4.126)%
+  --(4.429,4.125)--(4.466,4.124)--(4.504,4.102)--(4.542,4.094)--(4.542,4.061)--(4.655,4.051)%
+  --(4.655,4.042)--(4.730,4.030)--(4.844,4.030)--(4.881,4.023)--(4.881,4.011)--(4.919,4.006)%
+  --(4.957,4.006)--(4.995,4.000)--(5.032,3.988)--(5.146,3.979)--(5.221,3.978)--(5.259,3.971)%
+  --(5.334,3.962)--(5.372,3.953)--(5.410,3.943)--(5.410,3.939)--(5.447,3.931)--(5.447,3.930)%
+  --(5.485,3.926)--(5.636,3.912)--(5.636,3.904)--(5.712,3.898)--(5.712,3.895)--(5.749,3.879)%
+  --(5.825,3.876)--(5.862,3.856)--(5.900,3.855)--(5.900,3.854)--(6.127,3.854)--(6.164,3.843)%
+  --(6.278,3.838)--(6.315,9.332)--(6.315,5.812)--(6.315,5.744)--(6.315,5.623)--(6.315,5.571)%
+  --(6.353,5.494)--(6.353,5.484)--(6.353,5.466)--(6.353,5.434)--(6.391,5.421)--(6.391,5.420)%
+  --(6.391,5.402)--(6.391,5.387)--(6.429,5.364)--(6.429,5.335)--(6.429,5.309)--(6.429,5.295)%
+  --(6.429,5.277)--(6.466,5.264)--(6.466,5.262)--(6.466,5.251)--(6.504,5.230)--(6.504,5.180)%
+  --(6.542,5.172)--(6.542,5.155)--(6.579,5.118)--(6.579,5.109)--(6.579,5.092)--(6.579,5.084)%
+  --(6.617,5.061)--(6.617,5.057)--(6.617,5.050)--(6.617,5.034)--(6.655,5.012)--(6.655,4.992)%
+  --(6.693,4.988)--(6.693,4.985)--(6.693,4.960)--(6.693,4.951)--(6.730,4.940)--(6.730,4.925)%
+  --(6.730,4.908)--(6.768,4.905)--(6.768,4.884)--(6.768,4.876)--(6.768,4.866)--(6.806,4.854)%
+  --(6.806,4.848)--(6.806,4.832)--(6.844,4.819)--(6.881,4.817)--(6.919,4.817)--(6.957,4.812)%
+  --(6.957,4.804)--(6.995,4.798)--(7.032,4.792)--(7.070,4.775)--(7.070,4.752)--(7.296,4.744)%
+  --(7.296,4.740)--(7.334,4.734)--(7.372,4.718)--(7.410,4.707)--(7.447,4.704)--(7.523,4.693)%
+  --(7.561,4.686)--(7.561,4.652)--(7.598,4.633)--(7.636,4.623)--(7.636,4.621)--(7.636,4.618)%
+  --(7.636,4.616)--(7.636,4.605)--(7.636,4.600)--(7.674,4.595)--(7.674,4.592)--(7.674,4.588)%
+  --(7.711,4.584)--(7.749,4.582)--(7.749,4.578)--(7.787,4.576)--(7.787,4.572)--(7.825,4.569)%
+  --(7.976,4.568)--(8.013,4.563)--(8.051,4.560)--(8.051,4.545)--(8.089,4.542)--(8.089,4.525)%
+  --(8.127,4.513)--(8.202,4.505)--(8.315,4.489)--(8.391,4.482)--(8.391,4.467)--(8.391,4.466)%
+  --(8.466,4.461)--(8.579,9.827)--(8.579,6.317)--(8.579,6.079)--(8.579,6.077)--(8.579,6.027)%
+  --(8.617,5.945)--(8.617,5.942)--(8.617,5.923)--(8.617,5.900)--(8.655,5.894)--(8.655,5.881)%
+  --(8.655,5.852)--(8.655,5.833)--(8.655,5.766)--(8.693,5.764)--(8.693,5.755)--(8.693,5.737)%
+  --(8.693,5.671)--(8.693,5.649)--(8.730,5.623)--(8.730,5.610)--(8.730,5.609)--(8.768,5.606)%
+  --(8.768,5.601)--(8.768,5.591)--(8.806,5.577)--(8.806,5.553)--(8.806,5.545)--(8.806,5.519)%
+  --(8.806,5.511)--(8.806,5.509)--(8.844,5.500)--(8.919,5.499)--(8.957,5.483)--(8.957,5.450)%
+  --(8.994,5.446)--(8.994,5.442)--(8.994,5.439)--(8.994,5.435)--(9.032,5.428)--(9.032,5.419)%
+  --(9.032,5.418)--(9.070,5.405)--(9.108,5.392)--(9.108,5.385)--(9.145,5.373)--(9.183,5.369)%
+  --(9.183,5.364)--(9.221,5.352)--(9.296,5.351)--(9.296,5.348)--(9.334,5.345)--(9.334,5.344)%
+  --(9.334,5.343)--(9.334,5.336)--(9.372,5.329)--(9.485,5.321)--(9.523,5.307)--(9.560,5.306)%
+  --(9.598,5.302)--(9.598,5.298)--(9.598,5.293)--(9.636,5.276)--(9.825,5.273)--(9.825,5.272)%
+  --(9.825,5.265)--(9.862,5.256)--(9.862,5.251)--(9.862,5.248)--(9.862,5.239)--(9.862,5.237)%
+  --(10.013,5.229)--(10.013,5.215)--(10.089,5.209)--(10.089,5.208)--(10.164,5.204)--(10.202,5.204)%
+  --(10.240,5.188)--(10.315,5.188)--(10.315,5.176)--(10.353,5.168)--(10.692,5.165)--(10.730,5.141)%
+  --(10.806,5.138)--(10.843,10.191)--(10.843,6.819)--(10.881,6.767)--(10.881,6.671)--(10.881,6.632)%
+  --(10.881,6.631)--(10.881,6.609)--(10.881,6.604)--(10.881,6.583)--(10.881,6.565)--(10.881,6.558)%
+  --(10.881,6.541)--(10.919,6.530)--(10.919,6.517)--(10.919,6.494)--(10.919,6.484)--(10.919,6.464)%
+  --(10.919,6.457)--(10.919,6.434)--(10.919,6.433)--(10.919,6.416)--(10.957,6.401)--(10.957,6.397)%
+  --(10.957,6.387)--(10.957,6.383)--(10.957,6.377)--(10.957,6.363)--(10.994,6.354)--(10.994,6.350)%
+  --(10.994,6.332)--(11.032,6.330)--(11.032,6.305)--(11.032,6.259)--(11.032,6.216)--(11.032,6.192)%
+  --(11.032,6.190)--(11.070,6.179)--(11.070,6.167)--(11.070,6.124)--(11.108,6.114)--(11.108,6.105)%
+  --(11.108,6.088)--(11.108,6.083)--(11.108,6.061)--(11.145,6.049)--(11.145,6.047)--(11.221,6.031)%
+  --(11.221,6.024)--(11.258,6.023)--(11.258,6.018)--(11.258,6.014)--(11.258,6.012)--(11.296,6.011)%
+  --(11.296,6.001)--(11.296,6.000)--(11.334,5.977)--(11.372,5.969)--(11.372,5.964)--(11.372,5.951)%
+  --(11.409,5.951)--(11.409,5.945)--(11.447,5.944)--(11.447,5.943)--(11.447,5.927)--(11.485,5.922)%
+  --(11.523,5.922)--(11.560,5.919)--(11.560,5.914)--(11.560,5.909)--(11.598,5.907)--(11.598,5.906)%
+  --(11.598,5.900)--(11.636,5.900)--(11.636,5.891)--(11.674,5.881)--(11.674,5.874)--(11.787,5.872)%
+  --(11.787,5.871)--(11.787,5.868)--(11.938,5.867)--(12.013,5.863)--(12.051,5.854)--(12.089,5.850)%
+  --(12.164,5.849)--(12.164,5.835)--(12.164,5.830)--(12.164,5.818)--(12.240,5.810)--(12.240,5.803)%
+  --(12.277,5.801)--(12.277,5.796)--(12.315,5.793)--(12.315,5.785)--(12.315,5.778)--(12.353,5.774)%
+  --(12.353,5.765)--(12.466,5.761)--(12.504,5.759)--(12.541,5.758)--(12.541,5.756)--(12.579,5.749)%
+  --(12.617,5.747)--(12.655,5.744)--(12.692,5.726)--(12.768,5.716)--(12.881,5.706)--(12.919,5.705)%
+  --(13.032,5.705)--(13.107,5.703)--(13.107,5.696)--(13.145,10.671)--(13.145,7.431)--(13.145,7.402)%
+  --(13.145,7.298)--(13.145,7.273)--(13.145,7.202)--(13.145,7.101)--(13.145,7.078)--(13.183,7.069)%
+  --(13.183,7.056)--(13.183,7.043)--(13.183,7.027)--(13.183,7.024)--(13.221,7.012)--(13.221,7.009)%
+  --(13.221,7.004)--(13.221,6.932)--(13.258,6.919)--(13.258,6.894)--(13.258,6.889)--(13.258,6.885)%
+  --(13.258,6.876)--(13.296,6.864)--(13.334,6.860)--(13.334,6.852)--(13.334,6.851)--(13.334,6.838)%
+  --(13.372,6.812)--(13.409,6.810)--(13.409,6.806)--(13.409,6.803)--(13.447,6.790)--(13.447,6.781)%
+  --(13.447,6.771)--(13.485,6.763)--(13.523,6.762)--(13.523,6.757)--(13.523,6.742)--(13.523,6.736)%
+  --(13.523,6.723)--(13.523,6.721)--(13.560,6.712)--(13.598,6.705)--(13.598,6.702)--(13.636,6.699)%
+  --(13.673,6.699)--(13.711,6.685)--(13.711,6.682)--(13.749,6.682)--(13.749,6.659)--(13.749,6.630)%
+  --(13.749,6.624)--(13.787,6.617)--(13.787,6.606)--(13.824,6.603)--(13.900,6.603)--(13.900,6.601)%
+  --(13.975,6.598)--(13.975,6.593)--(14.013,6.586)--(14.013,6.573)--(14.013,6.570)--(14.051,6.568)%
+  --(14.051,6.558)--(14.051,6.552)--(14.089,6.547)--(14.089,6.541)--(14.126,6.541)--(14.202,6.539)%
+  --(14.202,6.534)--(14.240,6.528)--(14.240,6.523)--(14.240,6.520)--(14.240,6.519)--(14.240,6.517)%
+  --(14.315,6.516)--(14.353,6.507)--(14.390,6.502)--(14.390,6.483)--(14.428,6.482)--(14.504,6.482)%
+  --(14.504,6.478)--(14.579,6.472)--(14.617,6.472)--(14.617,6.469)--(14.655,6.469)--(14.692,6.462)%
+  --(14.730,6.458)--(14.768,6.457)--(14.843,6.451)--(14.843,6.450)--(14.881,6.445)--(14.919,6.444)%
+  --(14.919,6.442)--(14.956,6.441)--(15.032,6.441)--(15.183,6.441)--(15.183,6.438)--(15.183,6.424)%
+  --(15.183,6.420)--(15.221,6.417)--(15.258,6.413)--(15.296,6.408)--(15.334,6.400);
 \gpcolor{color=gp lt color border}
 \gpsetlinewidth{1.00}
-\draw[gp path] (2.424,11.075)--(2.424,1.845)--(15.447,1.845)--(15.447,11.075)--cycle;
+\draw[gp path] (2.240,11.075)--(2.240,1.845)--(15.447,1.845)--(15.447,11.075)--cycle;
 \node[gp node center,rotate=-270] at (-0.812,6.460) {Objective value};
-\node[gp node center] at (8.935,0.215) {Relative time ($\tau$) [S]};
-\node[gp node center] at (8.935,11.537) {Objective value for Weekly Schedule};
+\node[gp node center] at (8.843,0.215) {Relative time ($\tau$) [S]};
+\node[gp node center] at (8.843,11.537) {Objective value for Weekly Schedule};
 %% coordinates of the plot area
-\gpdefrectangularnode{gp plot 1}{\pgfpoint{2.424cm}{1.845cm}}{\pgfpoint{15.447cm}{11.075cm}}
+\gpdefrectangularnode{gp plot 1}{\pgfpoint{2.240cm}{1.845cm}}{\pgfpoint{15.447cm}{11.075cm}}
 \endtikzpicture
 %% gnuplot variables
