--- a/papers/actor-based-large-neighborhood-search/figures/strategic_objective_value_resource_addition_plot.tex
+++ b/papers/actor-based-large-neighborhood-search/figures/strategic_objective_value_resource_addition_plot.tex
@@ -1,6 +1,6 @@
 \tikzpicture[gnuplot]
 %% generated with GNUPLOT 6.0p1 (Lua 5.2; terminal rev. Jun 2020, script rev. 118)
-%% tir 17 dec 2024 22:39:21 CET
+%% fre 03 jan 2025 11:53:43 CET
 \path (0.000,0.000) rectangle (16.000,12.000);
 \gpcolor{rgb color={0.753,0.753,0.753}}
 \gpsetlinetype{gp lt border}
@@ -14,20 +14,28 @@
 \node[gp node right] at (2.240,1.845) {$1.85\times10^{11}$};
 \gpcolor{rgb color={0.753,0.753,0.753}}
 \gpsetlinewidth{2.00}
-\draw[gp path] (2.424,3.383)--(15.447,3.383);
+\draw[gp path] (2.424,2.999)--(15.447,2.999);
 \gpcolor{color=gp lt color border}
 \gpsetlinewidth{1.00}
-\draw[gp path] (2.424,3.383)--(2.604,3.383);
-\draw[gp path] (15.447,3.383)--(15.267,3.383);
-\node[gp node right] at (2.240,3.383) {$1.9\times10^{11}$};
+\draw[gp path] (2.424,2.999)--(2.604,2.999);
+\draw[gp path] (15.447,2.999)--(15.267,2.999);
+\node[gp node right] at (2.240,2.999) {$1.9\times10^{11}$};
 \gpcolor{rgb color={0.753,0.753,0.753}}
 \gpsetlinewidth{2.00}
-\draw[gp path] (2.424,4.922)--(15.447,4.922);
+\draw[gp path] (2.424,4.153)--(15.447,4.153);
 \gpcolor{color=gp lt color border}
 \gpsetlinewidth{1.00}
-\draw[gp path] (2.424,4.922)--(2.604,4.922);
-\draw[gp path] (15.447,4.922)--(15.267,4.922);
-\node[gp node right] at (2.240,4.922) {$1.95\times10^{11}$};
+\draw[gp path] (2.424,4.153)--(2.604,4.153);
+\draw[gp path] (15.447,4.153)--(15.267,4.153);
+\node[gp node right] at (2.240,4.153) {$1.95\times10^{11}$};
+\gpcolor{rgb color={0.753,0.753,0.753}}
+\gpsetlinewidth{2.00}
+\draw[gp path] (2.424,5.306)--(15.447,5.306);
+\gpcolor{color=gp lt color border}
+\gpsetlinewidth{1.00}
+\draw[gp path] (2.424,5.306)--(2.604,5.306);
+\draw[gp path] (15.447,5.306)--(15.267,5.306);
+\node[gp node right] at (2.240,5.306) {$2\times10^{11}$};
 \gpcolor{rgb color={0.753,0.753,0.753}}
 \gpsetlinewidth{2.00}
 \draw[gp path] (2.424,6.460)--(15.447,6.460);
@@ -35,23 +43,31 @@
 \gpsetlinewidth{1.00}
 \draw[gp path] (2.424,6.460)--(2.604,6.460);
 \draw[gp path] (15.447,6.460)--(15.267,6.460);
-\node[gp node right] at (2.240,6.460) {$2\times10^{11}$};
+\node[gp node right] at (2.240,6.460) {$2.05\times10^{11}$};
 \gpcolor{rgb color={0.753,0.753,0.753}}
 \gpsetlinewidth{2.00}
-\draw[gp path] (2.424,7.998)--(15.447,7.998);
+\draw[gp path] (2.424,7.614)--(15.447,7.614);
 \gpcolor{color=gp lt color border}
 \gpsetlinewidth{1.00}
-\draw[gp path] (2.424,7.998)--(2.604,7.998);
-\draw[gp path] (15.447,7.998)--(15.267,7.998);
-\node[gp node right] at (2.240,7.998) {$2.05\times10^{11}$};
+\draw[gp path] (2.424,7.614)--(2.604,7.614);
+\draw[gp path] (15.447,7.614)--(15.267,7.614);
+\node[gp node right] at (2.240,7.614) {$2.1\times10^{11}$};
 \gpcolor{rgb color={0.753,0.753,0.753}}
 \gpsetlinewidth{2.00}
-\draw[gp path] (2.424,9.537)--(15.447,9.537);
+\draw[gp path] (2.424,8.768)--(15.447,8.768);
 \gpcolor{color=gp lt color border}
 \gpsetlinewidth{1.00}
-\draw[gp path] (2.424,9.537)--(2.604,9.537);
-\draw[gp path] (15.447,9.537)--(15.267,9.537);
-\node[gp node right] at (2.240,9.537) {$2.1\times10^{11}$};
+\draw[gp path] (2.424,8.768)--(2.604,8.768);
+\draw[gp path] (15.447,8.768)--(15.267,8.768);
+\node[gp node right] at (2.240,8.768) {$2.15\times10^{11}$};
+\gpcolor{rgb color={0.753,0.753,0.753}}
+\gpsetlinewidth{2.00}
+\draw[gp path] (2.424,9.921)--(15.447,9.921);
+\gpcolor{color=gp lt color border}
+\gpsetlinewidth{1.00}
+\draw[gp path] (2.424,9.921)--(2.604,9.921);
+\draw[gp path] (15.447,9.921)--(15.267,9.921);
+\node[gp node right] at (2.240,9.921) {$2.2\times10^{11}$};
 \gpcolor{rgb color={0.753,0.753,0.753}}
 \gpsetlinewidth{2.00}
 \draw[gp path] (2.424,11.075)--(15.447,11.075);
@@ -59,7 +75,7 @@
 \gpsetlinewidth{1.00}
 \draw[gp path] (2.424,11.075)--(2.604,11.075);
 \draw[gp path] (15.447,11.075)--(15.267,11.075);
-\node[gp node right] at (2.240,11.075) {$2.15\times10^{11}$};
+\node[gp node right] at (2.240,11.075) {$2.25\times10^{11}$};
 \gpcolor{rgb color={0.753,0.753,0.753}}
 \gpsetlinewidth{2.00}
 \draw[gp path] (2.424,1.845)--(2.424,11.075);
@@ -70,28 +86,20 @@
 \node[gp node left,rotate=270] at (2.424,1.661) {$0$};
 \gpcolor{rgb color={0.753,0.753,0.753}}
 \gpsetlinewidth{2.00}
-\draw[gp path] (4.052,1.845)--(4.052,11.075);
+\draw[gp path] (4.595,1.845)--(4.595,11.075);
 \gpcolor{color=gp lt color border}
 \gpsetlinewidth{1.00}
-\draw[gp path] (4.052,1.845)--(4.052,2.025);
-\draw[gp path] (4.052,11.075)--(4.052,10.895);
-\node[gp node left,rotate=270] at (4.052,1.661) {$50$};
+\draw[gp path] (4.595,1.845)--(4.595,2.025);
+\draw[gp path] (4.595,11.075)--(4.595,10.895);
+\node[gp node left,rotate=270] at (4.595,1.661) {$50$};
 \gpcolor{rgb color={0.753,0.753,0.753}}
 \gpsetlinewidth{2.00}
-\draw[gp path] (5.680,1.845)--(5.680,11.075);
+\draw[gp path] (6.765,1.845)--(6.765,11.075);
 \gpcolor{color=gp lt color border}
 \gpsetlinewidth{1.00}
-\draw[gp path] (5.680,1.845)--(5.680,2.025);
-\draw[gp path] (5.680,11.075)--(5.680,10.895);
-\node[gp node left,rotate=270] at (5.680,1.661) {$100$};
-\gpcolor{rgb color={0.753,0.753,0.753}}
-\gpsetlinewidth{2.00}
-\draw[gp path] (7.308,1.845)--(7.308,11.075);
-\gpcolor{color=gp lt color border}
-\gpsetlinewidth{1.00}
-\draw[gp path] (7.308,1.845)--(7.308,2.025);
-\draw[gp path] (7.308,11.075)--(7.308,10.895);
-\node[gp node left,rotate=270] at (7.308,1.661) {$150$};
+\draw[gp path] (6.765,1.845)--(6.765,2.025);
+\draw[gp path] (6.765,11.075)--(6.765,10.895);
+\node[gp node left,rotate=270] at (6.765,1.661) {$100$};
 \gpcolor{rgb color={0.753,0.753,0.753}}
 \gpsetlinewidth{2.00}
 \draw[gp path] (8.936,1.845)--(8.936,11.075);
@@ -99,31 +107,23 @@
 \gpsetlinewidth{1.00}
 \draw[gp path] (8.936,1.845)--(8.936,2.025);
 \draw[gp path] (8.936,11.075)--(8.936,10.895);
-\node[gp node left,rotate=270] at (8.936,1.661) {$200$};
+\node[gp node left,rotate=270] at (8.936,1.661) {$150$};
 \gpcolor{rgb color={0.753,0.753,0.753}}
 \gpsetlinewidth{2.00}
-\draw[gp path] (10.563,1.845)--(10.563,11.075);
+\draw[gp path] (11.106,1.845)--(11.106,11.075);
 \gpcolor{color=gp lt color border}
 \gpsetlinewidth{1.00}
-\draw[gp path] (10.563,1.845)--(10.563,2.025);
-\draw[gp path] (10.563,11.075)--(10.563,10.895);
-\node[gp node left,rotate=270] at (10.563,1.661) {$250$};
+\draw[gp path] (11.106,1.845)--(11.106,2.025);
+\draw[gp path] (11.106,11.075)--(11.106,10.895);
+\node[gp node left,rotate=270] at (11.106,1.661) {$200$};
 \gpcolor{rgb color={0.753,0.753,0.753}}
 \gpsetlinewidth{2.00}
-\draw[gp path] (12.191,1.845)--(12.191,11.075);
+\draw[gp path] (13.277,1.845)--(13.277,11.075);
 \gpcolor{color=gp lt color border}
 \gpsetlinewidth{1.00}
-\draw[gp path] (12.191,1.845)--(12.191,2.025);
-\draw[gp path] (12.191,11.075)--(12.191,10.895);
-\node[gp node left,rotate=270] at (12.191,1.661) {$300$};
-\gpcolor{rgb color={0.753,0.753,0.753}}
-\gpsetlinewidth{2.00}
-\draw[gp path] (13.819,1.845)--(13.819,11.075);
-\gpcolor{color=gp lt color border}
-\gpsetlinewidth{1.00}
-\draw[gp path] (13.819,1.845)--(13.819,2.025);
-\draw[gp path] (13.819,11.075)--(13.819,10.895);
-\node[gp node left,rotate=270] at (13.819,1.661) {$350$};
+\draw[gp path] (13.277,1.845)--(13.277,2.025);
+\draw[gp path] (13.277,11.075)--(13.277,10.895);
+\node[gp node left,rotate=270] at (13.277,1.661) {$250$};
 \gpcolor{rgb color={0.753,0.753,0.753}}
 \gpsetlinewidth{2.00}
 \draw[gp path] (15.447,1.845)--(15.447,11.075);
@@ -131,97 +131,105 @@
 \gpsetlinewidth{1.00}
 \draw[gp path] (15.447,1.845)--(15.447,2.025);
 \draw[gp path] (15.447,11.075)--(15.447,10.895);
-\node[gp node left,rotate=270] at (15.447,1.661) {$400$};
+\node[gp node left,rotate=270] at (15.447,1.661) {$300$};
 \draw[gp path] (2.424,11.075)--(2.424,1.845)--(15.447,1.845)--(15.447,11.075)--cycle;
 \gpcolor{rgb color={0.000,0.000,0.000}}
 \gpsetlinewidth{2.00}
-\draw[gp path] (2.424,6.830)--(2.424,6.805)--(2.424,6.769)--(2.424,6.745)--(2.424,6.709)%
-  --(2.424,6.681)--(2.424,6.661)--(2.424,6.660)--(2.457,6.635)--(2.457,6.584)--(2.457,6.562)%
-  --(2.457,6.557)--(2.457,6.543)--(2.457,6.537)--(2.457,6.518)--(2.457,6.509)--(2.457,6.493)%
-  --(2.457,6.476)--(2.457,6.472)--(2.457,6.466)--(2.457,6.448)--(2.489,6.441)--(2.489,6.424)%
-  --(2.489,6.379)--(2.489,6.369)--(2.489,6.308)--(2.489,6.300)--(2.489,6.291)--(2.489,6.261)%
-  --(2.489,6.233)--(2.489,6.216)--(2.489,6.208)--(2.489,6.205)--(2.522,6.201)--(2.522,6.190)%
-  --(2.522,6.181)--(2.522,6.167)--(2.522,6.165)--(2.522,6.161)--(2.522,6.158)--(2.522,6.157)%
-  --(2.522,6.133)--(2.522,6.123)--(2.522,6.116)--(2.554,6.112)--(2.554,6.104)--(2.554,6.066)%
-  --(2.554,6.062)--(2.554,6.041)--(2.554,6.033)--(2.554,6.028)--(2.554,6.025)--(2.554,5.996)%
-  --(2.554,5.992)--(2.554,5.985)--(2.587,5.968)--(2.587,5.941)--(2.587,5.892)--(2.587,5.886)%
-  --(2.587,5.880)--(2.587,5.878)--(2.587,5.871)--(2.587,5.870)--(2.587,5.861)--(2.587,5.840)%
-  --(2.587,5.839)--(2.587,5.820)--(2.619,5.819)--(2.619,5.813)--(2.619,5.811)--(2.619,5.807)%
-  --(2.619,5.806)--(2.619,5.795)--(2.619,5.787)--(2.619,5.776)--(2.652,5.775)--(2.652,5.774)%
-  --(2.652,5.770)--(2.652,5.766)--(2.652,5.752)--(2.652,5.739)--(2.652,5.735)--(2.684,5.729)%
-  --(2.684,5.722)--(2.684,5.715)--(2.684,5.708)--(2.684,5.699)--(2.684,5.693)--(2.717,5.681)%
-  --(2.717,5.680)--(2.717,5.672)--(2.717,5.663)--(2.717,5.655)--(2.717,5.651)--(2.750,5.646)%
-  --(2.750,5.641)--(2.750,5.626)--(2.750,5.618)--(2.782,5.616)--(2.782,5.613)--(2.782,5.612)%
-  --(2.782,5.603)--(2.782,5.601)--(2.782,5.598)--(2.782,5.589)--(2.782,5.585)--(2.815,5.578)%
-  --(2.815,5.574)--(2.847,5.569)--(2.847,5.562)--(2.847,5.557)--(2.880,5.556)--(2.880,5.546)%
-  --(2.912,5.545)--(2.912,5.543)--(2.912,5.529)--(2.945,5.527)--(2.945,5.517)--(2.945,5.516)%
-  --(2.977,5.512)--(2.977,5.510)--(2.977,5.506)--(2.977,5.503)--(3.043,5.499)--(3.043,5.498)%
-  --(3.043,5.494)--(3.075,5.492)--(3.108,5.490)--(3.140,5.488)--(3.173,5.487)--(3.173,5.484)%
-  --(3.173,5.480)--(3.173,5.479)--(3.205,5.475)--(3.205,5.469)--(3.238,5.465)--(3.238,5.462)%
-  --(3.303,5.461)--(3.303,5.457)--(3.303,5.456)--(3.336,5.455)--(3.336,5.454)--(3.336,5.452)%
-  --(3.368,5.452)--(3.368,5.443)--(3.401,5.442)--(3.401,5.441)--(3.401,5.437)--(3.433,5.432)%
-  --(3.466,5.430)--(3.466,5.429)--(3.466,5.428)--(3.498,5.428)--(3.498,5.427)--(3.498,5.425)%
-  --(3.531,5.422)--(3.564,5.420)--(3.596,5.416)--(3.629,5.415)--(3.661,5.414)--(3.824,5.413)%
-  --(3.824,5.412)--(3.824,5.411)--(3.857,5.411)--(3.889,5.410)--(3.954,5.406)--(3.954,5.404)%
-  --(3.954,5.403)--(4.019,5.403)--(4.052,5.402)--(4.052,5.401)--(4.052,5.397)--(4.117,5.397)%
-  --(4.150,5.394)--(4.150,5.393)--(4.182,5.393)--(4.182,5.391)--(4.182,5.390)--(4.215,5.386)%
-  --(4.280,5.384)--(4.312,5.383)--(4.345,5.383)--(4.345,5.381)--(4.345,5.379)--(4.377,5.378)%
-  --(4.443,5.375)--(4.508,5.372)--(4.540,5.368)--(4.540,5.367)--(4.573,5.365)--(4.605,5.364)%
-  --(4.638,5.359)--(4.670,5.358)--(4.670,5.357)--(4.736,5.355)--(4.801,5.355)--(4.866,5.354)%
-  --(4.898,5.353)--(4.931,5.352)--(5.061,5.352)--(5.094,5.351)--(5.289,5.349)--(5.322,5.348)%
-  --(5.387,5.345)--(5.484,5.345)--(5.615,5.343)--(5.647,5.340)--(5.712,10.346)--(5.712,10.327)%
-  --(5.712,10.324)--(5.745,10.268)--(5.875,10.239)--(5.908,10.236)--(6.168,10.235)--(6.396,10.233)%
-  --(8.968,10.154)--(8.968,6.125)--(8.968,6.103)--(9.001,6.083)--(9.001,5.980)--(9.001,5.973)%
-  --(9.001,5.957)--(9.001,5.942)--(9.001,5.923)--(9.001,5.909)--(9.001,5.892)--(9.001,5.849)%
-  --(9.001,5.831)--(9.001,5.820)--(9.033,5.816)--(9.033,5.800)--(9.033,5.795)--(9.033,5.794)%
-  --(9.033,5.792)--(9.033,5.791)--(9.033,5.774)--(9.033,5.772)--(9.033,5.753)--(9.066,5.750)%
-  --(9.066,5.739)--(9.066,5.729)--(9.066,5.728)--(9.066,5.717)--(9.066,5.714)--(9.066,5.703)%
-  --(9.098,5.694)--(9.098,5.691)--(9.098,5.688)--(9.098,5.685)--(9.098,5.680)--(9.098,5.679)%
-  --(9.098,5.675)--(9.098,5.673)--(9.098,5.665)--(9.098,5.663)--(9.131,5.641)--(9.131,5.639)%
-  --(9.131,5.633)--(9.131,5.631)--(9.131,5.597)--(9.163,5.593)--(9.163,5.582)--(9.163,5.579)%
-  --(9.163,5.576)--(9.163,5.574)--(9.163,5.572)--(9.163,5.566)--(9.163,5.557)--(9.196,5.555)%
-  --(9.196,5.550)--(9.196,5.547)--(9.196,5.543)--(9.196,5.540)--(9.229,5.533)--(9.229,5.532)%
-  --(9.261,5.527)--(9.261,5.525)--(9.261,5.523)--(9.294,5.521)--(9.294,5.520)--(9.294,5.517)%
-  --(9.294,5.516)--(9.326,5.514)--(9.326,5.513)--(9.359,5.509)--(9.359,5.500)--(9.359,5.497)%
-  --(9.359,5.496)--(9.391,5.495)--(9.391,5.491)--(9.424,5.485)--(9.456,5.478)--(9.456,5.477)%
-  --(9.456,5.475)--(9.522,5.467)--(9.522,5.462)--(9.522,5.449)--(9.587,5.447)--(9.587,5.446)%
-  --(9.619,5.445)--(9.619,5.444)--(9.652,5.442)--(9.652,5.439)--(9.652,5.434)--(9.652,5.432)%
-  --(9.652,5.429)--(9.684,5.428)--(9.684,5.424)--(9.684,5.423)--(9.749,5.423)--(9.815,5.421)%
-  --(9.847,5.421)--(9.847,5.419)--(9.847,5.415)--(9.847,5.411)--(9.880,5.409)--(9.880,5.406)%
-  --(9.880,5.405)--(9.912,5.404)--(9.912,5.400)--(9.945,5.396)--(9.977,5.395)--(10.042,5.395)%
-  --(10.042,5.393)--(10.140,5.392)--(10.173,5.390)--(10.238,5.386)--(10.238,5.384)--(10.238,5.382)%
-  --(10.335,5.381)--(10.335,5.378)--(10.368,5.376)--(10.401,5.375)--(10.498,5.375)--(10.498,5.373)%
-  --(10.531,5.372)--(10.531,5.369)--(10.563,5.368)--(10.661,5.367)--(10.694,5.365)--(10.726,5.364)%
-  --(10.824,5.364)--(10.824,5.360)--(10.889,5.356)--(10.922,5.350)--(10.922,5.349)--(10.954,5.348)%
-  --(11.019,5.346)--(11.247,5.345)--(11.280,5.344)--(11.312,5.343)--(11.345,5.342)--(11.377,5.339)%
-  --(11.410,5.285)--(11.410,5.283)--(11.508,5.282)--(11.703,5.277)--(11.768,5.277)--(11.768,5.275)%
-  --(11.866,5.269)--(11.996,5.266)--(12.126,5.263)--(12.159,5.262)--(12.191,5.261)--(12.224,3.814)%
-  --(12.224,3.778)--(12.224,3.704)--(12.256,3.687)--(12.256,3.604)--(12.256,3.592)--(12.256,3.567)%
-  --(12.256,3.561)--(12.256,3.546)--(12.256,3.538)--(12.256,3.517)--(12.256,3.505)--(12.256,3.496)%
-  --(12.256,3.488)--(12.256,3.479)--(12.289,3.338)--(12.289,3.324)--(12.289,3.315)--(12.289,3.311)%
-  --(12.289,3.219)--(12.289,3.212)--(12.289,3.205)--(12.289,3.197)--(12.289,3.195)--(12.289,3.194)%
-  --(12.289,3.186)--(12.289,3.180)--(12.321,3.178)--(12.321,3.083)--(12.321,3.075)--(12.321,2.965)%
-  --(12.321,2.964)--(12.321,2.952)--(12.321,2.946)--(12.321,2.935)--(12.321,2.929)--(12.354,2.929)%
-  --(12.354,2.925)--(12.354,2.873)--(12.354,2.872)--(12.354,2.871)--(12.354,2.869)--(12.354,2.780)%
-  --(12.354,2.778)--(12.354,2.776)--(12.354,2.775)--(12.387,2.769)--(12.387,2.759)--(12.387,2.756)%
-  --(12.387,2.751)--(12.387,2.748)--(12.387,2.741)--(12.387,2.736)--(12.419,2.732)--(12.419,2.726)%
-  --(12.419,2.724)--(12.419,2.722)--(12.419,2.713)--(12.419,2.710)--(12.452,2.709)--(12.452,2.706)%
-  --(12.452,2.705)--(12.452,2.694)--(12.484,2.692)--(12.484,2.688)--(12.484,2.686)--(12.484,2.681)%
-  --(12.484,2.676)--(12.517,2.674)--(12.517,2.669)--(12.517,2.668)--(12.549,2.664)--(12.549,2.660)%
-  --(12.549,2.656)--(12.582,2.655)--(12.582,2.653)--(12.582,2.649)--(12.582,2.648)--(12.582,2.647)%
-  --(12.582,2.645)--(12.582,2.644)--(12.614,2.640)--(12.614,2.639)--(12.614,2.637)--(12.614,2.635)%
-  --(12.647,2.635)--(12.647,2.633)--(12.647,2.628)--(12.647,2.626)--(12.647,2.622)--(12.680,2.622)%
-  --(12.680,2.617)--(12.680,2.613)--(12.680,2.610)--(12.712,2.609)--(12.712,2.608)--(12.712,2.605)%
-  --(12.712,2.604)--(12.712,2.601)--(12.745,2.601)--(12.745,2.600)--(12.745,2.599)--(12.777,2.596)%
-  --(12.777,2.594)--(12.810,2.593)--(12.810,2.591)--(12.842,2.590)--(12.842,2.589)--(12.842,2.586)%
-  --(12.842,2.585)--(12.875,2.581)--(12.908,2.578)--(12.908,2.577)--(12.908,2.576)--(12.908,2.575)%
-  --(12.908,2.572)--(12.908,2.571)--(12.940,2.571)--(12.940,2.570)--(12.940,2.567)--(12.973,2.566)%
-  --(13.005,2.565)--(13.005,2.563)--(13.005,2.562)--(13.005,2.553)--(13.103,2.551)--(13.103,2.550)%
-  --(13.135,2.549)--(13.135,2.548)--(13.201,2.547)--(13.233,2.547)--(13.266,2.546)--(13.266,2.545)%
-  --(13.363,2.544)--(13.428,2.542)--(13.461,2.541)--(13.461,2.539)--(13.559,2.536)--(13.559,2.535)%
-  --(13.591,2.535)--(13.656,2.532)--(13.689,2.530)--(13.721,2.528)--(13.754,2.528)--(13.787,2.526)%
-  --(13.819,2.525)--(13.917,2.525)--(13.982,2.525)--(13.982,2.523)--(14.014,2.522)--(14.047,2.522)%
-  --(14.145,2.521)--(14.177,2.521);
+\draw[gp path] (2.424,10.112)--(2.424,10.096)--(2.424,10.064)--(2.424,10.062)--(2.424,10.030)%
+  --(2.424,10.023)--(2.424,10.001)--(2.424,9.993)--(2.424,9.967)--(2.424,9.949)--(2.467,9.916)%
+  --(2.467,9.892)--(2.467,9.874)--(2.467,9.852)--(2.467,9.832)--(2.467,9.823)--(2.467,9.820)%
+  --(2.467,9.805)--(2.467,9.800)--(2.467,9.799)--(2.467,9.789)--(2.467,9.779)--(2.467,9.768)%
+  --(2.467,9.764)--(2.467,9.758)--(2.467,9.748)--(2.467,9.742)--(2.467,9.741)--(2.467,9.739)%
+  --(2.467,9.722)--(2.467,9.719)--(2.467,9.713)--(2.511,9.698)--(2.511,9.695)--(2.511,9.693)%
+  --(2.511,9.692)--(2.511,9.687)--(2.511,9.685)--(2.511,9.657)--(2.511,9.651)--(2.554,9.648)%
+  --(2.554,9.639)--(2.554,9.623)--(2.554,9.617)--(2.554,9.615)--(2.598,9.607)--(2.598,9.596)%
+  --(2.598,9.594)--(2.598,9.592)--(2.598,9.588)--(2.598,9.585)--(2.641,9.582)--(2.641,9.581)%
+  --(2.641,9.577)--(2.641,9.576)--(2.684,9.573)--(2.684,9.562)--(2.684,9.560)--(2.684,9.552)%
+  --(2.728,9.550)--(2.771,9.549)--(2.771,9.548)--(2.815,9.548)--(2.815,9.544)--(2.902,9.542)%
+  --(2.945,9.541)--(2.945,9.540)--(2.945,9.538)--(2.988,9.533)--(2.988,9.531)--(2.988,9.530)%
+  --(3.162,9.530)--(3.162,9.527)--(3.292,9.526)--(3.379,9.526)--(3.379,9.522)--(3.422,9.521)%
+  --(3.422,9.518)--(3.466,9.517)--(3.509,9.515)--(3.553,9.515)--(3.596,9.511)--(3.596,9.510)%
+  --(3.726,9.510)--(3.770,9.509)--(3.857,9.508)--(3.987,9.507)--(4.030,9.505)--(4.074,9.505)%
+  --(4.074,9.503)--(4.204,9.502)--(4.291,9.500)--(4.377,9.499)--(4.421,9.499)--(4.464,9.499)%
+  --(4.551,9.498)--(4.551,9.495)--(4.812,9.494)--(4.942,9.493)--(4.985,9.491)--(5.159,9.491)%
+  --(5.246,9.489)--(5.376,9.488)--(5.419,9.484)--(5.463,9.484)--(5.463,9.483)--(5.506,9.483)%
+  --(5.506,9.481)--(5.767,9.478)--(5.853,9.477)--(5.940,9.477)--(6.070,9.475)--(6.505,9.473)%
+  --(6.505,9.470)--(6.591,9.469)--(6.591,9.468)--(6.678,9.467)--(6.678,7.882)--(6.678,7.844)%
+  --(6.678,7.759)--(6.722,7.717)--(6.722,7.667)--(6.722,7.640)--(6.722,7.572)--(6.722,7.533)%
+  --(6.722,7.469)--(6.722,7.302)--(6.722,7.283)--(6.722,7.268)--(6.722,7.225)--(6.722,7.207)%
+  --(6.722,7.178)--(6.722,7.135)--(6.722,7.119)--(6.722,7.001)--(6.722,6.900)--(6.722,6.871)%
+  --(6.722,6.838)--(6.722,6.784)--(6.722,6.763)--(6.722,6.758)--(6.722,6.726)--(6.722,6.645)%
+  --(6.722,6.627)--(6.722,6.600)--(6.722,6.515)--(6.722,6.489)--(6.722,6.431)--(6.722,6.376)%
+  --(6.722,6.340)--(6.722,6.263)--(6.722,6.233)--(6.722,6.228)--(6.722,6.204)--(6.722,6.165)%
+  --(6.722,6.148)--(6.722,6.128)--(6.722,6.066)--(6.722,6.003)--(6.722,5.988)--(6.722,5.977)%
+  --(6.722,5.964)--(6.722,5.936)--(6.722,5.926)--(6.722,5.908)--(6.722,5.903)--(6.722,5.885)%
+  --(6.722,5.823)--(6.722,5.817)--(6.722,5.805)--(6.722,5.765)--(6.722,5.745)--(6.765,5.734)%
+  --(6.765,5.670)--(6.765,5.654)--(6.765,5.651)--(6.765,5.635)--(6.765,5.601)--(6.765,5.551)%
+  --(6.765,5.548)--(6.765,5.534)--(6.765,5.525)--(6.765,5.484)--(6.765,5.483)--(6.765,5.478)%
+  --(6.765,5.460)--(6.765,5.459)--(6.765,5.453)--(6.765,5.435)--(6.765,5.428)--(6.765,5.413)%
+  --(6.765,5.412)--(6.765,5.403)--(6.765,5.401)--(6.765,5.385)--(6.765,5.375)--(6.765,5.357)%
+  --(6.765,5.316)--(6.765,5.315)--(6.765,5.314)--(6.765,5.306)--(6.765,5.292)--(6.765,5.278)%
+  --(6.765,5.273)--(6.765,5.265)--(6.765,5.263)--(6.808,5.247)--(6.808,5.244)--(6.808,5.240)%
+  --(6.808,5.231)--(6.808,5.229)--(6.808,5.214)--(6.808,5.213)--(6.808,5.143)--(6.808,5.136)%
+  --(6.808,5.132)--(6.808,5.087)--(6.808,5.086)--(6.808,5.078)--(6.808,5.076)--(6.808,5.075)%
+  --(6.808,5.074)--(6.808,5.060)--(6.808,5.056)--(6.808,5.055)--(6.808,5.051)--(6.808,5.033)%
+  --(6.808,5.030)--(6.808,5.027)--(6.808,5.023)--(6.808,5.018)--(6.808,5.017)--(6.852,5.014)%
+  --(6.852,5.010)--(6.852,5.006)--(6.852,5.005)--(6.852,5.000)--(6.852,4.993)--(6.852,4.980)%
+  --(6.852,4.969)--(6.852,4.963)--(6.852,4.960)--(6.852,4.953)--(6.852,4.948)--(6.895,4.947)%
+  --(6.895,4.942)--(6.895,4.935)--(6.895,4.929)--(6.895,4.928)--(6.895,4.925)--(6.895,4.920)%
+  --(6.895,4.918)--(6.895,4.915)--(6.895,4.911)--(6.895,4.908)--(6.895,4.903)--(6.895,4.899)%
+  --(6.895,4.896)--(6.939,4.893)--(6.939,4.887)--(6.939,4.858)--(6.939,4.854)--(6.939,4.852)%
+  --(6.939,4.849)--(6.939,4.848)--(6.939,4.841)--(6.982,4.838)--(6.982,4.837)--(6.982,4.834)%
+  --(6.982,4.833)--(7.025,4.832)--(7.025,4.831)--(7.025,4.829)--(7.025,4.822)--(7.025,4.820)%
+  --(7.069,4.818)--(7.069,4.816)--(7.069,4.815)--(7.069,4.812)--(7.069,4.811)--(7.069,4.806)%
+  --(7.112,4.805)--(7.112,4.804)--(7.112,4.801)--(7.112,4.799)--(7.112,4.794)--(7.112,4.793)%
+  --(7.156,4.788)--(7.156,4.786)--(7.199,4.784)--(7.199,4.783)--(7.243,4.781)--(7.243,4.779)%
+  --(7.243,4.778)--(7.243,4.777)--(7.243,4.774)--(7.243,4.771)--(7.329,4.770)--(7.329,4.769)%
+  --(7.373,4.766)--(7.373,4.765)--(7.373,4.763)--(7.373,4.762)--(7.416,4.761)--(7.416,4.760)%
+  --(7.416,4.754)--(7.416,4.750)--(7.416,4.749)--(7.416,4.748)--(7.416,4.747)--(7.416,4.746)%
+  --(7.460,4.741)--(7.460,4.740)--(7.460,4.738)--(7.460,4.737)--(7.503,4.735)--(7.590,4.734)%
+  --(7.633,4.734)--(7.633,4.732)--(7.633,4.729)--(7.677,4.728)--(7.677,4.727)--(7.677,4.726)%
+  --(7.677,4.724)--(7.720,4.723)--(7.720,4.722)--(7.763,4.719)--(7.763,4.717)--(7.763,4.713)%
+  --(7.763,4.711)--(7.763,4.710)--(7.894,4.708)--(7.894,4.706)--(7.894,4.703)--(7.937,4.702)%
+  --(7.937,4.700)--(8.024,4.699)--(8.024,4.697)--(8.067,4.697)--(8.067,4.696)--(8.111,4.695)%
+  --(8.198,4.694)--(8.198,4.691)--(8.241,4.691)--(8.241,4.689)--(8.284,4.689)--(8.284,4.687)%
+  --(8.328,4.686)--(8.328,4.685)--(8.415,4.683)--(8.458,4.681)--(8.501,4.680)--(8.545,4.680)%
+  --(8.675,4.679)--(8.675,4.677)--(8.718,4.676)--(8.718,4.674)--(8.762,4.672)--(8.762,4.671)%
+  --(8.805,4.670)--(8.849,4.669)--(8.892,4.668)--(8.979,4.668)--(9.196,4.667)--(9.239,4.667)%
+  --(9.283,4.664)--(9.326,4.663)--(9.456,4.660)--(9.587,4.660)--(10.151,4.659)--(10.238,4.657)%
+  --(10.281,4.657)--(10.325,4.657)--(10.932,4.655)--(11.063,3.489)--(11.063,3.482)--(11.063,3.469)%
+  --(11.063,3.460)--(11.063,3.447)--(11.063,3.436)--(11.063,3.418)--(11.063,3.403)--(11.063,3.313)%
+  --(11.063,3.298)--(11.063,3.242)--(11.063,3.240)--(11.063,3.148)--(11.063,3.137)--(11.063,3.136)%
+  --(11.063,3.090)--(11.063,3.045)--(11.063,3.037)--(11.063,3.035)--(11.063,3.032)--(11.063,2.958)%
+  --(11.063,2.951)--(11.063,2.950)--(11.063,2.862)--(11.063,2.853)--(11.063,2.851)--(11.063,2.845)%
+  --(11.063,2.838)--(11.063,2.836)--(11.063,2.831)--(11.063,2.823)--(11.063,2.820)--(11.063,2.817)%
+  --(11.106,2.816)--(11.106,2.783)--(11.106,2.782)--(11.106,2.780)--(11.106,2.669)--(11.106,2.667)%
+  --(11.106,2.663)--(11.106,2.662)--(11.106,2.661)--(11.106,2.658)--(11.106,2.656)--(11.106,2.648)%
+  --(11.106,2.646)--(11.106,2.642)--(11.106,2.641)--(11.106,2.570)--(11.106,2.569)--(11.106,2.533)%
+  --(11.106,2.529)--(11.106,2.522)--(11.106,2.519)--(11.149,2.518)--(11.149,2.516)--(11.149,2.515)%
+  --(11.149,2.511)--(11.149,2.500)--(11.149,2.499)--(11.149,2.439)--(11.149,2.438)--(11.149,2.435)%
+  --(11.149,2.433)--(11.149,2.431)--(11.149,2.427)--(11.193,2.425)--(11.193,2.424)--(11.193,2.420)%
+  --(11.193,2.417)--(11.193,2.416)--(11.193,2.415)--(11.193,2.409)--(11.193,2.406)--(11.193,2.404)%
+  --(11.193,2.402)--(11.193,2.400)--(11.193,2.398)--(11.193,2.397)--(11.236,2.394)--(11.236,2.393)%
+  --(11.236,2.389)--(11.236,2.384)--(11.236,2.383)--(11.236,2.382)--(11.280,2.378)--(11.280,2.377)%
+  --(11.280,2.371)--(11.323,2.371)--(11.323,2.369)--(11.323,2.368)--(11.323,2.366)--(11.323,2.364)%
+  --(11.323,2.363)--(11.366,2.362)--(11.366,2.359)--(11.366,2.358)--(11.366,2.357)--(11.366,2.350)%
+  --(11.366,2.349)--(11.410,2.349)--(11.410,2.348)--(11.410,2.332)--(11.410,2.330)--(11.410,2.329)%
+  --(11.453,2.327)--(11.497,2.325)--(11.497,2.324)--(11.497,2.320)--(11.540,2.316)--(11.540,2.315)%
+  --(11.540,2.313)--(11.540,2.312)--(11.540,2.311)--(11.540,2.310)--(11.584,2.310)--(11.584,2.309)%
+  --(11.584,2.308)--(11.584,2.307)--(11.584,2.306)--(11.627,2.306)--(11.627,2.305)--(11.670,2.305)%
+  --(11.670,2.303)--(11.670,2.302)--(11.714,2.300)--(11.714,2.299)--(11.757,2.298)--(11.757,2.295)%
+  --(11.801,2.295)--(11.801,2.292)--(11.801,2.291)--(11.801,2.290)--(11.844,2.289)--(11.887,2.288)%
+  --(11.887,2.286)--(11.887,2.285)--(11.887,2.283)--(11.887,2.280)--(11.931,2.277)--(11.974,2.275)%
+  --(12.018,2.272)--(12.018,2.271)--(12.018,2.270)--(12.061,2.270)--(12.061,2.268)--(12.104,2.266)%
+  --(12.104,2.265)--(12.104,2.264)--(12.148,2.264)--(12.148,2.263)--(12.148,2.262)--(12.191,2.262)%
+  --(12.191,2.261)--(12.191,2.259)--(12.235,2.258)--(12.235,2.257)--(12.235,2.256)--(12.278,2.256)%
+  --(12.321,2.255)--(12.321,2.254)--(12.365,2.253)--(12.365,2.252)--(12.408,2.252)--(12.452,2.251)%
+  --(12.495,2.251)--(12.495,2.250)--(12.495,2.244)--(12.539,2.243)--(12.539,2.242)--(12.582,2.240)%
+  --(12.582,2.239)--(12.669,2.238)--(12.669,2.237)--(12.886,2.236)--(12.929,2.235)--(12.973,2.235)%
+  --(13.016,2.234)--(13.059,2.233)--(13.103,2.231)--(13.146,2.230)--(13.146,2.229)--(13.190,2.228)%
+  --(13.233,2.227)--(13.233,2.226)--(13.320,2.225)--(13.450,2.224)--(13.494,2.224)--(13.494,2.223)%
+  --(13.537,2.222)--(13.537,2.220)--(13.537,2.219)--(13.580,2.218)--(13.580,2.216)--(13.624,2.215);
 \gpcolor{color=gp lt color border}
 \gpsetlinewidth{1.00}
 \draw[gp path] (2.424,11.075)--(2.424,1.845)--(15.447,1.845)--(15.447,11.075)--cycle;
