--- a/papers/actor-based-large-neighborhood-search/tex/discussion.tex
+++ b/papers/actor-based-large-neighborhood-search/tex/discussion.tex
@@ -1,6 +1,7 @@
 \section{Discussion}\label{sec:4-discussion}
-The maintenance scheduling process effectively solves a complex scheduling
-problem by relying in multiple actors. Through the use of actors the scheduling
+The maintenance scheduling process effectively but not always efficiently models and 
+determines good solutions to a complex scheduling
+problem by relying on multiple actors. Through the use of actors the scheduling
 process handles uncertainty that is difficult to reason about in a single
 mathematical model. These  uncertainties are solved through coordination in
 time (modelled as $\VarMetaTime$). Each type of actor in the process acts
@@ -67,135 +68,56 @@ solutions, user inputs, and in the dynamic data source as they occur opposed to
 restarting the metaheuristics.
 
 \subsection{Future Research}\label{sec:discussion:future_research}
-The future research direction is to demonstrate that
-the actor-based approach described here can be used to model and optimize 
-multi-actor/multi-level scheduling processes. 
-Figures~\ref{fig:ordinator-hexagon:persistence},
-~\ref{fig:ordinator-hexagon:atomicpointerswap},
-~\ref{fig:ordinator-hexagon:metaheuristics},
-~\ref{fig:ordinator-hexagon:orchestrator},
-~\ref{fig:ordinator-hexagon:userinterfaces}
-show a larger scale setup of the actor-based approach which is being developed with Total Energies.
-Here figure~\ref{fig:ordinator-hexagon:metaheuristics}
-shows the metaheuristics of scheduling system architecture where each of the actors run an AbLNS
-and that each metaheuristic will share its solutions with the other
-metaheuristics through atomic pointer swapping shown in figure~\ref{fig:ordinator-hexagon:atomicpointerswap}.
-Communicate with the end-user
-through userinterfaces and message passing as shown in figure~\ref{fig:ordinator-hexagon:userinterfaces}, 
-integrate with a persistent storage through mutex
-locks as shown in figure~\ref{fig:ordinator-hexagon:persistence}, 
-and the lifecycle of each of the metaheuristics will be controlled by
-the orchestrator also through message passing as shown in figure~\ref{fig:ordinator-hexagon:orchestrator}. 
+The next step in this direction will be to model the remaining stakeholders as
+their own  AbLNS metaheuristics, and then make them communicate together through
+atomic pointer swaps and message passing. This enables modular concurrency at
+each layer and ensures real-time synchronization across multiple optimization
+levels. Making each metaheuristic expose solutions to each  other in real-time
+providing each other with high quality parameters. 
+Figure~\ref{fig:discussion:hexagon-setup} shows one such possible setup.
 
-% \begin{figure}[H]
-% 	\centering
-% 	\input{../../figures/ordinator-architecture.tex}
-% 	\drawOrdinatorArchitecture{basisinput=1cm}
-% 	\label{fig:ordinator-architecture}
-% \end{figure}
-\begin{figure}[H]
-	\centering
+
+\begin{figure}
 	\input{../../figures/model-setup-hexagon.tex}
-	\resizebox{0.7\textwidth}{!}{
-		\drawModelSetupHexagon[persistence=true]
-	}
-	\caption{
-		Overview of the scheduling process when modelled as actors. When LNS is encapsulated 
-		is an actor it becomes possible to optimize parts of a large process individually instead of 
-		optimizing the scheduling problem globally from a single model implementation.
-	}
-	\label{fig:ordinator-hexagon:persistence}
-\end{figure}
-\begin{figure}[H]
-	\centering
-	\input{../../figures/model-setup-hexagon.tex}
-	\resizebox{0.7\textwidth}{!}{
-		\drawModelSetupHexagon[atomicpointerswap=true]
-	}
-	\caption{
-		Overview of the scheduling process when modelled as actors. When LNS is encapsulated 
-		is an actor it becomes possible to optimize parts of a large process individually instead of 
-		optimizing the scheduling problem globally from a single model implementation.
-	}
-	\label{fig:ordinator-hexagon:atomicpointerswap}
+	\drawModelSetupHexagon[metaheuristics=true]
+	\caption{A setup of metaheuristics in a architecture where solutions are shared 
+		between AbLNS algorithms in real-time through the use of atomic pointer swaps
+	}\label{fig:discussion:hexagon-setup}
 \end{figure}
 
-\begin{figure}[H]
-	\centering
-	\input{../../figures/model-setup-hexagon.tex}
-	\resizebox{0.7\textwidth}{!}{
-		\drawModelSetupHexagon[metaheuristics=true]
-	}
-	\caption{
-		Overview of the scheduling process when modelled as actors. When LNS is encapsulated 
-		is an actor it becomes possible to optimize parts of a large process individually instead of 
-		optimizing the scheduling problem globally from a single model implementation.
-	}
-	\label{fig:ordinator-hexagon:metaheuristics}
-\end{figure}
-
-\begin{figure}[H]
-	\centering
-	\input{../../figures/model-setup-hexagon.tex}
-	\resizebox{0.7\textwidth}{!}{
-		\drawModelSetupHexagon[orchestrator=true]
-	}
-	\caption{
-		Overview of the scheduling process when modelled as actors. When LNS is encapsulated 
-		is an actor it becomes possible to optimize parts of a large process individually instead of 
-		optimizing the scheduling problem globally from a single model implementation.
-	}
-	\label{fig:ordinator-hexagon:orchestrator}
-\end{figure}
-\begin{figure}[H]
-	\centering
-	\input{../../figures/model-setup-hexagon.tex}
-	\resizebox{0.7\textwidth}{!}{
-		\drawModelSetupHexagon[userinterface=true]
-	}
-	\caption{
-		Overview of the scheduling process when modelled as actors. When LNS is encapsulated 
-		is an actor it becomes possible to optimize parts of a large process individually instead of 
-		optimizing the scheduling problem globally from a single model implementation.
-	}
-	\label{fig:ordinator-hexagon:userinterfaces}
-\end{figure}
-
-The next step in this direction will be to model the remaining stakeholders as their own 
-AbLNS metaheuristics, and then make them communicate together through atomic pointer swaps and message
-passing. This enables modular concurrency at each layer and ensures real-time
-synchronization across multiple optimization levels. Making each metaheuristic expose solutions to each 
-other in real-time providing each other with high quality parameters.
+Scaling metaheuristics is very difficult as metaheuristics are usually high coupled
+software components and this high coupling is exactly what enable them to optimize
+a large system of equally coupled and nested decisions. The main contribution of 
+future research will be to provide a shared memory software pattern that can be 
+used to scale metaheuristics given metaheuristics unique architectual requirements.
 
 \section{Conclusion}
-Many current planning problems that industry faces are combinatorial by nature, 
-and many combinatorial problems have to be solved continuously to make operations 
-run efficiently. For operation research (OR) to be helpful in this process, the solution methods 
-should be a minimally invasive in the workflow of the working stakeholders. 
-The AbLNS solution approach detailed in this paper aligns
-closely with two known problems in operation research: the lack of integration and the issues of 
-coordination in multi-actor processes. For these reasons we argue that the
-"standard" Operations Research approach of first collecting data, then creating a
-model and optimizing it, and then finally providing the solution to the planners
-in the company workflow, is not a scalable approach in many situations.
+Many current planning problems that industry faces are combinatorial by
+nature, and many combinatorial problems have to be solved continuously to
+make operations run efficiently. For operation research (OR) to be helpful
+in this process, the solution methods should be a minimally invasive in the
+workflow of the working stakeholders. The AbLNS solution approach detailed in
+this paper aligns closely with two known problems in operation research: the
+lack of integration and the issues of coordination in multi-actor processes.
+For these reasons we argue that the ``standard'' Operations Research approach
+of first collecting data, then creating a model and optimizing it, and then
+finally providing the solution to the planners in the company workflow, is not a
+scalable approach in many situations.
 
-We have here demonstrated that the AbLNS approach works in a practical 
-maintenance scheduling setting at Total Energies.
-
-We believe that this
-approach of combining a number of smaller planning/optimization problems with
-different actors/stakeholders responsible for their part of the overall
-solution is the future way of integrating Operation Research techniques in practice.
+We have here demonstrated that the AbLNS approach works in a practical
+maintenance scheduling setting at Total Energies. We believe that this approach
+of combining a number of smaller planning/optimization problems with different
+actors/stakeholders responsible for their part of the overall solution is the
+future way of integrating Operation Research techniques in practice.
 
 Modern industrial companies also have the available IT-infrastructure to support
-and connect model/metaheuristics together with the relevant actors/stakeholders 
-in a way that was not possible just 10 years ago. 
+and connect model/metaheuristics together with the relevant actors/stakeholders
+in a way that was not possible just 10 years ago.
 
 This also align with anacdotal evidence from practical operation research 
-that smaller "quick and dirty" often works better in practice. 
+that smaller ``quick and dirty'' often works better in practice. 
 
-
-The fundamental problem with the "older" paradigm is that optimizing across
+The fundamental problem with the ``older'' paradigm is that optimizing across
 actors/stakeholders is very difficult, leading the literature to prefer
 integrated models instead of decomposing the model by each of the
 processes that make up a business process such as maintenance scheduling.
