--- a/papers/actor-based-large-neighborhood-search/tex/solution_method.tex
+++ b/papers/actor-based-large-neighborhood-search/tex/solution_method.tex
@@ -112,12 +112,15 @@ optimization algorithms are deemed unworkable.
 
 \subsection{Atomic Pointer Swapping and Software Architecture}
 Atomic pointer swapping offers a novel approach for managing the best
-solution found by the Actor-based Large Neighborhood Search (AbLNS) algorithm.
+solution found by the AbLNS (and LNS) algorithm.
 Traditionally, in a metaheuristics such as Large Neighborhood Search (LNS)
 setup, the best solution is cloned (deep copy) before the search continues. However, atomic
 pointer swapping enables the best solution to be shared across system components
 without introducing data races. This technique is essential in multithreaded
-environments, as it ensures the integrity of the solution during swaps. In
+environments, as it ensures the integrity of the solution during swaps, elaborated on in 
+\citep{herlihy2020art}. Multiprocessor programming has long been considered an art but 
+in recent years new tools have emerged to make this esoteric type of programming much 
+easier most notably \citep{noauthor_rust_nodate} In
 software architecture, scaling is often achieved through vertical scaling
 (lengthening the dataflow) and horizontal scaling (increasing throughput)
 via message passing. While effective in many domains, this approach poses
