--- a/papers/actor-based-large-neighborhood-search/tex/discussion.tex
+++ b/papers/actor-based-large-neighborhood-search/tex/discussion.tex
@@ -79,9 +79,11 @@ Figure~\ref{fig:discussion:hexagon-setup} shows one such possible setup.
 
 \begin{figure}
 	\input{../../figures/model-setup-hexagon.tex}
-	\drawModelSetupHexagon[metaheuristics=true]
-	\caption{A setup of metaheuristics in a architecture where solutions are shared 
-		between AbLNS algorithms in real-time through the use of atomic pointer swaps
+	\drawModelSetupHexagon[simplified=true]
+	\caption{A software architecture tailored to metaheuristics (green and red)
+		where solutions are shared between AbLNS algorithms in real-time through the
+		use of atomic pointer swaps (purple). The messages in $m_{n}^{}(\tau)$ are
+		inputted through userinterfaces (yellow)
 	}\label{fig:discussion:hexagon-setup}
 \end{figure}
 
