--- a/figures/model-setup-hexagon.tex
+++ b/figures/model-setup-hexagon.tex
@@ -9,6 +9,7 @@
 \newif\ifmetaheuristicslayer
 \newif\ifuserinterfacelayer
 \newif\iforchestratorlayer
+\newif\ifsimplifiedlayer
 
 \pgfkeys{
 	/hexagon/.is family, /hexagon,
@@ -18,12 +19,14 @@
 		metaheuristics=false,
 		orchestrator=false,
 		userinterface=false,
+		simplified=false,
 	},
 	persistence/.is if=persistencelayer,
 	atomicpointerswap/.is if=atomicpointerswaplayer,
 	metaheuristics/.is if=metaheuristicslayer,
 	orchestrator/.is if=orchestratorlayer,
 	userinterface/.is if=userinterfacelayer,
+	simplified/.is if=simplifiedlayer,
 }
 \newcommand{\drawModelSetupHexagon}[1][]{
 	\pgfkeys{/hexagon, default, #1}
@@ -86,6 +89,50 @@
 		\node[align=right, anchor=west] at ({15.0}, -0.75) {Orchestration};
 		\drawHexagon{{14.0  }}{-3.0}{dtu-white}{}{0.75}
 		\node[align=right, anchor=west] at ({15.0}, -2.25) {User interfaces};
+	\fi
+
+	\ifsimplifiedlayer
+		\node[align=right, anchor=west] at ({-5.5}, +17.0) {Layer One};
+		\drawHexagon{{+2 + 0 * (2 - sqrt(3)) }}{14}{dtu-purple}{Shared\\Atomic\\Pointer}{2}
+		\drawHexagon{{+4 - 1 * (2 - sqrt(3)) }}{11}{dtu-purple}{Shared\\Atomic\\Pointer}{2}
+		\drawHexagon{{+0 + 1 * (2 - sqrt(3)) }}{11}{dtu-purple}{Shared\\Atomic\\Pointer}{2}
+		\drawHexagon{{+2 - 0 * (2 - sqrt(3)) }}{8}{dtu-purple}{Shared\\Atomic\\Pointer}{2}
+		\drawHexagon{{+6 - 2 * (2 - sqrt(3)) }}{8}{dtu-purple}{Shared\\Atomic\\Pointer}{2}
+		\drawHexagon{{-2 + 2 * (2 - sqrt(3)) }}{8}{dtu-purple}{Shared\\Atomic\\Pointer}{2}
+		\drawHexagon{{+8 - 3 * (2 - sqrt(3)) }}{11}{dtu-purple}{Shared\\Atomic\\Pointer}{2}
+		\drawHexagon{{-4 + 3 * (2 - sqrt(3)) }}{11}{dtu-purple}{Shared\\Atomic\\Pointer}{2}
+
+		\node[align=right, anchor=west] at ({10.5}, +17.00) {Layer Two};
+		\drawHexagon{{18 + 0 * (2 - sqrt(3)) }}{14}{dtu-green}{Scheduler}{2}
+		\drawHexagon{{20 - 1 * (2 - sqrt(3)) }}{11}{dtu-red}{Supervisor}{2}
+		\drawHexagon{{16 + 1 * (2 - sqrt(3)) }}{11}{dtu-red}{Supervisor}{2}
+		\drawHexagon{{18 - 0 * (2 - sqrt(3)) }}{8}{dtu-corporate-red}{Technician}{2}
+		\drawHexagon{{22 - 2 * (2 - sqrt(3)) }}{8}{dtu-corporate-red}{Technician}{2}
+		\drawHexagon{{14 + 2 * (2 - sqrt(3)) }}{8}{dtu-corporate-red}{Technician}{2}
+		\drawHexagon{{24 - 3 * (2 - sqrt(3)) }}{11}{dtu-corporate-red}{Technician}{2}
+		\drawHexagon{{12 + 3 * (2 - sqrt(3)) }}{11}{dtu-corporate-red}{Technician}{2}
+
+		\node[align=right, anchor=west] at ({-5.5}, 5) {Layer Three};
+		\drawHexagon{{+2 + 0 * (2 - sqrt(3)) }}{ 2}{dtu-yellow}{UI}{2}
+		\drawHexagon{{+4 - 1 * (2 - sqrt(3)) }}{-1}{dtu-yellow}{UI}{2}
+		\drawHexagon{{+0 + 1 * (2 - sqrt(3)) }}{-1}{dtu-yellow}{UI}{2}
+		\drawHexagon{{+2 - 0 * (2 - sqrt(3)) }}{-4}{dtu-yellow}{UI}{2}
+		\drawHexagon{{+6 - 2 * (2 - sqrt(3)) }}{-4}{dtu-yellow}{UI}{2}
+		\drawHexagon{{-2 + 2 * (2 - sqrt(3)) }}{-4}{dtu-yellow}{UI}{2}
+		\drawHexagon{{+8 - 3 * (2 - sqrt(3)) }}{-1}{dtu-yellow}{UI}{2}
+		\drawHexagon{{-4 + 3 * (2 - sqrt(3)) }}{-1}{dtu-yellow}{UI}{2}
+
+		% Legend for each layer
+		\node[align=right, anchor=west] at ({15.0}, +3.75) {Atomic Pointer};
+		\drawHexagon{{14.0  }}{+3.0}{dtu-purple}{}{0.75}
+		\node[align=right, anchor=west] at ({15.0}, +2.25) {Scheduler Metaheuristic};
+		\drawHexagon{{14.0  }}{+1.5}{dtu-green}{}{0.75}
+		\node[align=right, anchor=west] at ({15.0}, +0.75) {Supervisor Metaheuristic};
+		\drawHexagon{{14.0  }}{+0.0}{dtu-red}{}{0.75}
+		\node[align=right, anchor=west] at ({15.0}, -0.75) {Technician Metaheuristic};
+		\drawHexagon{{14.0  }}{-1.5}{dtu-corporate-red}{}{0.75}
+		\node[align=right, anchor=west] at ({15.0}, -2.25) {User interfaces (Message Passing)};
+		\drawHexagon{{14.0  }}{-3.0}{dtu-yellow}{}{0.75}
 	\fi
 
 	\ifmetaheuristicslayer
