--- a/papers/optimizing-a-maintenance-scheduling-system-through-the-use-of-atomic-pointer-swaps/tex/introduction.tex
+++ b/papers/optimizing-a-maintenance-scheduling-system-through-the-use-of-atomic-pointer-swaps/tex/introduction.tex
@@ -1,6 +1,10 @@
 \section{Introduction}
 
 
+
+
+
+\subsection{}
 The future research direction is to demonstrate that
 the actor-based approach described here can be used to model and optimize 
 multi-actor/multi-level scheduling processes. 
