--- a/papers/actor-based-large-neighborhood-search/figures/strategic_objective_value_resource_addition_plot.tex
+++ b/papers/actor-based-large-neighborhood-search/figures/strategic_objective_value_resource_addition_plot.tex
@@ -1,242 +1,370 @@
 \tikzpicture[gnuplot]
 %% generated with GNUPLOT 6.0p1 (Lua 5.2; terminal rev. Jun 2020, script rev. 118)
-%% fre 03 jan 2025 11:53:43 CET
+%% Tue 07 Jan 2025 09:05:22 AM UTC
 \path (0.000,0.000) rectangle (16.000,12.000);
 \gpcolor{rgb color={0.753,0.753,0.753}}
 \gpsetlinetype{gp lt border}
 \gpsetdashtype{gp dt solid}
 \gpsetlinewidth{2.00}
-\draw[gp path] (2.424,1.845)--(15.447,1.845);
+\draw[gp path] (2.240,1.845)--(13.667,1.845);
 \gpcolor{color=gp lt color border}
 \gpsetlinewidth{1.00}
-\draw[gp path] (2.424,1.845)--(2.604,1.845);
-\draw[gp path] (15.447,1.845)--(15.267,1.845);
-\node[gp node right] at (2.240,1.845) {$1.85\times10^{11}$};
+\draw[gp path] (2.240,1.845)--(2.420,1.845);
+\node[gp node right] at (2.056,1.845) {$8.7\times10^{10}$};
 \gpcolor{rgb color={0.753,0.753,0.753}}
 \gpsetlinewidth{2.00}
-\draw[gp path] (2.424,2.999)--(15.447,2.999);
+\draw[gp path] (2.240,2.871)--(13.667,2.871);
 \gpcolor{color=gp lt color border}
 \gpsetlinewidth{1.00}
-\draw[gp path] (2.424,2.999)--(2.604,2.999);
-\draw[gp path] (15.447,2.999)--(15.267,2.999);
-\node[gp node right] at (2.240,2.999) {$1.9\times10^{11}$};
+\draw[gp path] (2.240,2.871)--(2.420,2.871);
+\node[gp node right] at (2.056,2.871) {$8.8\times10^{10}$};
 \gpcolor{rgb color={0.753,0.753,0.753}}
 \gpsetlinewidth{2.00}
-\draw[gp path] (2.424,4.153)--(15.447,4.153);
+\draw[gp path] (2.240,3.896)--(13.667,3.896);
 \gpcolor{color=gp lt color border}
 \gpsetlinewidth{1.00}
-\draw[gp path] (2.424,4.153)--(2.604,4.153);
-\draw[gp path] (15.447,4.153)--(15.267,4.153);
-\node[gp node right] at (2.240,4.153) {$1.95\times10^{11}$};
+\draw[gp path] (2.240,3.896)--(2.420,3.896);
+\node[gp node right] at (2.056,3.896) {$8.9\times10^{10}$};
 \gpcolor{rgb color={0.753,0.753,0.753}}
 \gpsetlinewidth{2.00}
-\draw[gp path] (2.424,5.306)--(15.447,5.306);
+\draw[gp path] (2.240,4.922)--(13.667,4.922);
 \gpcolor{color=gp lt color border}
 \gpsetlinewidth{1.00}
-\draw[gp path] (2.424,5.306)--(2.604,5.306);
-\draw[gp path] (15.447,5.306)--(15.267,5.306);
-\node[gp node right] at (2.240,5.306) {$2\times10^{11}$};
+\draw[gp path] (2.240,4.922)--(2.420,4.922);
+\node[gp node right] at (2.056,4.922) {$9\times10^{10}$};
 \gpcolor{rgb color={0.753,0.753,0.753}}
 \gpsetlinewidth{2.00}
-\draw[gp path] (2.424,6.460)--(15.447,6.460);
+\draw[gp path] (2.240,5.947)--(13.667,5.947);
 \gpcolor{color=gp lt color border}
 \gpsetlinewidth{1.00}
-\draw[gp path] (2.424,6.460)--(2.604,6.460);
-\draw[gp path] (15.447,6.460)--(15.267,6.460);
-\node[gp node right] at (2.240,6.460) {$2.05\times10^{11}$};
+\draw[gp path] (2.240,5.947)--(2.420,5.947);
+\node[gp node right] at (2.056,5.947) {$9.1\times10^{10}$};
 \gpcolor{rgb color={0.753,0.753,0.753}}
 \gpsetlinewidth{2.00}
-\draw[gp path] (2.424,7.614)--(15.447,7.614);
+\draw[gp path] (2.240,6.973)--(13.667,6.973);
 \gpcolor{color=gp lt color border}
 \gpsetlinewidth{1.00}
-\draw[gp path] (2.424,7.614)--(2.604,7.614);
-\draw[gp path] (15.447,7.614)--(15.267,7.614);
-\node[gp node right] at (2.240,7.614) {$2.1\times10^{11}$};
+\draw[gp path] (2.240,6.973)--(2.420,6.973);
+\node[gp node right] at (2.056,6.973) {$9.2\times10^{10}$};
 \gpcolor{rgb color={0.753,0.753,0.753}}
 \gpsetlinewidth{2.00}
-\draw[gp path] (2.424,8.768)--(15.447,8.768);
+\draw[gp path] (2.240,7.998)--(13.667,7.998);
 \gpcolor{color=gp lt color border}
 \gpsetlinewidth{1.00}
-\draw[gp path] (2.424,8.768)--(2.604,8.768);
-\draw[gp path] (15.447,8.768)--(15.267,8.768);
-\node[gp node right] at (2.240,8.768) {$2.15\times10^{11}$};
+\draw[gp path] (2.240,7.998)--(2.420,7.998);
+\node[gp node right] at (2.056,7.998) {$9.3\times10^{10}$};
 \gpcolor{rgb color={0.753,0.753,0.753}}
 \gpsetlinewidth{2.00}
-\draw[gp path] (2.424,9.921)--(15.447,9.921);
+\draw[gp path] (2.240,9.024)--(13.667,9.024);
 \gpcolor{color=gp lt color border}
 \gpsetlinewidth{1.00}
-\draw[gp path] (2.424,9.921)--(2.604,9.921);
-\draw[gp path] (15.447,9.921)--(15.267,9.921);
-\node[gp node right] at (2.240,9.921) {$2.2\times10^{11}$};
+\draw[gp path] (2.240,9.024)--(2.420,9.024);
+\node[gp node right] at (2.056,9.024) {$9.4\times10^{10}$};
 \gpcolor{rgb color={0.753,0.753,0.753}}
 \gpsetlinewidth{2.00}
-\draw[gp path] (2.424,11.075)--(15.447,11.075);
+\draw[gp path] (2.240,10.049)--(7.047,10.049);
+\draw[gp path] (13.483,10.049)--(13.667,10.049);
 \gpcolor{color=gp lt color border}
 \gpsetlinewidth{1.00}
-\draw[gp path] (2.424,11.075)--(2.604,11.075);
-\draw[gp path] (15.447,11.075)--(15.267,11.075);
-\node[gp node right] at (2.240,11.075) {$2.25\times10^{11}$};
+\draw[gp path] (2.240,10.049)--(2.420,10.049);
+\node[gp node right] at (2.056,10.049) {$9.5\times10^{10}$};
 \gpcolor{rgb color={0.753,0.753,0.753}}
 \gpsetlinewidth{2.00}
-\draw[gp path] (2.424,1.845)--(2.424,11.075);
+\draw[gp path] (2.240,11.075)--(13.667,11.075);
 \gpcolor{color=gp lt color border}
 \gpsetlinewidth{1.00}
-\draw[gp path] (2.424,1.845)--(2.424,2.025);
-\draw[gp path] (2.424,11.075)--(2.424,10.895);
-\node[gp node left,rotate=270] at (2.424,1.661) {$0$};
+\draw[gp path] (2.240,11.075)--(2.420,11.075);
+\node[gp node right] at (2.056,11.075) {$9.6\times10^{10}$};
 \gpcolor{rgb color={0.753,0.753,0.753}}
 \gpsetlinewidth{2.00}
-\draw[gp path] (4.595,1.845)--(4.595,11.075);
+\draw[gp path] (2.240,1.845)--(2.240,11.075);
 \gpcolor{color=gp lt color border}
 \gpsetlinewidth{1.00}
-\draw[gp path] (4.595,1.845)--(4.595,2.025);
-\draw[gp path] (4.595,11.075)--(4.595,10.895);
-\node[gp node left,rotate=270] at (4.595,1.661) {$50$};
+\draw[gp path] (2.240,1.845)--(2.240,2.025);
+\draw[gp path] (2.240,11.075)--(2.240,10.895);
+\node[gp node left,rotate=270] at (2.240,1.661) {$0$};
 \gpcolor{rgb color={0.753,0.753,0.753}}
 \gpsetlinewidth{2.00}
-\draw[gp path] (6.765,1.845)--(6.765,11.075);
+\draw[gp path] (4.145,1.845)--(4.145,11.075);
 \gpcolor{color=gp lt color border}
 \gpsetlinewidth{1.00}
-\draw[gp path] (6.765,1.845)--(6.765,2.025);
-\draw[gp path] (6.765,11.075)--(6.765,10.895);
-\node[gp node left,rotate=270] at (6.765,1.661) {$100$};
+\draw[gp path] (4.145,1.845)--(4.145,2.025);
+\draw[gp path] (4.145,11.075)--(4.145,10.895);
+\node[gp node left,rotate=270] at (4.145,1.661) {$50$};
 \gpcolor{rgb color={0.753,0.753,0.753}}
 \gpsetlinewidth{2.00}
-\draw[gp path] (8.936,1.845)--(8.936,11.075);
+\draw[gp path] (6.049,1.845)--(6.049,11.075);
 \gpcolor{color=gp lt color border}
 \gpsetlinewidth{1.00}
-\draw[gp path] (8.936,1.845)--(8.936,2.025);
-\draw[gp path] (8.936,11.075)--(8.936,10.895);
-\node[gp node left,rotate=270] at (8.936,1.661) {$150$};
+\draw[gp path] (6.049,1.845)--(6.049,2.025);
+\draw[gp path] (6.049,11.075)--(6.049,10.895);
+\node[gp node left,rotate=270] at (6.049,1.661) {$100$};
 \gpcolor{rgb color={0.753,0.753,0.753}}
 \gpsetlinewidth{2.00}
-\draw[gp path] (11.106,1.845)--(11.106,11.075);
+\draw[gp path] (7.954,1.845)--(7.954,9.355);
+\draw[gp path] (7.954,10.895)--(7.954,11.075);
 \gpcolor{color=gp lt color border}
 \gpsetlinewidth{1.00}
-\draw[gp path] (11.106,1.845)--(11.106,2.025);
-\draw[gp path] (11.106,11.075)--(11.106,10.895);
-\node[gp node left,rotate=270] at (11.106,1.661) {$200$};
+\draw[gp path] (7.954,1.845)--(7.954,2.025);
+\draw[gp path] (7.954,11.075)--(7.954,10.895);
+\node[gp node left,rotate=270] at (7.954,1.661) {$150$};
 \gpcolor{rgb color={0.753,0.753,0.753}}
 \gpsetlinewidth{2.00}
-\draw[gp path] (13.277,1.845)--(13.277,11.075);
+\draw[gp path] (9.858,1.845)--(9.858,9.355);
+\draw[gp path] (9.858,10.895)--(9.858,11.075);
 \gpcolor{color=gp lt color border}
 \gpsetlinewidth{1.00}
-\draw[gp path] (13.277,1.845)--(13.277,2.025);
-\draw[gp path] (13.277,11.075)--(13.277,10.895);
-\node[gp node left,rotate=270] at (13.277,1.661) {$250$};
+\draw[gp path] (9.858,1.845)--(9.858,2.025);
+\draw[gp path] (9.858,11.075)--(9.858,10.895);
+\node[gp node left,rotate=270] at (9.858,1.661) {$200$};
 \gpcolor{rgb color={0.753,0.753,0.753}}
 \gpsetlinewidth{2.00}
-\draw[gp path] (15.447,1.845)--(15.447,11.075);
+\draw[gp path] (11.763,1.845)--(11.763,9.355);
+\draw[gp path] (11.763,10.895)--(11.763,11.075);
 \gpcolor{color=gp lt color border}
 \gpsetlinewidth{1.00}
-\draw[gp path] (15.447,1.845)--(15.447,2.025);
-\draw[gp path] (15.447,11.075)--(15.447,10.895);
-\node[gp node left,rotate=270] at (15.447,1.661) {$300$};
-\draw[gp path] (2.424,11.075)--(2.424,1.845)--(15.447,1.845)--(15.447,11.075)--cycle;
+\draw[gp path] (11.763,1.845)--(11.763,2.025);
+\draw[gp path] (11.763,11.075)--(11.763,10.895);
+\node[gp node left,rotate=270] at (11.763,1.661) {$250$};
+\gpcolor{rgb color={0.753,0.753,0.753}}
+\gpsetlinewidth{2.00}
+\draw[gp path] (13.667,1.845)--(13.667,11.075);
+\gpcolor{color=gp lt color border}
+\gpsetlinewidth{1.00}
+\draw[gp path] (13.667,1.845)--(13.667,2.025);
+\draw[gp path] (13.667,11.075)--(13.667,10.895);
+\node[gp node left,rotate=270] at (13.667,1.661) {$300$};
+\draw[gp path] (13.667,1.845)--(13.487,1.845);
+\node[gp node left] at (13.851,1.845) {$95000$};
+\draw[gp path] (13.667,3.383)--(13.487,3.383);
+\node[gp node left] at (13.851,3.383) {$100000$};
+\draw[gp path] (13.667,4.922)--(13.487,4.922);
+\node[gp node left] at (13.851,4.922) {$105000$};
+\draw[gp path] (13.667,6.460)--(13.487,6.460);
+\node[gp node left] at (13.851,6.460) {$110000$};
+\draw[gp path] (13.667,7.998)--(13.487,7.998);
+\node[gp node left] at (13.851,7.998) {$115000$};
+\draw[gp path] (13.667,9.537)--(13.487,9.537);
+\node[gp node left] at (13.851,9.537) {$120000$};
+\draw[gp path] (13.667,11.075)--(13.487,11.075);
+\node[gp node left] at (13.851,11.075) {$125000$};
+\draw[gp path] (2.240,11.075)--(2.240,1.845)--(13.667,1.845)--(13.667,11.075)--cycle;
+\draw[gp path] (7.047,9.355)--(7.047,10.895)--(13.483,10.895)--(13.483,9.355)--cycle;
+\node[gp node right] at (12.199,10.510) {Strategic urgency};
 \gpcolor{rgb color={0.000,0.000,0.000}}
-\gpsetlinewidth{2.00}
-\draw[gp path] (2.424,10.112)--(2.424,10.096)--(2.424,10.064)--(2.424,10.062)--(2.424,10.030)%
-  --(2.424,10.023)--(2.424,10.001)--(2.424,9.993)--(2.424,9.967)--(2.424,9.949)--(2.467,9.916)%
-  --(2.467,9.892)--(2.467,9.874)--(2.467,9.852)--(2.467,9.832)--(2.467,9.823)--(2.467,9.820)%
-  --(2.467,9.805)--(2.467,9.800)--(2.467,9.799)--(2.467,9.789)--(2.467,9.779)--(2.467,9.768)%
-  --(2.467,9.764)--(2.467,9.758)--(2.467,9.748)--(2.467,9.742)--(2.467,9.741)--(2.467,9.739)%
-  --(2.467,9.722)--(2.467,9.719)--(2.467,9.713)--(2.511,9.698)--(2.511,9.695)--(2.511,9.693)%
-  --(2.511,9.692)--(2.511,9.687)--(2.511,9.685)--(2.511,9.657)--(2.511,9.651)--(2.554,9.648)%
-  --(2.554,9.639)--(2.554,9.623)--(2.554,9.617)--(2.554,9.615)--(2.598,9.607)--(2.598,9.596)%
-  --(2.598,9.594)--(2.598,9.592)--(2.598,9.588)--(2.598,9.585)--(2.641,9.582)--(2.641,9.581)%
-  --(2.641,9.577)--(2.641,9.576)--(2.684,9.573)--(2.684,9.562)--(2.684,9.560)--(2.684,9.552)%
-  --(2.728,9.550)--(2.771,9.549)--(2.771,9.548)--(2.815,9.548)--(2.815,9.544)--(2.902,9.542)%
-  --(2.945,9.541)--(2.945,9.540)--(2.945,9.538)--(2.988,9.533)--(2.988,9.531)--(2.988,9.530)%
-  --(3.162,9.530)--(3.162,9.527)--(3.292,9.526)--(3.379,9.526)--(3.379,9.522)--(3.422,9.521)%
-  --(3.422,9.518)--(3.466,9.517)--(3.509,9.515)--(3.553,9.515)--(3.596,9.511)--(3.596,9.510)%
-  --(3.726,9.510)--(3.770,9.509)--(3.857,9.508)--(3.987,9.507)--(4.030,9.505)--(4.074,9.505)%
-  --(4.074,9.503)--(4.204,9.502)--(4.291,9.500)--(4.377,9.499)--(4.421,9.499)--(4.464,9.499)%
-  --(4.551,9.498)--(4.551,9.495)--(4.812,9.494)--(4.942,9.493)--(4.985,9.491)--(5.159,9.491)%
-  --(5.246,9.489)--(5.376,9.488)--(5.419,9.484)--(5.463,9.484)--(5.463,9.483)--(5.506,9.483)%
-  --(5.506,9.481)--(5.767,9.478)--(5.853,9.477)--(5.940,9.477)--(6.070,9.475)--(6.505,9.473)%
-  --(6.505,9.470)--(6.591,9.469)--(6.591,9.468)--(6.678,9.467)--(6.678,7.882)--(6.678,7.844)%
-  --(6.678,7.759)--(6.722,7.717)--(6.722,7.667)--(6.722,7.640)--(6.722,7.572)--(6.722,7.533)%
-  --(6.722,7.469)--(6.722,7.302)--(6.722,7.283)--(6.722,7.268)--(6.722,7.225)--(6.722,7.207)%
-  --(6.722,7.178)--(6.722,7.135)--(6.722,7.119)--(6.722,7.001)--(6.722,6.900)--(6.722,6.871)%
-  --(6.722,6.838)--(6.722,6.784)--(6.722,6.763)--(6.722,6.758)--(6.722,6.726)--(6.722,6.645)%
-  --(6.722,6.627)--(6.722,6.600)--(6.722,6.515)--(6.722,6.489)--(6.722,6.431)--(6.722,6.376)%
-  --(6.722,6.340)--(6.722,6.263)--(6.722,6.233)--(6.722,6.228)--(6.722,6.204)--(6.722,6.165)%
-  --(6.722,6.148)--(6.722,6.128)--(6.722,6.066)--(6.722,6.003)--(6.722,5.988)--(6.722,5.977)%
-  --(6.722,5.964)--(6.722,5.936)--(6.722,5.926)--(6.722,5.908)--(6.722,5.903)--(6.722,5.885)%
-  --(6.722,5.823)--(6.722,5.817)--(6.722,5.805)--(6.722,5.765)--(6.722,5.745)--(6.765,5.734)%
-  --(6.765,5.670)--(6.765,5.654)--(6.765,5.651)--(6.765,5.635)--(6.765,5.601)--(6.765,5.551)%
-  --(6.765,5.548)--(6.765,5.534)--(6.765,5.525)--(6.765,5.484)--(6.765,5.483)--(6.765,5.478)%
-  --(6.765,5.460)--(6.765,5.459)--(6.765,5.453)--(6.765,5.435)--(6.765,5.428)--(6.765,5.413)%
-  --(6.765,5.412)--(6.765,5.403)--(6.765,5.401)--(6.765,5.385)--(6.765,5.375)--(6.765,5.357)%
-  --(6.765,5.316)--(6.765,5.315)--(6.765,5.314)--(6.765,5.306)--(6.765,5.292)--(6.765,5.278)%
-  --(6.765,5.273)--(6.765,5.265)--(6.765,5.263)--(6.808,5.247)--(6.808,5.244)--(6.808,5.240)%
-  --(6.808,5.231)--(6.808,5.229)--(6.808,5.214)--(6.808,5.213)--(6.808,5.143)--(6.808,5.136)%
-  --(6.808,5.132)--(6.808,5.087)--(6.808,5.086)--(6.808,5.078)--(6.808,5.076)--(6.808,5.075)%
-  --(6.808,5.074)--(6.808,5.060)--(6.808,5.056)--(6.808,5.055)--(6.808,5.051)--(6.808,5.033)%
-  --(6.808,5.030)--(6.808,5.027)--(6.808,5.023)--(6.808,5.018)--(6.808,5.017)--(6.852,5.014)%
-  --(6.852,5.010)--(6.852,5.006)--(6.852,5.005)--(6.852,5.000)--(6.852,4.993)--(6.852,4.980)%
-  --(6.852,4.969)--(6.852,4.963)--(6.852,4.960)--(6.852,4.953)--(6.852,4.948)--(6.895,4.947)%
-  --(6.895,4.942)--(6.895,4.935)--(6.895,4.929)--(6.895,4.928)--(6.895,4.925)--(6.895,4.920)%
-  --(6.895,4.918)--(6.895,4.915)--(6.895,4.911)--(6.895,4.908)--(6.895,4.903)--(6.895,4.899)%
-  --(6.895,4.896)--(6.939,4.893)--(6.939,4.887)--(6.939,4.858)--(6.939,4.854)--(6.939,4.852)%
-  --(6.939,4.849)--(6.939,4.848)--(6.939,4.841)--(6.982,4.838)--(6.982,4.837)--(6.982,4.834)%
-  --(6.982,4.833)--(7.025,4.832)--(7.025,4.831)--(7.025,4.829)--(7.025,4.822)--(7.025,4.820)%
-  --(7.069,4.818)--(7.069,4.816)--(7.069,4.815)--(7.069,4.812)--(7.069,4.811)--(7.069,4.806)%
-  --(7.112,4.805)--(7.112,4.804)--(7.112,4.801)--(7.112,4.799)--(7.112,4.794)--(7.112,4.793)%
-  --(7.156,4.788)--(7.156,4.786)--(7.199,4.784)--(7.199,4.783)--(7.243,4.781)--(7.243,4.779)%
-  --(7.243,4.778)--(7.243,4.777)--(7.243,4.774)--(7.243,4.771)--(7.329,4.770)--(7.329,4.769)%
-  --(7.373,4.766)--(7.373,4.765)--(7.373,4.763)--(7.373,4.762)--(7.416,4.761)--(7.416,4.760)%
-  --(7.416,4.754)--(7.416,4.750)--(7.416,4.749)--(7.416,4.748)--(7.416,4.747)--(7.416,4.746)%
-  --(7.460,4.741)--(7.460,4.740)--(7.460,4.738)--(7.460,4.737)--(7.503,4.735)--(7.590,4.734)%
-  --(7.633,4.734)--(7.633,4.732)--(7.633,4.729)--(7.677,4.728)--(7.677,4.727)--(7.677,4.726)%
-  --(7.677,4.724)--(7.720,4.723)--(7.720,4.722)--(7.763,4.719)--(7.763,4.717)--(7.763,4.713)%
-  --(7.763,4.711)--(7.763,4.710)--(7.894,4.708)--(7.894,4.706)--(7.894,4.703)--(7.937,4.702)%
-  --(7.937,4.700)--(8.024,4.699)--(8.024,4.697)--(8.067,4.697)--(8.067,4.696)--(8.111,4.695)%
-  --(8.198,4.694)--(8.198,4.691)--(8.241,4.691)--(8.241,4.689)--(8.284,4.689)--(8.284,4.687)%
-  --(8.328,4.686)--(8.328,4.685)--(8.415,4.683)--(8.458,4.681)--(8.501,4.680)--(8.545,4.680)%
-  --(8.675,4.679)--(8.675,4.677)--(8.718,4.676)--(8.718,4.674)--(8.762,4.672)--(8.762,4.671)%
-  --(8.805,4.670)--(8.849,4.669)--(8.892,4.668)--(8.979,4.668)--(9.196,4.667)--(9.239,4.667)%
-  --(9.283,4.664)--(9.326,4.663)--(9.456,4.660)--(9.587,4.660)--(10.151,4.659)--(10.238,4.657)%
-  --(10.281,4.657)--(10.325,4.657)--(10.932,4.655)--(11.063,3.489)--(11.063,3.482)--(11.063,3.469)%
-  --(11.063,3.460)--(11.063,3.447)--(11.063,3.436)--(11.063,3.418)--(11.063,3.403)--(11.063,3.313)%
-  --(11.063,3.298)--(11.063,3.242)--(11.063,3.240)--(11.063,3.148)--(11.063,3.137)--(11.063,3.136)%
-  --(11.063,3.090)--(11.063,3.045)--(11.063,3.037)--(11.063,3.035)--(11.063,3.032)--(11.063,2.958)%
-  --(11.063,2.951)--(11.063,2.950)--(11.063,2.862)--(11.063,2.853)--(11.063,2.851)--(11.063,2.845)%
-  --(11.063,2.838)--(11.063,2.836)--(11.063,2.831)--(11.063,2.823)--(11.063,2.820)--(11.063,2.817)%
-  --(11.106,2.816)--(11.106,2.783)--(11.106,2.782)--(11.106,2.780)--(11.106,2.669)--(11.106,2.667)%
-  --(11.106,2.663)--(11.106,2.662)--(11.106,2.661)--(11.106,2.658)--(11.106,2.656)--(11.106,2.648)%
-  --(11.106,2.646)--(11.106,2.642)--(11.106,2.641)--(11.106,2.570)--(11.106,2.569)--(11.106,2.533)%
-  --(11.106,2.529)--(11.106,2.522)--(11.106,2.519)--(11.149,2.518)--(11.149,2.516)--(11.149,2.515)%
-  --(11.149,2.511)--(11.149,2.500)--(11.149,2.499)--(11.149,2.439)--(11.149,2.438)--(11.149,2.435)%
-  --(11.149,2.433)--(11.149,2.431)--(11.149,2.427)--(11.193,2.425)--(11.193,2.424)--(11.193,2.420)%
-  --(11.193,2.417)--(11.193,2.416)--(11.193,2.415)--(11.193,2.409)--(11.193,2.406)--(11.193,2.404)%
-  --(11.193,2.402)--(11.193,2.400)--(11.193,2.398)--(11.193,2.397)--(11.236,2.394)--(11.236,2.393)%
-  --(11.236,2.389)--(11.236,2.384)--(11.236,2.383)--(11.236,2.382)--(11.280,2.378)--(11.280,2.377)%
-  --(11.280,2.371)--(11.323,2.371)--(11.323,2.369)--(11.323,2.368)--(11.323,2.366)--(11.323,2.364)%
-  --(11.323,2.363)--(11.366,2.362)--(11.366,2.359)--(11.366,2.358)--(11.366,2.357)--(11.366,2.350)%
-  --(11.366,2.349)--(11.410,2.349)--(11.410,2.348)--(11.410,2.332)--(11.410,2.330)--(11.410,2.329)%
-  --(11.453,2.327)--(11.497,2.325)--(11.497,2.324)--(11.497,2.320)--(11.540,2.316)--(11.540,2.315)%
-  --(11.540,2.313)--(11.540,2.312)--(11.540,2.311)--(11.540,2.310)--(11.584,2.310)--(11.584,2.309)%
-  --(11.584,2.308)--(11.584,2.307)--(11.584,2.306)--(11.627,2.306)--(11.627,2.305)--(11.670,2.305)%
-  --(11.670,2.303)--(11.670,2.302)--(11.714,2.300)--(11.714,2.299)--(11.757,2.298)--(11.757,2.295)%
-  --(11.801,2.295)--(11.801,2.292)--(11.801,2.291)--(11.801,2.290)--(11.844,2.289)--(11.887,2.288)%
-  --(11.887,2.286)--(11.887,2.285)--(11.887,2.283)--(11.887,2.280)--(11.931,2.277)--(11.974,2.275)%
-  --(12.018,2.272)--(12.018,2.271)--(12.018,2.270)--(12.061,2.270)--(12.061,2.268)--(12.104,2.266)%
-  --(12.104,2.265)--(12.104,2.264)--(12.148,2.264)--(12.148,2.263)--(12.148,2.262)--(12.191,2.262)%
-  --(12.191,2.261)--(12.191,2.259)--(12.235,2.258)--(12.235,2.257)--(12.235,2.256)--(12.278,2.256)%
-  --(12.321,2.255)--(12.321,2.254)--(12.365,2.253)--(12.365,2.252)--(12.408,2.252)--(12.452,2.251)%
-  --(12.495,2.251)--(12.495,2.250)--(12.495,2.244)--(12.539,2.243)--(12.539,2.242)--(12.582,2.240)%
-  --(12.582,2.239)--(12.669,2.238)--(12.669,2.237)--(12.886,2.236)--(12.929,2.235)--(12.973,2.235)%
-  --(13.016,2.234)--(13.059,2.233)--(13.103,2.231)--(13.146,2.230)--(13.146,2.229)--(13.190,2.228)%
-  --(13.233,2.227)--(13.233,2.226)--(13.320,2.225)--(13.450,2.224)--(13.494,2.224)--(13.494,2.223)%
-  --(13.537,2.222)--(13.537,2.220)--(13.537,2.219)--(13.580,2.218)--(13.580,2.216)--(13.624,2.215);
+\gpsetlinewidth{2.50}
+\draw[gp path] (12.383,10.510)--(13.299,10.510);
+\draw[gp path] (2.240,7.517)--(2.240,7.551)--(2.240,7.600)--(2.240,7.903)--(2.240,7.962)%
+  --(2.240,8.146)--(2.240,8.334)--(2.240,8.398)--(2.240,8.561)--(2.240,8.642)--(2.240,8.621)%
+  --(2.240,8.683)--(2.240,8.680)--(2.240,8.805)--(2.240,8.804)--(2.278,9.038)--(2.278,9.062)%
+  --(2.278,9.118)--(2.278,9.101)--(2.278,9.153)--(2.278,9.168)--(2.278,9.240)--(2.278,9.287)%
+  --(2.278,9.377)--(2.278,9.421)--(2.278,9.398)--(2.278,9.463)--(2.278,9.505)--(2.278,9.517)%
+  --(2.278,9.557)--(2.278,9.587)--(2.278,9.577)--(2.278,9.597)--(2.278,9.704)--(2.278,9.717)%
+  --(2.278,9.720)--(2.278,9.732)--(2.278,9.718)--(2.278,9.701)--(2.278,9.725)--(2.278,9.768)%
+  --(2.278,9.782)--(2.278,9.847)--(2.278,9.854)--(2.278,9.849)--(2.278,9.852)--(2.278,9.883)%
+  --(2.278,9.825)--(2.278,9.859)--(2.278,9.953)--(2.278,9.971)--(2.278,9.960)--(2.278,10.034)%
+  --(2.316,10.041)--(2.316,10.053)--(2.316,10.080)--(2.316,10.093)--(2.316,10.098)--(2.316,10.130)%
+  --(2.316,10.235)--(2.316,10.266)--(2.316,10.265)--(2.316,10.263)--(2.316,10.252)--(2.316,10.311)%
+  --(2.316,10.304)--(2.316,10.313)--(2.316,10.261)--(2.316,10.268)--(2.316,10.256)--(2.316,10.264)%
+  --(2.316,10.293)--(2.316,10.261)--(2.316,10.266)--(2.316,10.247)--(2.316,10.270)--(2.354,10.361)%
+  --(2.354,10.357)--(2.354,10.332)--(2.354,10.359)--(2.354,10.363)--(2.354,10.333)--(2.392,10.359)%
+  --(2.392,10.358)--(2.392,10.398)--(2.392,10.407)--(2.392,10.389)--(2.392,10.371)--(2.392,10.370)%
+  --(2.392,10.376)--(2.392,10.401)--(2.392,10.398)--(2.392,10.396)--(2.392,10.381)--(2.392,10.362)%
+  --(2.430,10.366)--(2.430,10.391)--(2.430,10.394)--(2.469,10.367)--(2.469,10.358)--(2.469,10.328)%
+  --(2.469,10.341)--(2.469,10.308)--(2.469,10.318)--(2.469,10.325)--(2.469,10.328)--(2.507,10.310)%
+  --(2.507,10.330)--(2.507,10.335)--(2.507,10.332)--(2.507,10.325)--(2.507,10.316)--(2.545,10.308)%
+  --(2.545,10.305)--(2.545,10.302)--(2.545,10.311)--(2.545,10.304)--(2.583,10.298)--(2.583,10.311)%
+  --(2.583,10.314)--(2.583,10.309)--(2.621,10.305)--(2.621,10.284)--(2.621,10.279)--(2.621,10.283)%
+  --(2.621,10.285)--(2.621,10.274)--(2.659,10.282)--(2.659,10.265)--(2.735,10.250)--(2.773,10.245)%
+  --(2.888,10.243)--(2.926,10.223)--(3.002,10.224)--(3.040,10.221)--(3.040,10.204)--(3.154,10.202)%
+  --(3.154,10.208)--(3.154,10.202)--(3.154,10.203)--(3.154,10.206)--(3.192,10.206)--(3.192,10.204)%
+  --(3.230,10.214)--(3.230,10.220)--(3.268,10.222)--(3.268,10.237)--(3.307,10.234)--(3.307,10.226)%
+  --(3.307,10.223)--(3.345,10.222)--(3.383,10.217)--(3.383,10.286)--(3.421,10.276)--(3.459,10.275)%
+  --(3.497,10.277)--(3.497,10.285)--(3.535,10.291)--(3.573,10.291)--(3.611,10.277)--(3.611,10.266)%
+  --(3.649,10.265)--(3.649,10.272)--(3.649,10.271)--(3.687,10.269)--(3.764,10.265)--(3.954,10.256)%
+  --(3.954,10.254)--(3.954,10.255)--(3.954,10.229)--(3.992,10.192)--(3.992,10.195)--(4.030,10.198)%
+  --(4.068,10.199)--(4.068,10.221)--(4.106,10.220)--(4.106,10.217)--(4.145,10.211)--(4.145,10.209)%
+  --(4.183,10.205)--(4.221,10.212)--(4.259,10.209)--(4.297,10.218)--(4.297,10.212)--(4.297,10.206)%
+  --(4.335,10.199)--(4.411,10.198)--(4.449,10.196)--(4.449,10.185)--(4.487,10.185)--(4.487,10.165)%
+  --(4.487,10.156)--(4.525,10.147)--(4.602,10.145)--(4.640,10.147)--(4.640,10.148)--(4.640,10.125)%
+  --(4.792,10.119)--(4.868,10.115)--(4.944,10.111)--(5.097,10.107)--(5.173,10.106)--(5.211,10.100)%
+  --(5.249,10.099)--(5.249,10.119)--(5.325,10.129)--(5.668,10.118)--(5.744,10.094)--(5.782,10.090)%
+  --(5.782,10.089)--(5.859,10.088)--(6.011,9.926)--(6.011,9.747)--(6.011,9.663)--(6.011,9.477)%
+  --(6.011,9.272)--(6.011,9.169)--(6.011,9.103)--(6.011,9.132)--(6.011,8.943)--(6.011,8.868)%
+  --(6.011,8.739)--(6.011,8.654)--(6.011,8.612)--(6.011,8.546)--(6.011,8.480)--(6.011,8.257)%
+  --(6.011,8.163)--(6.011,8.153)--(6.011,8.106)--(6.011,7.902)--(6.011,7.798)--(6.011,7.788)%
+  --(6.011,7.738)--(6.011,7.672)--(6.011,7.680)--(6.011,7.652)--(6.011,7.651)--(6.011,7.657)%
+  --(6.011,7.599)--(6.011,7.598)--(6.011,7.697)--(6.011,7.665)--(6.011,7.633)--(6.011,7.590)%
+  --(6.011,7.587)--(6.011,7.571)--(6.011,7.550)--(6.011,7.529)--(6.011,7.520)--(6.011,7.504)%
+  --(6.011,7.483)--(6.011,7.446)--(6.011,7.479)--(6.011,7.499)--(6.011,7.463)--(6.011,7.470)%
+  --(6.011,7.487)--(6.011,7.426)--(6.011,7.404)--(6.011,7.327)--(6.011,7.310)--(6.011,7.251)%
+  --(6.011,7.272)--(6.049,7.249)--(6.049,7.262)--(6.049,7.246)--(6.049,7.219)--(6.049,7.165)%
+  --(6.049,7.192)--(6.049,7.222)--(6.049,7.103)--(6.049,7.128)--(6.049,7.116)--(6.049,7.137)%
+  --(6.049,7.133)--(6.049,7.127)--(6.049,7.177)--(6.049,7.164)--(6.049,7.147)--(6.049,7.163)%
+  --(6.049,7.130)--(6.049,7.099)--(6.049,7.136)--(6.049,7.043)--(6.049,7.045)--(6.049,7.051)%
+  --(6.049,7.093)--(6.049,7.131)--(6.049,7.112)--(6.049,7.159)--(6.049,7.115)--(6.049,7.427)%
+  --(6.049,7.482)--(6.049,7.494)--(6.049,7.435)--(6.049,7.402)--(6.049,7.318)--(6.049,7.340)%
+  --(6.049,7.303)--(6.049,7.300)--(6.049,7.287)--(6.049,7.266)--(6.049,7.368)--(6.049,7.416)%
+  --(6.049,7.338)--(6.049,7.302)--(6.049,7.205)--(6.049,7.230)--(6.049,7.287)--(6.049,7.282)%
+  --(6.049,7.309)--(6.049,7.228)--(6.049,7.238)--(6.049,7.256)--(6.049,7.209)--(6.049,7.182)%
+  --(6.049,7.176)--(6.049,7.162)--(6.049,7.147)--(6.049,7.121)--(6.049,7.113)--(6.049,7.159)%
+  --(6.049,7.093)--(6.049,7.016)--(6.049,7.046)--(6.049,7.029)--(6.087,6.993)--(6.087,6.972)%
+  --(6.087,7.030)--(6.087,7.045)--(6.087,7.064)--(6.087,7.051)--(6.087,7.088)--(6.087,7.012)%
+  --(6.087,6.997)--(6.087,7.059)--(6.087,7.036)--(6.087,6.997)--(6.087,7.042)--(6.087,7.035)%
+  --(6.087,7.022)--(6.087,7.034)--(6.087,7.059)--(6.087,7.022)--(6.087,6.982)--(6.087,6.951)%
+  --(6.087,6.892)--(6.087,6.855)--(6.087,6.847)--(6.087,6.832)--(6.087,6.818)--(6.087,6.781)%
+  --(6.087,6.777)--(6.087,6.758)--(6.087,6.756)--(6.087,6.737)--(6.087,6.711)--(6.125,6.693)%
+  --(6.125,6.673)--(6.125,6.670)--(6.125,6.668)--(6.125,6.647)--(6.125,6.641)--(6.125,6.618)%
+  --(6.125,6.651)--(6.125,6.643)--(6.125,6.638)--(6.125,6.618)--(6.125,6.604)--(6.125,6.582)%
+  --(6.125,6.574)--(6.125,6.569)--(6.125,6.564)--(6.125,6.543)--(6.125,6.556)--(6.125,6.524)%
+  --(6.125,6.515)--(6.125,6.514)--(6.125,6.510)--(6.125,6.503)--(6.125,6.470)--(6.125,6.435)%
+  --(6.163,6.461)--(6.163,6.446)--(6.163,6.421)--(6.163,6.419)--(6.163,6.415)--(6.163,6.410)%
+  --(6.163,6.402)--(6.163,6.389)--(6.163,6.383)--(6.163,6.367)--(6.163,6.352)--(6.163,6.335)%
+  --(6.201,6.331)--(6.201,6.317)--(6.201,6.275)--(6.201,6.259)--(6.201,6.250)--(6.201,6.238)%
+  --(6.201,6.219)--(6.201,6.210)--(6.201,6.200)--(6.201,6.181)--(6.239,6.159)--(6.239,6.131)%
+  --(6.239,6.121)--(6.239,6.112)--(6.239,6.101)--(6.239,6.082)--(6.239,6.064)--(6.239,6.062)%
+  --(6.239,6.060)--(6.278,6.058)--(6.278,6.049)--(6.278,6.044)--(6.278,6.034)--(6.316,6.022)%
+  --(6.316,6.017)--(6.316,6.016)--(6.316,6.014)--(6.354,6.005)--(6.354,5.991)--(6.392,5.977)%
+  --(6.392,5.971)--(6.392,5.986)--(6.430,5.973)--(6.430,5.982)--(6.430,5.975)--(6.430,5.965)%
+  --(6.468,5.965)--(6.468,5.946)--(6.468,5.941)--(6.468,5.938)--(6.506,5.938)--(6.544,5.921)%
+  --(6.544,5.915)--(6.544,5.907)--(6.544,5.906)--(6.544,5.905)--(6.544,5.892)--(6.582,5.871)%
+  --(6.582,5.863)--(6.582,5.861)--(6.620,5.860)--(6.658,5.859)--(6.658,5.855)--(6.658,5.852)%
+  --(6.697,5.850)--(6.697,5.848)--(6.735,5.830)--(6.735,5.824)--(6.773,5.815)--(6.773,5.808)%
+  --(6.773,5.806)--(6.887,5.796)--(6.887,5.793)--(6.887,5.792)--(6.887,5.781)--(6.887,5.780)%
+  --(6.925,5.773)--(7.001,5.768)--(7.001,5.753)--(7.001,5.750)--(7.039,5.749)--(7.039,5.737)%
+  --(7.077,5.731)--(7.077,5.723)--(7.077,5.718)--(7.154,5.716)--(7.154,5.706)--(7.154,5.704)%
+  --(7.154,5.702)--(7.192,5.699)--(7.192,5.692)--(7.192,5.690)--(7.192,5.688)--(7.230,5.686)%
+  --(7.230,5.683)--(7.230,5.676)--(7.230,5.658)--(7.268,5.656)--(7.268,5.645)--(7.268,5.639)%
+  --(7.306,5.631)--(7.306,5.618)--(7.420,5.618)--(7.420,5.617)--(7.420,5.611)--(7.458,5.610)%
+  --(7.496,5.609)--(7.535,5.605)--(7.535,5.586)--(7.535,5.578)--(7.535,5.576)--(7.535,5.565)%
+  --(7.573,5.552)--(7.573,5.546)--(7.573,5.542)--(7.611,5.539)--(7.649,5.538)--(7.687,5.536)%
+  --(7.687,5.534)--(7.725,5.530)--(7.763,5.529)--(7.801,5.528)--(7.801,5.522)--(7.801,5.517)%
+  --(7.801,5.515)--(7.801,5.503)--(7.801,5.499)--(7.839,5.485)--(7.877,5.482)--(7.954,5.478)%
+  --(7.992,5.474)--(8.030,5.468)--(8.068,5.465)--(8.182,5.456)--(8.296,5.456)--(8.334,5.448)%
+  --(8.411,5.444)--(8.525,5.443)--(8.563,5.442)--(8.563,5.437)--(8.601,5.436)--(8.677,5.434)%
+  --(8.715,5.430)--(8.715,5.424)--(8.753,5.423)--(8.830,5.421)--(8.830,5.415)--(8.868,5.414)%
+  --(8.906,5.413)--(9.172,5.407)--(9.172,5.406)--(9.172,5.405)--(9.210,5.400)--(9.249,5.397)%
+  --(9.249,5.391)--(9.477,5.389)--(9.515,5.386)--(9.515,5.384)--(9.553,5.384)--(9.629,5.383)%
+  --(9.629,5.381)--(9.706,5.379)--(9.782,5.376)--(9.820,5.323)--(9.820,5.156)--(9.820,4.935)%
+  --(9.820,4.802)--(9.820,4.721)--(9.820,4.680)--(9.820,4.584)--(9.820,4.533)--(9.820,4.500)%
+  --(9.820,4.490)--(9.820,4.429)--(9.820,4.391)--(9.820,4.358)--(9.820,4.319)--(9.820,4.310)%
+  --(9.820,4.283)--(9.820,4.214)--(9.820,4.202)--(9.820,4.122)--(9.820,4.110)--(9.820,4.099)%
+  --(9.820,4.051)--(9.820,4.040)--(9.820,3.617)--(9.820,3.616)--(9.820,3.613)--(9.858,3.575)%
+  --(9.858,3.554)--(9.858,3.544)--(9.858,3.543)--(9.858,3.537)--(9.858,3.526)--(9.858,3.488)%
+  --(9.858,3.472)--(9.858,3.469)--(9.858,3.433)--(9.858,3.406)--(9.858,3.379)--(9.858,3.366)%
+  --(9.858,3.289)--(9.858,3.327)--(9.858,3.310)--(9.858,3.309)--(9.858,3.296)--(9.858,3.282)%
+  --(9.858,3.258)--(9.858,2.919)--(9.858,2.900)--(9.858,2.884)--(9.858,2.865)--(9.858,2.857)%
+  --(9.858,2.868)--(9.858,2.860)--(9.858,2.853)--(9.858,2.849)--(9.896,2.843)--(9.896,2.833)%
+  --(9.896,2.827)--(9.896,2.816)--(9.896,2.808)--(9.896,2.793)--(9.896,2.776)--(9.896,2.765)%
+  --(9.896,2.756)--(9.896,2.753)--(9.934,2.738)--(9.934,2.715)--(9.934,2.711)--(9.934,2.694)%
+  --(9.934,2.676)--(9.934,2.675)--(9.934,2.664)--(9.934,2.656)--(9.972,2.646)--(9.972,2.642)%
+  --(9.972,2.630)--(10.010,2.628)--(10.010,2.625)--(10.010,2.623)--(10.010,2.621)--(10.048,2.608)%
+  --(10.048,2.605)--(10.048,2.592)--(10.048,2.586)--(10.048,2.584)--(10.048,2.575)--(10.087,2.574)%
+  --(10.087,2.564)--(10.087,2.557)--(10.087,2.552)--(10.087,2.540)--(10.087,2.539)--(10.087,2.537)%
+  --(10.087,2.536)--(10.087,2.523)--(10.125,2.508)--(10.125,2.497)--(10.125,2.468)--(10.125,2.462)%
+  --(10.125,2.459)--(10.125,2.455)--(10.125,2.453)--(10.125,2.452)--(10.125,2.441)--(10.125,2.427)%
+  --(10.125,2.423)--(10.163,2.411)--(10.163,2.409)--(10.201,2.398)--(10.201,2.392)--(10.201,2.369)%
+  --(10.239,2.369)--(10.239,2.368)--(10.239,2.367)--(10.239,2.362)--(10.239,2.360)--(10.277,2.354)%
+  --(10.277,2.352)--(10.277,2.447)--(10.277,2.429)--(10.277,2.387)--(10.277,2.381)--(10.277,2.373)%
+  --(10.315,2.370)--(10.315,2.369)--(10.315,2.368)--(10.315,2.345)--(10.315,2.343)--(10.315,2.326)%
+  --(10.353,2.320)--(10.391,2.318)--(10.391,2.315)--(10.391,2.313)--(10.391,2.307)--(10.391,2.304)%
+  --(10.391,2.301)--(10.429,2.295)--(10.429,2.279)--(10.467,2.278)--(10.467,2.268)--(10.467,2.261)%
+  --(10.506,2.256)--(10.506,2.249)--(10.506,2.246)--(10.544,2.240)--(10.582,2.234)--(10.582,2.232)%
+  --(10.582,2.224)--(10.582,2.217)--(10.620,2.214)--(10.620,2.209)--(10.620,2.207)--(10.658,2.204)%
+  --(10.658,2.197)--(10.734,2.195)--(10.734,2.194)--(10.734,2.191)--(10.734,2.188)--(10.772,2.188)%
+  --(10.772,2.185)--(10.810,2.180)--(10.848,2.174)--(10.848,2.166)--(10.886,2.162)--(10.886,2.160)%
+  --(10.886,2.156)--(10.925,2.156)--(10.925,2.155)--(10.925,2.149)--(10.925,2.146)--(10.925,2.138)%
+  --(10.925,2.134)--(11.077,2.131)--(11.115,2.127)--(11.153,2.127)--(11.191,2.123)--(11.229,2.122)%
+  --(11.267,2.121)--(11.267,2.113)--(11.305,2.112)--(11.534,2.111)--(11.572,2.111)--(11.572,2.102)%
+  --(11.610,2.098)--(11.610,2.096)--(11.648,2.091)--(11.648,2.090)--(11.648,2.086)--(11.648,2.082)%
+  --(11.648,2.081)--(11.686,2.078)--(11.686,2.077)--(11.724,2.073)--(11.763,2.073)--(11.801,2.071)%
+  --(11.801,2.070)--(11.801,2.055)--(11.801,2.048)--(11.839,2.047)--(11.915,2.046)--(11.915,2.044)%
+  --(11.915,2.042)--(11.915,2.040)--(11.953,2.040)--(11.991,2.039)--(11.991,2.037)--(12.029,2.034)%
+  --(12.029,2.032)--(12.067,2.030)--(12.067,2.029);
+\gpcolor{color=gp lt color border}
+\node[gp node right] at (12.199,9.740) {Strategic Resource penalty};
+\gpcolor{rgb color={0.184,0.243,0.918}}
+\draw[gp path] (12.383,9.740)--(13.299,9.740);
+\draw[gp path] (2.240,10.849)--(2.240,10.806)--(2.240,10.731)--(2.240,10.666)--(2.240,10.604)%
+  --(2.240,10.560)--(2.240,10.513)--(2.240,10.469)--(2.240,10.419)--(2.240,10.384)--(2.240,10.378)%
+  --(2.240,10.340)--(2.240,10.303)--(2.240,10.274)--(2.240,10.267)--(2.278,10.239)--(2.278,10.238)%
+  --(2.278,10.224)--(2.278,10.218)--(2.278,10.210)--(2.278,10.198)--(2.278,10.191)--(2.278,10.155)%
+  --(2.278,10.152)--(2.278,10.149)--(2.278,10.142)--(2.278,10.138)--(2.278,10.131)--(2.278,10.128)%
+  --(2.278,10.127)--(2.278,10.123)--(2.278,10.120)--(2.278,10.102)--(2.278,10.098)--(2.278,10.090)%
+  --(2.278,10.087)--(2.278,10.086)--(2.278,10.085)--(2.278,10.070)--(2.278,10.066)--(2.278,10.055)%
+  --(2.278,10.043)--(2.278,10.039)--(2.278,10.031)--(2.278,10.025)--(2.278,10.022)--(2.278,10.006)%
+  --(2.278,9.999)--(2.278,9.998)--(2.278,9.989)--(2.278,9.974)--(2.278,9.960)--(2.278,9.956)%
+  --(2.278,9.948)--(2.316,9.945)--(2.316,9.934)--(2.316,9.925)--(2.316,9.922)--(2.316,9.921)%
+  --(2.316,9.911)--(2.316,9.908)--(2.316,9.904)--(2.316,9.902)--(2.316,9.895)--(2.316,9.892)%
+  --(2.316,9.890)--(2.316,9.888)--(2.316,9.878)--(2.316,9.872)--(2.316,9.867)--(2.316,9.866)%
+  --(2.316,9.864)--(2.316,9.865)--(2.316,9.863)--(2.316,9.862)--(2.316,9.861)--(2.354,9.858)%
+  --(2.354,9.857)--(2.354,9.856)--(2.354,9.855)--(2.354,9.852)--(2.392,9.851)--(2.392,9.847)%
+  --(2.392,9.846)--(2.392,9.839)--(2.392,9.834)--(2.392,9.833)--(2.392,9.828)--(2.392,9.821)%
+  --(2.392,9.820)--(2.392,9.818)--(2.392,9.813)--(2.430,9.812)--(2.430,9.809)--(2.430,9.805)%
+  --(2.469,9.806)--(2.469,9.805)--(2.469,9.804)--(2.469,9.800)--(2.469,9.794)--(2.469,9.791)%
+  --(2.507,9.788)--(2.507,9.787)--(2.507,9.785)--(2.507,9.783)--(2.507,9.781)--(2.545,9.780)%
+  --(2.545,9.778)--(2.545,9.777)--(2.583,9.773)--(2.583,9.772)--(2.583,9.770)--(2.583,9.769)%
+  --(2.621,9.769)--(2.621,9.768)--(2.621,9.766)--(2.659,9.758)--(2.735,9.758)--(2.773,9.758)%
+  --(2.888,9.758)--(2.926,9.757)--(3.002,9.755)--(3.040,9.752)--(3.154,9.751)--(3.154,9.750)%
+  --(3.154,9.748)--(3.154,9.747)--(3.154,9.745)--(3.192,9.744)--(3.230,9.743)--(3.230,9.737)%
+  --(3.268,9.730)--(3.307,9.730)--(3.307,9.727)--(3.345,9.727)--(3.383,9.727)--(3.383,9.724)%
+  --(3.421,9.724)--(3.459,9.720)--(3.497,9.719)--(3.497,9.717)--(3.535,9.716)--(3.573,9.716)%
+  --(3.611,9.716)--(3.611,9.715)--(3.611,9.714)--(3.649,9.714)--(3.687,9.711)--(3.764,9.711)%
+  --(3.954,9.710)--(3.992,9.709)--(4.030,9.708)--(4.068,9.707)--(4.068,9.705)--(4.106,9.705)%
+  --(4.145,9.705)--(4.183,9.705)--(4.221,9.703)--(4.259,9.703)--(4.297,9.703)--(4.297,9.702)%
+  --(4.335,9.702)--(4.411,9.702)--(4.449,9.699)--(4.487,9.699)--(4.487,9.698)--(4.525,9.698)%
+  --(4.602,9.697)--(4.640,9.697)--(4.640,9.695)--(4.792,9.695)--(4.868,9.695)--(4.944,9.695)%
+  --(5.097,9.695)--(5.173,9.695)--(5.211,9.695)--(5.249,9.695)--(5.249,9.694)--(5.325,9.693)%
+  --(5.668,9.694)--(5.744,9.694)--(5.782,9.694)--(5.859,9.694)--(6.011,7.848)--(6.011,7.713)%
+  --(6.011,7.613)--(6.011,7.546)--(6.011,7.466)--(6.011,7.396)--(6.011,7.324)--(6.011,7.289)%
+  --(6.011,7.219)--(6.011,7.193)--(6.011,7.072)--(6.011,6.990)--(6.011,6.924)--(6.011,6.843)%
+  --(6.011,6.822)--(6.011,6.714)--(6.011,6.626)--(6.011,6.593)--(6.011,6.585)--(6.011,6.498)%
+  --(6.011,6.433)--(6.011,6.389)--(6.011,6.374)--(6.011,6.362)--(6.011,6.349)--(6.011,6.329)%
+  --(6.011,6.257)--(6.011,6.223)--(6.011,6.138)--(6.011,6.133)--(6.011,6.120)--(6.011,6.099)%
+  --(6.011,6.094)--(6.011,6.083)--(6.011,6.044)--(6.011,6.015)--(6.011,5.941)--(6.011,5.935)%
+  --(6.011,5.881)--(6.011,5.786)--(6.011,5.776)--(6.011,5.753)--(6.011,5.735)--(6.011,5.722)%
+  --(6.011,5.717)--(6.011,5.698)--(6.011,5.677)--(6.011,5.599)--(6.011,5.523)--(6.011,5.505)%
+  --(6.011,5.491)--(6.049,5.486)--(6.049,5.478)--(6.049,5.421)--(6.049,5.417)--(6.049,5.365)%
+  --(6.049,5.356)--(6.049,5.305)--(6.049,5.299)--(6.049,5.264)--(6.049,5.256)--(6.049,5.208)%
+  --(6.049,5.203)--(6.049,5.085)--(6.049,5.066)--(6.049,5.055)--(6.049,5.051)--(6.049,4.988)%
+  --(6.049,4.986)--(6.049,4.896)--(6.049,4.891)--(6.049,4.886)--(6.049,4.879)--(6.049,4.818)%
+  --(6.049,4.811)--(6.049,4.787)--(6.049,4.743)--(6.049,4.739)--(6.049,4.737)--(6.049,4.726)%
+  --(6.049,4.719)--(6.049,4.720)--(6.049,4.715)--(6.049,4.676)--(6.049,4.665)--(6.049,4.661)%
+  --(6.049,4.657)--(6.049,4.648)--(6.049,4.644)--(6.049,4.631)--(6.049,4.630)--(6.049,4.548)%
+  --(6.049,4.536)--(6.049,4.504)--(6.049,4.501)--(6.049,4.479)--(6.049,4.472)--(6.049,4.452)%
+  --(6.049,4.429)--(6.049,4.425)--(6.049,4.422)--(6.087,4.422)--(6.087,4.418)--(6.087,4.407)%
+  --(6.087,4.393)--(6.087,4.385)--(6.087,4.382)--(6.087,4.381)--(6.087,4.376)--(6.087,4.368)%
+  --(6.087,4.364)--(6.087,4.360)--(6.087,4.358)--(6.087,4.355)--(6.125,4.355)--(6.125,4.352)%
+  --(6.125,4.349)--(6.125,4.348)--(6.125,4.347)--(6.125,4.344)--(6.163,4.341)--(6.201,4.341)%
+  --(6.239,4.341)--(6.278,4.341)--(6.316,4.341)--(6.354,4.341)--(6.392,4.341)--(6.430,4.341)%
+  --(6.430,4.340)--(6.468,4.340)--(6.506,4.340)--(6.544,4.340)--(6.582,4.340)--(6.620,4.340)%
+  --(6.658,4.340)--(6.697,4.340)--(6.735,4.340)--(6.773,4.340)--(6.887,4.340)--(6.925,4.340)%
+  --(7.001,4.340)--(7.039,4.340)--(7.077,4.340)--(7.154,4.340)--(7.192,4.340)--(7.230,4.340)%
+  --(7.268,4.340)--(7.306,4.340)--(7.420,4.340)--(7.458,4.340)--(7.496,4.340)--(7.535,4.340)%
+  --(7.573,4.340)--(7.611,4.340)--(7.649,4.340)--(7.687,4.340)--(7.725,4.340)--(7.763,4.340)%
+  --(7.801,4.340)--(7.839,4.340)--(7.877,4.340)--(7.954,4.340)--(7.992,4.340)--(8.030,4.340)%
+  --(8.068,4.340)--(8.182,4.340)--(8.296,4.340)--(8.334,4.340)--(8.411,4.340)--(8.525,4.340)%
+  --(8.563,4.340)--(8.601,4.340)--(8.677,4.340)--(8.715,4.340)--(8.753,4.340)--(8.830,4.340)%
+  --(8.868,4.340)--(8.906,4.340)--(9.172,4.340)--(9.210,4.340)--(9.249,4.340)--(9.477,4.340)%
+  --(9.515,4.340)--(9.553,4.340)--(9.629,4.340)--(9.706,4.340)--(9.782,4.340)--(9.820,3.036)%
+  --(9.820,2.968)--(9.820,2.880)--(9.820,2.809)--(9.820,2.746)--(9.820,2.695)--(9.820,2.627)%
+  --(9.858,2.627)--(9.858,2.566)--(9.858,2.419)--(9.858,2.366)--(9.858,2.261)--(9.896,2.261)%
+  --(9.934,2.261)--(9.972,2.261)--(10.010,2.261)--(10.048,2.261)--(10.087,2.261)--(10.125,2.261)%
+  --(10.163,2.261)--(10.201,2.261)--(10.239,2.261)--(10.277,2.261)--(10.277,2.175)--(10.315,2.175)%
+  --(10.353,2.175)--(10.391,2.175)--(10.429,2.175)--(10.467,2.175)--(10.506,2.175)--(10.544,2.175)%
+  --(10.582,2.175)--(10.620,2.175)--(10.658,2.175)--(10.734,2.175)--(10.772,2.175)--(10.810,2.175)%
+  --(10.848,2.175)--(10.886,2.175)--(10.925,2.175)--(11.077,2.175)--(11.115,2.175)--(11.153,2.175)%
+  --(11.191,2.175)--(11.229,2.175)--(11.267,2.175)--(11.305,2.175)--(11.534,2.175)--(11.572,2.175)%
+  --(11.610,2.175)--(11.648,2.175)--(11.686,2.175)--(11.724,2.175)--(11.763,2.175)--(11.801,2.175)%
+  --(11.839,2.175)--(11.915,2.175)--(11.953,2.175)--(11.991,2.175)--(12.029,2.175)--(12.067,2.175);
 \gpcolor{color=gp lt color border}
 \gpsetlinewidth{1.00}
-\draw[gp path] (2.424,11.075)--(2.424,1.845)--(15.447,1.845)--(15.447,11.075)--cycle;
+\draw[gp path] (2.240,11.075)--(2.240,1.845)--(13.667,1.845)--(13.667,11.075)--cycle;
 \node[gp node center,rotate=-270] at (-0.812,6.460) {Objective value};
-\node[gp node center] at (8.935,0.215) {Relative time ($\tau$) [S]};
-\node[gp node center] at (8.935,11.537) {Objective value for Weekly Schedule};
+\node[gp node center,rotate=-270] at (16.397,6.460) {Resource Penalty [Hours]};
+\node[gp node center] at (7.953,0.215) {Relative time ($\tau$) [S]};
+\node[gp node center] at (7.953,11.537) {Objective Value for Weekly Schedule};
 %% coordinates of the plot area
-\gpdefrectangularnode{gp plot 1}{\pgfpoint{2.424cm}{1.845cm}}{\pgfpoint{15.447cm}{11.075cm}}
+\gpdefrectangularnode{gp plot 1}{\pgfpoint{2.240cm}{1.845cm}}{\pgfpoint{13.667cm}{11.075cm}}
 \endtikzpicture
 %% gnuplot variables
