--- a/papers/actor-based-large-neighborhood-search/figures/strategic_objective_value_resource_subtraction_plot.tex
+++ b/papers/actor-based-large-neighborhood-search/figures/strategic_objective_value_resource_subtraction_plot.tex
@@ -1,211 +1,353 @@
 \tikzpicture[gnuplot]
 %% generated with GNUPLOT 6.0p1 (Lua 5.2; terminal rev. Jun 2020, script rev. 118)
-%% fre 03 jan 2025 11:58:20 CET
+%% Tue 07 Jan 2025 09:09:53 AM UTC
 \path (0.000,0.000) rectangle (16.000,12.000);
 \gpcolor{rgb color={0.753,0.753,0.753}}
 \gpsetlinetype{gp lt border}
 \gpsetdashtype{gp dt solid}
 \gpsetlinewidth{2.00}
-\draw[gp path] (2.424,1.845)--(15.447,1.845);
+\draw[gp path] (2.240,1.845)--(13.667,1.845);
 \gpcolor{color=gp lt color border}
 \gpsetlinewidth{1.00}
-\draw[gp path] (2.424,1.845)--(2.604,1.845);
-\draw[gp path] (15.447,1.845)--(15.267,1.845);
-\node[gp node right] at (2.240,1.845) {$1.8\times10^{11}$};
+\draw[gp path] (2.240,1.845)--(2.420,1.845);
+\node[gp node right] at (2.056,1.845) {$8.5\times10^{10}$};
 \gpcolor{rgb color={0.753,0.753,0.753}}
 \gpsetlinewidth{2.00}
-\draw[gp path] (2.424,3.383)--(15.447,3.383);
+\draw[gp path] (2.240,2.871)--(13.667,2.871);
 \gpcolor{color=gp lt color border}
 \gpsetlinewidth{1.00}
-\draw[gp path] (2.424,3.383)--(2.604,3.383);
-\draw[gp path] (15.447,3.383)--(15.267,3.383);
-\node[gp node right] at (2.240,3.383) {$1.85\times10^{11}$};
+\draw[gp path] (2.240,2.871)--(2.420,2.871);
+\node[gp node right] at (2.056,2.871) {$8.6\times10^{10}$};
 \gpcolor{rgb color={0.753,0.753,0.753}}
 \gpsetlinewidth{2.00}
-\draw[gp path] (2.424,4.922)--(15.447,4.922);
+\draw[gp path] (2.240,3.896)--(13.667,3.896);
 \gpcolor{color=gp lt color border}
 \gpsetlinewidth{1.00}
-\draw[gp path] (2.424,4.922)--(2.604,4.922);
-\draw[gp path] (15.447,4.922)--(15.267,4.922);
-\node[gp node right] at (2.240,4.922) {$1.9\times10^{11}$};
+\draw[gp path] (2.240,3.896)--(2.420,3.896);
+\node[gp node right] at (2.056,3.896) {$8.7\times10^{10}$};
 \gpcolor{rgb color={0.753,0.753,0.753}}
 \gpsetlinewidth{2.00}
-\draw[gp path] (2.424,6.460)--(15.447,6.460);
+\draw[gp path] (2.240,4.922)--(13.667,4.922);
 \gpcolor{color=gp lt color border}
 \gpsetlinewidth{1.00}
-\draw[gp path] (2.424,6.460)--(2.604,6.460);
-\draw[gp path] (15.447,6.460)--(15.267,6.460);
-\node[gp node right] at (2.240,6.460) {$1.95\times10^{11}$};
+\draw[gp path] (2.240,4.922)--(2.420,4.922);
+\node[gp node right] at (2.056,4.922) {$8.8\times10^{10}$};
 \gpcolor{rgb color={0.753,0.753,0.753}}
 \gpsetlinewidth{2.00}
-\draw[gp path] (2.424,7.998)--(15.447,7.998);
+\draw[gp path] (2.240,5.947)--(13.667,5.947);
 \gpcolor{color=gp lt color border}
 \gpsetlinewidth{1.00}
-\draw[gp path] (2.424,7.998)--(2.604,7.998);
-\draw[gp path] (15.447,7.998)--(15.267,7.998);
-\node[gp node right] at (2.240,7.998) {$2\times10^{11}$};
+\draw[gp path] (2.240,5.947)--(2.420,5.947);
+\node[gp node right] at (2.056,5.947) {$8.9\times10^{10}$};
 \gpcolor{rgb color={0.753,0.753,0.753}}
 \gpsetlinewidth{2.00}
-\draw[gp path] (2.424,9.537)--(15.447,9.537);
+\draw[gp path] (2.240,6.973)--(13.667,6.973);
 \gpcolor{color=gp lt color border}
 \gpsetlinewidth{1.00}
-\draw[gp path] (2.424,9.537)--(2.604,9.537);
-\draw[gp path] (15.447,9.537)--(15.267,9.537);
-\node[gp node right] at (2.240,9.537) {$2.05\times10^{11}$};
+\draw[gp path] (2.240,6.973)--(2.420,6.973);
+\node[gp node right] at (2.056,6.973) {$9\times10^{10}$};
 \gpcolor{rgb color={0.753,0.753,0.753}}
 \gpsetlinewidth{2.00}
-\draw[gp path] (2.424,11.075)--(15.447,11.075);
+\draw[gp path] (2.240,7.998)--(13.667,7.998);
 \gpcolor{color=gp lt color border}
 \gpsetlinewidth{1.00}
-\draw[gp path] (2.424,11.075)--(2.604,11.075);
-\draw[gp path] (15.447,11.075)--(15.267,11.075);
-\node[gp node right] at (2.240,11.075) {$2.1\times10^{11}$};
+\draw[gp path] (2.240,7.998)--(2.420,7.998);
+\node[gp node right] at (2.056,7.998) {$9.1\times10^{10}$};
 \gpcolor{rgb color={0.753,0.753,0.753}}
 \gpsetlinewidth{2.00}
-\draw[gp path] (2.424,1.845)--(2.424,11.075);
+\draw[gp path] (2.240,9.024)--(13.667,9.024);
 \gpcolor{color=gp lt color border}
 \gpsetlinewidth{1.00}
-\draw[gp path] (2.424,1.845)--(2.424,2.025);
-\draw[gp path] (2.424,11.075)--(2.424,10.895);
-\node[gp node left,rotate=270] at (2.424,1.661) {$0$};
+\draw[gp path] (2.240,9.024)--(2.420,9.024);
+\node[gp node right] at (2.056,9.024) {$9.2\times10^{10}$};
 \gpcolor{rgb color={0.753,0.753,0.753}}
 \gpsetlinewidth{2.00}
-\draw[gp path] (4.595,1.845)--(4.595,11.075);
+\draw[gp path] (2.240,10.049)--(7.047,10.049);
+\draw[gp path] (13.483,10.049)--(13.667,10.049);
 \gpcolor{color=gp lt color border}
 \gpsetlinewidth{1.00}
-\draw[gp path] (4.595,1.845)--(4.595,2.025);
-\draw[gp path] (4.595,11.075)--(4.595,10.895);
-\node[gp node left,rotate=270] at (4.595,1.661) {$50$};
+\draw[gp path] (2.240,10.049)--(2.420,10.049);
+\node[gp node right] at (2.056,10.049) {$9.3\times10^{10}$};
 \gpcolor{rgb color={0.753,0.753,0.753}}
 \gpsetlinewidth{2.00}
-\draw[gp path] (6.765,1.845)--(6.765,11.075);
+\draw[gp path] (2.240,11.075)--(13.667,11.075);
 \gpcolor{color=gp lt color border}
 \gpsetlinewidth{1.00}
-\draw[gp path] (6.765,1.845)--(6.765,2.025);
-\draw[gp path] (6.765,11.075)--(6.765,10.895);
-\node[gp node left,rotate=270] at (6.765,1.661) {$100$};
+\draw[gp path] (2.240,11.075)--(2.420,11.075);
+\node[gp node right] at (2.056,11.075) {$9.4\times10^{10}$};
 \gpcolor{rgb color={0.753,0.753,0.753}}
 \gpsetlinewidth{2.00}
-\draw[gp path] (8.936,1.845)--(8.936,11.075);
+\draw[gp path] (2.240,1.845)--(2.240,11.075);
 \gpcolor{color=gp lt color border}
 \gpsetlinewidth{1.00}
-\draw[gp path] (8.936,1.845)--(8.936,2.025);
-\draw[gp path] (8.936,11.075)--(8.936,10.895);
-\node[gp node left,rotate=270] at (8.936,1.661) {$150$};
+\draw[gp path] (2.240,1.845)--(2.240,2.025);
+\draw[gp path] (2.240,11.075)--(2.240,10.895);
+\node[gp node left,rotate=270] at (2.240,1.661) {$0$};
 \gpcolor{rgb color={0.753,0.753,0.753}}
 \gpsetlinewidth{2.00}
-\draw[gp path] (11.106,1.845)--(11.106,11.075);
+\draw[gp path] (4.145,1.845)--(4.145,11.075);
 \gpcolor{color=gp lt color border}
 \gpsetlinewidth{1.00}
-\draw[gp path] (11.106,1.845)--(11.106,2.025);
-\draw[gp path] (11.106,11.075)--(11.106,10.895);
-\node[gp node left,rotate=270] at (11.106,1.661) {$200$};
+\draw[gp path] (4.145,1.845)--(4.145,2.025);
+\draw[gp path] (4.145,11.075)--(4.145,10.895);
+\node[gp node left,rotate=270] at (4.145,1.661) {$50$};
 \gpcolor{rgb color={0.753,0.753,0.753}}
 \gpsetlinewidth{2.00}
-\draw[gp path] (13.277,1.845)--(13.277,11.075);
+\draw[gp path] (6.049,1.845)--(6.049,11.075);
 \gpcolor{color=gp lt color border}
 \gpsetlinewidth{1.00}
-\draw[gp path] (13.277,1.845)--(13.277,2.025);
-\draw[gp path] (13.277,11.075)--(13.277,10.895);
-\node[gp node left,rotate=270] at (13.277,1.661) {$250$};
+\draw[gp path] (6.049,1.845)--(6.049,2.025);
+\draw[gp path] (6.049,11.075)--(6.049,10.895);
+\node[gp node left,rotate=270] at (6.049,1.661) {$100$};
 \gpcolor{rgb color={0.753,0.753,0.753}}
 \gpsetlinewidth{2.00}
-\draw[gp path] (15.447,1.845)--(15.447,11.075);
+\draw[gp path] (7.954,1.845)--(7.954,9.355);
+\draw[gp path] (7.954,10.895)--(7.954,11.075);
 \gpcolor{color=gp lt color border}
 \gpsetlinewidth{1.00}
-\draw[gp path] (15.447,1.845)--(15.447,2.025);
-\draw[gp path] (15.447,11.075)--(15.447,10.895);
-\node[gp node left,rotate=270] at (15.447,1.661) {$300$};
-\draw[gp path] (2.424,11.075)--(2.424,1.845)--(15.447,1.845)--(15.447,11.075)--cycle;
+\draw[gp path] (7.954,1.845)--(7.954,2.025);
+\draw[gp path] (7.954,11.075)--(7.954,10.895);
+\node[gp node left,rotate=270] at (7.954,1.661) {$150$};
+\gpcolor{rgb color={0.753,0.753,0.753}}
+\gpsetlinewidth{2.00}
+\draw[gp path] (9.858,1.845)--(9.858,9.355);
+\draw[gp path] (9.858,10.895)--(9.858,11.075);
+\gpcolor{color=gp lt color border}
+\gpsetlinewidth{1.00}
+\draw[gp path] (9.858,1.845)--(9.858,2.025);
+\draw[gp path] (9.858,11.075)--(9.858,10.895);
+\node[gp node left,rotate=270] at (9.858,1.661) {$200$};
+\gpcolor{rgb color={0.753,0.753,0.753}}
+\gpsetlinewidth{2.00}
+\draw[gp path] (11.763,1.845)--(11.763,9.355);
+\draw[gp path] (11.763,10.895)--(11.763,11.075);
+\gpcolor{color=gp lt color border}
+\gpsetlinewidth{1.00}
+\draw[gp path] (11.763,1.845)--(11.763,2.025);
+\draw[gp path] (11.763,11.075)--(11.763,10.895);
+\node[gp node left,rotate=270] at (11.763,1.661) {$250$};
+\gpcolor{rgb color={0.753,0.753,0.753}}
+\gpsetlinewidth{2.00}
+\draw[gp path] (13.667,1.845)--(13.667,11.075);
+\gpcolor{color=gp lt color border}
+\gpsetlinewidth{1.00}
+\draw[gp path] (13.667,1.845)--(13.667,2.025);
+\draw[gp path] (13.667,11.075)--(13.667,10.895);
+\node[gp node left,rotate=270] at (13.667,1.661) {$300$};
+\draw[gp path] (13.667,1.845)--(13.487,1.845);
+\node[gp node left] at (13.851,1.845) {$90000$};
+\draw[gp path] (13.667,3.383)--(13.487,3.383);
+\node[gp node left] at (13.851,3.383) {$95000$};
+\draw[gp path] (13.667,4.922)--(13.487,4.922);
+\node[gp node left] at (13.851,4.922) {$100000$};
+\draw[gp path] (13.667,6.460)--(13.487,6.460);
+\node[gp node left] at (13.851,6.460) {$105000$};
+\draw[gp path] (13.667,7.998)--(13.487,7.998);
+\node[gp node left] at (13.851,7.998) {$110000$};
+\draw[gp path] (13.667,9.537)--(13.487,9.537);
+\node[gp node left] at (13.851,9.537) {$115000$};
+\draw[gp path] (13.667,11.075)--(13.487,11.075);
+\node[gp node left] at (13.851,11.075) {$120000$};
+\draw[gp path] (2.240,11.075)--(2.240,1.845)--(13.667,1.845)--(13.667,11.075)--cycle;
+\draw[gp path] (7.047,9.355)--(7.047,10.895)--(13.483,10.895)--(13.483,9.355)--cycle;
+\node[gp node right] at (12.199,10.510) {Strategic urgency};
 \gpcolor{rgb color={0.000,0.000,0.000}}
-\gpsetlinewidth{2.00}
-\draw[gp path] (2.424,4.595)--(2.424,4.544)--(2.424,4.501)--(2.424,4.454)--(2.424,4.379)%
-  --(2.424,4.364)--(2.424,4.348)--(2.424,4.319)--(2.424,4.281)--(2.424,4.279)--(2.424,4.243)%
-  --(2.424,4.140)--(2.424,4.129)--(2.424,4.124)--(2.424,4.101)--(2.424,4.085)--(2.424,4.054)%
-  --(2.424,4.039)--(2.424,3.951)--(2.467,3.947)--(2.467,3.928)--(2.467,3.926)--(2.467,3.913)%
-  --(2.467,3.891)--(2.467,3.829)--(2.467,3.741)--(2.467,3.698)--(2.467,3.690)--(2.467,3.678)%
-  --(2.467,3.675)--(2.467,3.661)--(2.467,3.648)--(2.467,3.621)--(2.467,3.601)--(2.467,3.594)%
-  --(2.467,3.585)--(2.467,3.575)--(2.467,3.572)--(2.467,3.566)--(2.467,3.553)--(2.467,3.551)%
-  --(2.467,3.545)--(2.467,3.538)--(2.467,3.532)--(2.467,3.527)--(2.467,3.505)--(2.467,3.503)%
-  --(2.467,3.495)--(2.467,3.479)--(2.467,3.475)--(2.467,3.467)--(2.467,3.458)--(2.467,3.453)%
-  --(2.467,3.446)--(2.511,3.442)--(2.511,3.440)--(2.511,3.425)--(2.511,3.419)--(2.511,3.413)%
-  --(2.511,3.408)--(2.511,3.399)--(2.511,3.378)--(2.511,3.365)--(2.511,3.360)--(2.511,3.355)%
-  --(2.511,3.354)--(2.511,3.347)--(2.511,3.344)--(2.511,3.339)--(2.554,3.299)--(2.554,3.296)%
-  --(2.554,3.287)--(2.554,3.283)--(2.554,3.282)--(2.554,3.278)--(2.554,3.276)--(2.554,3.272)%
-  --(2.554,3.270)--(2.554,3.269)--(2.554,3.268)--(2.554,3.267)--(2.554,3.266)--(2.554,3.261)%
-  --(2.554,3.254)--(2.598,3.252)--(2.598,3.247)--(2.598,3.245)--(2.598,3.244)--(2.598,3.242)%
-  --(2.598,3.230)--(2.598,3.225)--(2.598,3.222)--(2.598,3.220)--(2.598,3.218)--(2.598,3.214)%
-  --(2.598,3.213)--(2.598,3.208)--(2.598,3.205)--(2.641,3.202)--(2.641,3.195)--(2.641,3.194)%
-  --(2.641,3.192)--(2.641,3.189)--(2.641,3.186)--(2.641,3.185)--(2.641,3.184)--(2.641,3.177)%
-  --(2.641,3.175)--(2.641,3.173)--(2.641,3.172)--(2.641,3.169)--(2.641,3.165)--(2.641,3.163)%
-  --(2.641,3.161)--(2.641,3.159)--(2.641,3.157)--(2.684,3.151)--(2.684,3.148)--(2.684,3.147)%
-  --(2.684,3.144)--(2.684,3.141)--(2.684,3.138)--(2.728,3.136)--(2.728,3.135)--(2.728,3.133)%
-  --(2.728,3.132)--(2.728,3.129)--(2.728,3.127)--(2.728,3.126)--(2.728,3.124)--(2.728,3.122)%
-  --(2.728,3.120)--(2.771,3.119)--(2.771,3.116)--(2.771,3.115)--(2.771,3.113)--(2.771,3.110)%
-  --(2.771,3.109)--(2.771,3.108)--(2.771,3.102)--(2.771,3.096)--(2.771,3.092)--(2.815,3.092)%
-  --(2.815,3.091)--(2.815,3.088)--(2.815,3.086)--(2.815,3.084)--(2.858,3.081)--(2.858,3.079)%
-  --(2.902,3.079)--(2.902,3.078)--(2.902,3.077)--(2.902,3.074)--(2.902,3.071)--(2.902,3.069)%
-  --(2.902,3.063)--(2.945,3.062)--(2.945,3.060)--(2.945,3.059)--(2.988,3.056)--(2.988,3.053)%
-  --(2.988,3.050)--(2.988,3.048)--(2.988,3.044)--(2.988,3.041)--(3.032,3.039)--(3.032,3.038)%
-  --(3.032,3.036)--(3.032,3.035)--(3.075,3.032)--(3.119,3.031)--(3.119,3.030)--(3.162,3.030)%
-  --(3.162,3.027)--(3.162,3.026)--(3.205,3.026)--(3.205,3.024)--(3.205,3.023)--(3.292,3.023)%
-  --(3.292,3.021)--(3.292,3.020)--(3.336,3.019)--(3.379,3.016)--(3.379,3.015)--(3.379,3.012)%
-  --(3.422,3.010)--(3.422,3.009)--(3.466,3.005)--(3.466,3.004)--(3.509,3.003)--(3.509,3.002)%
-  --(3.553,3.002)--(3.596,3.001)--(3.596,2.999)--(3.596,2.998)--(3.596,2.996)--(3.683,2.993)%
-  --(3.813,2.992)--(3.813,2.991)--(3.900,2.989)--(3.987,2.988)--(4.030,2.988)--(4.030,2.987)%
-  --(4.117,2.986)--(4.160,2.985)--(4.160,2.982)--(4.291,2.982)--(4.421,2.981)--(4.421,2.979)%
-  --(4.464,2.973)--(4.464,2.971)--(4.464,2.970)--(4.508,2.970)--(4.508,2.969)--(4.595,2.969)%
-  --(4.725,2.967)--(4.768,2.967)--(4.812,2.966)--(4.855,2.964)--(4.898,2.963)--(4.942,2.963)%
-  --(4.942,2.961)--(4.942,2.958)--(4.985,2.958)--(4.985,2.957)--(5.029,2.957)--(5.029,2.956)%
-  --(5.115,2.956)--(5.159,2.955)--(5.246,2.954)--(5.246,2.952)--(5.289,2.951)--(5.289,2.949)%
-  --(5.332,2.948)--(5.376,2.947)--(5.376,2.946)--(5.376,2.944)--(5.419,2.944)--(5.550,2.941)%
-  --(5.550,2.940)--(5.593,2.939)--(5.593,2.938)--(5.636,2.938)--(5.723,2.938)--(5.767,2.938)%
-  --(5.767,2.937)--(5.810,2.937)--(5.810,2.936)--(5.853,2.935)--(5.940,2.935)--(5.940,2.933)%
-  --(6.027,2.931)--(6.070,2.931)--(6.157,2.930)--(6.201,2.930)--(6.287,2.929)--(6.374,2.927)%
-  --(6.418,2.927)--(6.418,2.925)--(6.418,2.924)--(6.461,2.923)--(6.461,2.920)--(6.505,2.919)%
-  --(6.548,2.917)--(6.635,2.915)--(6.678,2.915)--(6.678,6.755)--(6.678,6.733)--(6.678,6.669)%
-  --(6.678,6.547)--(6.678,6.478)--(6.678,6.414)--(6.678,6.389)--(6.678,6.333)--(6.722,6.322)%
-  --(6.722,6.291)--(6.722,6.225)--(6.722,6.184)--(6.722,6.159)--(6.722,6.139)--(6.722,6.124)%
-  --(6.722,6.114)--(6.722,6.101)--(6.722,6.072)--(6.722,6.068)--(6.722,6.018)--(6.722,5.999)%
-  --(6.722,5.980)--(6.722,5.977)--(6.722,5.949)--(6.722,5.925)--(6.722,5.921)--(6.722,5.903)%
-  --(6.722,5.896)--(6.722,5.891)--(6.722,5.876)--(6.722,5.848)--(6.722,5.844)--(6.722,5.843)%
-  --(6.765,5.834)--(6.765,5.822)--(6.765,5.816)--(6.765,5.789)--(6.765,5.787)--(6.765,5.781)%
-  --(6.765,5.775)--(6.765,5.768)--(6.765,5.767)--(6.765,5.761)--(6.765,5.760)--(6.765,5.759)%
-  --(6.765,5.742)--(6.765,5.724)--(6.808,5.703)--(6.808,5.699)--(6.808,5.692)--(6.808,5.687)%
-  --(6.808,5.674)--(6.808,5.670)--(6.808,5.666)--(6.808,5.664)--(6.852,5.661)--(6.852,5.657)%
-  --(6.852,5.655)--(6.852,5.654)--(6.852,5.640)--(6.852,5.636)--(6.895,5.632)--(6.895,5.631)%
-  --(6.895,5.630)--(6.895,5.627)--(6.895,5.616)--(6.895,5.609)--(6.895,5.606)--(6.895,5.605)%
-  --(6.895,5.604)--(6.939,5.602)--(6.939,5.600)--(6.939,5.599)--(6.939,5.595)--(6.939,5.583)%
-  --(6.982,5.582)--(6.982,5.576)--(6.982,5.574)--(6.982,5.571)--(6.982,5.569)--(6.982,5.562)%
-  --(6.982,5.553)--(7.025,5.550)--(7.025,5.549)--(7.025,5.543)--(7.069,5.543)--(7.069,5.542)%
-  --(7.112,5.538)--(7.112,5.537)--(7.156,5.536)--(7.156,5.533)--(7.156,5.528)--(7.199,5.520)%
-  --(7.199,5.518)--(7.243,5.515)--(7.243,5.513)--(7.243,5.512)--(7.286,5.511)--(7.286,5.510)%
-  --(7.329,5.506)--(7.329,5.503)--(7.373,5.503)--(7.373,5.498)--(7.373,5.493)--(7.373,5.490)%
-  --(7.416,5.490)--(7.416,5.487)--(7.460,5.484)--(7.460,5.481)--(7.460,5.478)--(7.460,5.477)%
-  --(7.503,5.475)--(7.546,5.473)--(7.590,5.468)--(7.633,5.466)--(7.633,5.461)--(7.677,5.454)%
-  --(7.677,5.453)--(7.720,5.452)--(7.720,5.451)--(7.720,5.447)--(7.763,5.445)--(7.763,5.436)%
-  --(7.763,5.433)--(7.807,5.429)--(7.850,5.428)--(7.850,5.425)--(7.850,5.422)--(7.894,5.419)%
-  --(7.894,5.415)--(7.894,5.414)--(7.894,5.409)--(7.937,5.408)--(7.937,5.405)--(8.024,5.404)%
-  --(8.024,5.403)--(8.024,5.402)--(8.067,5.402)--(8.067,5.401)--(8.067,5.399)--(8.067,5.395)%
-  --(8.067,5.393)--(8.067,5.391)--(8.111,5.390)--(8.111,5.388)--(8.111,5.385)--(8.154,5.384)%
-  --(8.154,5.383)--(8.198,5.379)--(8.241,5.373)--(8.284,5.373)--(8.328,5.370)--(8.328,5.369)%
-  --(8.328,5.366)--(8.371,5.363)--(8.371,5.359)--(8.415,5.357)--(8.458,5.356)--(8.458,5.355)%
-  --(8.501,5.354)--(8.545,5.351)--(8.588,5.350)--(8.632,5.349)--(8.632,5.347)--(8.675,5.346)%
-  --(8.675,5.344)--(8.762,5.343)--(8.762,5.341)--(8.936,5.340)--(9.109,5.339)--(9.109,5.337)%
-  --(9.109,5.334)--(9.153,5.332)--(9.153,5.330)--(9.153,5.326)--(9.196,5.325)--(9.239,5.323)%
-  --(9.326,5.323)--(9.326,5.322)--(9.370,5.321)--(9.370,5.319)--(9.543,5.318)--(9.587,5.318)%
-  --(9.587,5.313)--(9.673,5.312)--(9.673,5.311)--(9.717,5.311)--(9.847,5.311)--(9.891,5.309)%
-  --(9.977,5.304)--(10.021,5.302)--(10.151,5.302)--(10.194,5.299)--(10.411,5.297)--(10.455,5.296)%
-  --(10.542,5.295)--(10.846,5.294)--(10.976,5.293)--(10.976,5.291)--(11.019,10.840)--(11.063,10.812)%
-  --(11.106,10.809)--(11.193,10.775)--(11.323,10.747)--(12.104,10.741)--(12.712,10.738)--(13.059,10.726)%
-  --(13.580,10.725)--(13.624,10.717);
+\gpsetlinewidth{2.50}
+\draw[gp path] (12.383,10.510)--(13.299,10.510);
+\draw[gp path] (2.240,2.463)--(2.240,2.517)--(2.240,2.591)--(2.240,2.697)--(2.240,2.694)%
+  --(2.240,2.734)--(2.240,2.837)--(2.240,2.836)--(2.240,2.829)--(2.240,2.857)--(2.240,2.908)%
+  --(2.240,2.953)--(2.240,2.988)--(2.240,3.024)--(2.240,3.246)--(2.240,3.303)--(2.240,3.304)%
+  --(2.240,3.332)--(2.240,3.305)--(2.240,3.276)--(2.240,3.308)--(2.240,3.371)--(2.240,3.372)%
+  --(2.240,3.366)--(2.240,3.363)--(2.240,3.415)--(2.240,3.386)--(2.240,3.381)--(2.240,3.437)%
+  --(2.240,3.466)--(2.240,3.449)--(2.240,3.393)--(2.240,3.532)--(2.240,3.496)--(2.240,3.448)%
+  --(2.240,3.430)--(2.240,3.442)--(2.240,3.514)--(2.240,3.733)--(2.240,3.793)--(2.240,3.757)%
+  --(2.240,3.809)--(2.240,3.777)--(2.240,3.760)--(2.240,3.735)--(2.240,3.742)--(2.240,3.712)%
+  --(2.240,3.700)--(2.278,3.738)--(2.278,3.727)--(2.278,3.716)--(2.278,3.743)--(2.278,3.722)%
+  --(2.278,3.711)--(2.278,3.704)--(2.278,3.727)--(2.278,3.736)--(2.278,3.688)--(2.278,3.694)%
+  --(2.278,3.682)--(2.278,3.693)--(2.278,3.697)--(2.278,3.759)--(2.278,3.751)--(2.278,3.735)%
+  --(2.278,3.718)--(2.278,3.734)--(2.278,3.736)--(2.278,3.709)--(2.278,3.685)--(2.278,3.676)%
+  --(2.278,3.668)--(2.278,3.642)--(2.278,3.638)--(2.278,3.607)--(2.278,3.670)--(2.278,3.651)%
+  --(2.278,3.684)--(2.278,3.676)--(2.278,3.664)--(2.278,3.650)--(2.278,3.622)--(2.278,3.617)%
+  --(2.278,3.651)--(2.278,3.665)--(2.278,3.655)--(2.278,3.643)--(2.278,3.642)--(2.278,3.647)%
+  --(2.278,3.638)--(2.278,3.635)--(2.278,3.624)--(2.278,3.603)--(2.278,3.598)--(2.278,3.627)%
+  --(2.278,3.618)--(2.278,3.589)--(2.278,3.594)--(2.278,3.581)--(2.278,3.604)--(2.278,3.579)%
+  --(2.278,3.571)--(2.278,3.567)--(2.278,3.566)--(2.316,3.555)--(2.316,3.542)--(2.316,3.528)%
+  --(2.316,3.520)--(2.316,3.505)--(2.316,3.488)--(2.316,3.437)--(2.316,3.417)--(2.316,3.400)%
+  --(2.316,3.397)--(2.316,3.396)--(2.316,3.382)--(2.316,3.369)--(2.316,3.335)--(2.316,3.319)%
+  --(2.316,3.297)--(2.316,3.286)--(2.316,3.283)--(2.316,3.284)--(2.316,3.271)--(2.316,3.237)%
+  --(2.316,3.234)--(2.316,3.230)--(2.316,3.217)--(2.316,3.213)--(2.316,3.207)--(2.316,3.198)%
+  --(2.354,3.177)--(2.354,3.165)--(2.354,3.162)--(2.354,3.154)--(2.354,3.149)--(2.354,3.147)%
+  --(2.354,3.143)--(2.392,3.118)--(2.392,3.109)--(2.392,3.103)--(2.392,3.099)--(2.392,3.096)%
+  --(2.392,3.090)--(2.392,3.084)--(2.430,3.075)--(2.430,3.068)--(2.430,3.067)--(2.430,3.062)%
+  --(2.430,3.057)--(2.430,3.046)--(2.430,3.037)--(2.430,3.031)--(2.469,3.028)--(2.469,3.020)%
+  --(2.469,3.011)--(2.469,3.009)--(2.469,3.008)--(2.507,2.997)--(2.507,2.990)--(2.507,2.981)%
+  --(2.507,2.968)--(2.507,2.963)--(2.507,2.943)--(2.507,2.939)--(2.507,2.938)--(2.507,2.934)%
+  --(2.507,2.923)--(2.545,2.909)--(2.545,2.902)--(2.545,2.894)--(2.545,2.891)--(2.545,2.875)%
+  --(2.545,2.857)--(2.545,2.856)--(2.583,2.851)--(2.583,2.824)--(2.583,2.816)--(2.583,2.814)%
+  --(2.583,2.810)--(2.621,2.808)--(2.621,2.802)--(2.621,2.726)--(2.621,2.716)--(2.621,2.708)%
+  --(2.621,2.695)--(2.621,2.693)--(2.621,2.689)--(2.621,2.665)--(2.659,2.660)--(2.659,2.657)%
+  --(2.659,2.651)--(2.659,2.645)--(2.659,2.640)--(2.697,2.639)--(2.697,2.632)--(2.697,2.625)%
+  --(2.735,2.607)--(2.735,2.606)--(2.735,2.602)--(2.735,2.598)--(2.773,2.589)--(2.773,2.584)%
+  --(2.773,2.583)--(2.849,2.582)--(2.849,2.571)--(2.849,2.570)--(2.888,2.570)--(2.888,2.553)%
+  --(2.888,2.550)--(2.926,2.550)--(2.926,2.542)--(2.964,2.540)--(2.964,2.539)--(2.964,2.536)%
+  --(3.002,2.535)--(3.002,2.532)--(3.002,2.530)--(3.002,2.524)--(3.040,2.521)--(3.040,2.519)%
+  --(3.040,2.518)--(3.078,2.512)--(3.116,2.512)--(3.116,2.510)--(3.116,2.505)--(3.116,2.504)%
+  --(3.154,2.503)--(3.154,2.496)--(3.154,2.495)--(3.154,2.490)--(3.192,2.489)--(3.192,2.487)%
+  --(3.230,2.479)--(3.230,2.475)--(3.230,2.467)--(3.268,2.464)--(3.307,2.460)--(3.345,2.454)%
+  --(3.345,2.452)--(3.383,2.445)--(3.383,2.444)--(3.383,2.441)--(3.421,2.441)--(3.421,2.439)%
+  --(3.459,2.435)--(3.497,2.435)--(3.497,2.433)--(3.535,2.431)--(3.535,2.430)--(3.535,2.427)%
+  --(3.535,2.423)--(3.573,2.422)--(3.573,2.421)--(3.573,2.420)--(3.611,2.419)--(3.611,2.418)%
+  --(3.726,2.418)--(3.726,2.416)--(3.764,2.413)--(3.840,2.408)--(3.840,2.405)--(3.878,2.401)%
+  --(3.878,2.392)--(3.916,2.389)--(3.916,2.388)--(3.954,2.384)--(4.068,2.381)--(4.068,2.380)%
+  --(4.106,2.379)--(4.106,2.375)--(4.106,2.370)--(4.259,2.366)--(4.297,2.361)--(4.411,2.359)%
+  --(4.411,2.357)--(4.411,2.356)--(4.449,2.352)--(4.487,2.344)--(4.525,2.342)--(4.525,2.336)%
+  --(4.525,2.333)--(4.563,2.331)--(4.602,2.330)--(4.754,2.329)--(4.944,2.326)--(5.021,2.322)%
+  --(5.021,2.320)--(5.059,2.317)--(5.097,2.316)--(5.173,2.315)--(5.173,2.314)--(5.211,2.312)%
+  --(5.249,2.309)--(5.287,2.309)--(5.325,2.308)--(5.363,2.305)--(5.440,2.303)--(5.440,2.302)%
+  --(5.516,2.301)--(5.592,2.301)--(5.592,2.298)--(5.668,2.298)--(5.668,2.295)--(5.668,2.294)%
+  --(5.706,2.292)--(5.782,2.290)--(5.859,2.289)--(5.897,2.287)--(5.973,2.286)--(5.973,2.568)%
+  --(5.973,3.023)--(6.011,3.281)--(6.011,3.452)--(6.011,3.578)--(6.011,3.664)--(6.011,3.859)%
+  --(6.011,4.419)--(6.011,4.540)--(6.011,4.646)--(6.011,4.901)--(6.011,4.997)--(6.011,5.090)%
+  --(6.011,5.190)--(6.011,5.315)--(6.011,5.453)--(6.011,5.596)--(6.011,5.674)--(6.011,5.732)%
+  --(6.011,5.845)--(6.011,5.921)--(6.011,6.008)--(6.011,6.061)--(6.011,6.217)--(6.011,6.207)%
+  --(6.011,6.229)--(6.011,6.259)--(6.011,6.365)--(6.011,6.466)--(6.011,6.600)--(6.011,6.564)%
+  --(6.011,6.676)--(6.011,6.740)--(6.011,6.738)--(6.011,6.775)--(6.011,6.745)--(6.011,6.822)%
+  --(6.011,6.816)--(6.011,6.848)--(6.011,6.864)--(6.011,6.862)--(6.011,6.881)--(6.011,6.874)%
+  --(6.011,6.956)--(6.011,6.921)--(6.011,6.891)--(6.011,6.875)--(6.011,6.885)--(6.011,6.872)%
+  --(6.011,6.870)--(6.011,6.868)--(6.011,6.930)--(6.011,6.927)--(6.011,6.934)--(6.011,6.968)%
+  --(6.011,6.922)--(6.011,6.898)--(6.011,6.876)--(6.011,6.973)--(6.049,6.961)--(6.049,6.944)%
+  --(6.049,6.923)--(6.049,6.892)--(6.049,6.914)--(6.049,6.907)--(6.049,6.894)--(6.049,6.862)%
+  --(6.049,6.870)--(6.049,6.879)--(6.049,6.941)--(6.049,6.890)--(6.049,6.880)--(6.049,6.932)%
+  --(6.049,6.955)--(6.049,6.937)--(6.049,6.961)--(6.049,6.907)--(6.049,6.924)--(6.049,6.983)%
+  --(6.049,6.978)--(6.049,6.942)--(6.049,6.937)--(6.049,6.906)--(6.049,6.845)--(6.049,6.832)%
+  --(6.049,6.884)--(6.049,6.908)--(6.049,6.878)--(6.087,6.847)--(6.087,6.808)--(6.087,6.826)%
+  --(6.087,6.808)--(6.087,6.814)--(6.087,6.850)--(6.087,6.828)--(6.087,6.827)--(6.087,6.808)%
+  --(6.087,6.791)--(6.087,6.772)--(6.087,6.755)--(6.087,6.751)--(6.087,6.741)--(6.087,6.722)%
+  --(6.125,6.727)--(6.125,6.710)--(6.125,6.695)--(6.125,6.705)--(6.125,6.699)--(6.125,6.681)%
+  --(6.125,6.656)--(6.125,6.614)--(6.125,6.598)--(6.125,6.597)--(6.125,6.602)--(6.125,6.584)%
+  --(6.125,6.564)--(6.125,6.561)--(6.125,6.533)--(6.163,6.557)--(6.163,6.555)--(6.163,6.540)%
+  --(6.163,6.529)--(6.163,6.496)--(6.163,6.472)--(6.163,6.446)--(6.163,6.433)--(6.163,6.420)%
+  --(6.163,6.402)--(6.163,6.394)--(6.163,6.377)--(6.163,6.363)--(6.201,6.341)--(6.201,6.332)%
+  --(6.201,6.342)--(6.201,6.315)--(6.201,6.305)--(6.239,6.301)--(6.239,6.298)--(6.239,6.323)%
+  --(6.278,6.312)--(6.278,6.300)--(6.278,6.281)--(6.278,6.273)--(6.316,6.262)--(6.316,6.260)%
+  --(6.316,6.232)--(6.316,6.223)--(6.316,6.211)--(6.316,6.188)--(6.316,6.181)--(6.316,6.180)%
+  --(6.316,6.163)--(6.316,6.155)--(6.354,6.144)--(6.354,6.140)--(6.354,6.129)--(6.392,6.129)%
+  --(6.392,6.111)--(6.392,6.108)--(6.392,6.102)--(6.430,6.095)--(6.430,6.087)--(6.430,6.064)%
+  --(6.468,6.062)--(6.468,6.043)--(6.468,6.034)--(6.468,6.007)--(6.468,6.002)--(6.506,6.000)%
+  --(6.506,5.995)--(6.506,5.991)--(6.506,5.984)--(6.506,5.972)--(6.506,5.962)--(6.506,5.937)%
+  --(6.544,5.932)--(6.544,5.926)--(6.582,5.922)--(6.582,5.916)--(6.582,5.888)--(6.582,5.881)%
+  --(6.582,5.874)--(6.582,5.870)--(6.620,5.868)--(6.620,5.866)--(6.620,5.860)--(6.620,5.859)%
+  --(6.658,5.837)--(6.658,5.827)--(6.658,5.826)--(6.697,5.817)--(6.735,5.811)--(6.735,5.807)%
+  --(6.735,5.799)--(6.735,5.798)--(6.773,5.774)--(6.773,5.770)--(6.773,5.763)--(6.811,5.760)%
+  --(6.811,5.754)--(6.811,5.751)--(6.849,5.733)--(6.849,5.714)--(6.849,5.704)--(6.887,5.692)%
+  --(6.887,5.687)--(6.887,5.682)--(6.925,5.681)--(6.925,5.672)--(6.963,5.672)--(7.001,5.661)%
+  --(7.001,5.657)--(7.039,5.635)--(7.039,5.634)--(7.116,5.633)--(7.116,5.630)--(7.116,5.628)%
+  --(7.154,5.624)--(7.154,5.622)--(7.192,5.620)--(7.192,5.613)--(7.230,5.613)--(7.268,5.606)%
+  --(7.306,5.599)--(7.306,5.596)--(7.306,5.616)--(7.344,5.614)--(7.382,5.613)--(7.420,5.599)%
+  --(7.420,5.598)--(7.458,5.590)--(7.496,5.590)--(7.535,5.585)--(7.535,5.584)--(7.535,5.578)%
+  --(7.573,5.575)--(7.611,5.572)--(7.649,5.570)--(7.687,5.568)--(7.687,5.565)--(7.725,5.557)%
+  --(7.725,5.551)--(7.763,5.549)--(7.763,5.536)--(7.763,5.534)--(7.801,5.530)--(7.801,5.526)%
+  --(7.839,5.526)--(7.915,5.508)--(8.030,5.507)--(8.068,5.503)--(8.106,5.494)--(8.106,5.483)%
+  --(8.144,5.480)--(8.182,5.477)--(8.182,5.473)--(8.258,5.469)--(8.258,5.466)--(8.296,5.466)%
+  --(8.372,5.459)--(8.525,5.454)--(8.601,5.447)--(8.639,5.445)--(8.677,5.441)--(8.715,5.438)%
+  --(8.753,5.435)--(8.753,5.428)--(8.830,5.424)--(8.944,5.418)--(9.096,5.414)--(9.172,5.406)%
+  --(9.363,5.402)--(9.401,5.394)--(9.439,5.388)--(9.477,5.380)--(9.782,5.379)--(9.782,5.377)%
+  --(9.820,5.603)--(9.820,5.840)--(9.820,5.976)--(9.820,6.177)--(9.820,6.369)--(9.820,6.654)%
+  --(9.820,6.846)--(9.820,6.967)--(9.820,7.129)--(9.820,7.263)--(9.820,7.440)--(9.820,7.519)%
+  --(9.820,7.614)--(9.858,7.705)--(9.858,7.937)--(9.858,8.077)--(9.858,8.164)--(9.858,8.313)%
+  --(9.896,8.387)--(9.896,8.537)--(9.896,8.691)--(9.896,8.845)--(9.896,8.918)--(9.896,8.986)%
+  --(9.972,9.083)--(9.972,9.106)--(9.972,9.212)--(9.972,9.275)--(9.972,9.292)--(9.972,9.385)%
+  --(10.010,9.414)--(10.010,9.459)--(10.010,9.532)--(10.048,9.553)--(10.048,9.571)--(10.048,9.648)%
+  --(10.048,9.688)--(10.048,9.704)--(10.087,9.760)--(10.125,9.773)--(10.125,9.826)--(10.125,9.895)%
+  --(10.125,9.922)--(10.163,9.903)--(10.239,9.933)--(10.239,9.922)--(10.239,9.911)--(10.277,9.942)%
+  --(10.353,9.977)--(10.353,9.990)--(10.353,10.003)--(10.353,10.038)--(10.391,10.038)--(10.391,10.045)%
+  --(10.582,10.039)--(10.582,10.035)--(10.620,10.059)--(10.620,10.045)--(10.658,10.034)--(10.696,10.070)%
+  --(10.696,10.047)--(10.696,10.040)--(10.734,10.043)--(10.772,10.054)--(10.848,10.072)--(10.848,10.095)%
+  --(10.886,10.121)--(10.925,10.113)--(11.001,10.136)--(11.001,10.141)--(11.115,10.171)--(11.115,10.164)%
+  --(11.115,10.173)--(11.115,10.170)--(11.191,10.094)--(11.229,10.091)--(11.229,10.093)--(11.267,10.107)%
+  --(11.305,10.124)--(11.420,10.132)--(11.496,10.126)--(11.534,10.144)--(11.610,10.127)--(11.648,10.164)%
+  --(11.686,10.154)--(11.724,10.146)--(11.801,10.149)--(11.953,10.141)--(11.953,10.129)--(12.067,10.107)%
+  --(12.067,10.097);
+\gpcolor{color=gp lt color border}
+\node[gp node right] at (12.199,9.740) {Strategic Resource penalty};
+\gpcolor{rgb color={0.184,0.243,0.918}}
+\draw[gp path] (12.383,9.740)--(13.299,9.740);
+\draw[gp path] (2.240,4.671)--(2.240,4.583)--(2.240,4.536)--(2.240,4.458)--(2.240,4.426)%
+  --(2.240,4.399)--(2.240,4.279)--(2.240,4.236)--(2.240,4.193)--(2.240,4.141)--(2.240,4.113)%
+  --(2.240,4.086)--(2.240,4.082)--(2.240,4.053)--(2.240,4.043)--(2.240,4.012)--(2.240,3.993)%
+  --(2.240,3.950)--(2.240,3.929)--(2.240,3.923)--(2.240,3.916)--(2.240,3.907)--(2.240,3.869)%
+  --(2.240,3.861)--(2.240,3.857)--(2.240,3.844)--(2.240,3.831)--(2.240,3.821)--(2.240,3.815)%
+  --(2.240,3.798)--(2.240,3.797)--(2.240,3.785)--(2.240,3.775)--(2.240,3.757)--(2.240,3.746)%
+  --(2.240,3.736)--(2.240,3.730)--(2.240,3.723)--(2.240,3.622)--(2.240,3.614)--(2.240,3.607)%
+  --(2.240,3.603)--(2.240,3.594)--(2.240,3.589)--(2.240,3.586)--(2.240,3.582)--(2.240,3.577)%
+  --(2.278,3.561)--(2.278,3.552)--(2.278,3.536)--(2.278,3.530)--(2.278,3.523)--(2.278,3.518)%
+  --(2.278,3.515)--(2.278,3.504)--(2.278,3.502)--(2.278,3.496)--(2.278,3.492)--(2.278,3.485)%
+  --(2.278,3.477)--(2.278,3.473)--(2.278,3.470)--(2.278,3.465)--(2.278,3.460)--(2.278,3.455)%
+  --(2.278,3.451)--(2.278,3.434)--(2.278,3.423)--(2.278,3.421)--(2.278,3.418)--(2.278,3.414)%
+  --(2.278,3.401)--(2.278,3.395)--(2.278,3.390)--(2.278,3.389)--(2.278,3.384)--(2.278,3.341)%
+  --(2.278,3.337)--(2.278,3.333)--(2.278,3.328)--(2.278,3.318)--(2.278,3.312)--(2.278,3.311)%
+  --(2.316,3.311)--(2.316,3.308)--(2.316,3.304)--(2.316,3.298)--(2.316,3.297)--(2.316,3.295)%
+  --(2.316,3.293)--(2.354,3.293)--(2.392,3.293)--(2.430,3.293)--(2.469,3.293)--(2.507,3.293)%
+  --(2.545,3.293)--(2.583,3.293)--(2.621,3.293)--(2.659,3.293)--(2.697,3.293)--(2.735,3.293)%
+  --(2.773,3.293)--(2.849,3.293)--(2.888,3.293)--(2.926,3.293)--(2.964,3.293)--(3.002,3.293)%
+  --(3.040,3.293)--(3.078,3.293)--(3.116,3.293)--(3.154,3.293)--(3.192,3.293)--(3.230,3.293)%
+  --(3.268,3.293)--(3.307,3.293)--(3.345,3.293)--(3.383,3.293)--(3.421,3.293)--(3.459,3.293)%
+  --(3.497,3.293)--(3.535,3.293)--(3.573,3.293)--(3.611,3.293)--(3.726,3.293)--(3.764,3.293)%
+  --(3.840,3.293)--(3.878,3.293)--(3.916,3.293)--(3.954,3.293)--(4.068,3.293)--(4.106,3.293)%
+  --(4.259,3.293)--(4.297,3.293)--(4.411,3.293)--(4.449,3.293)--(4.487,3.293)--(4.525,3.293)%
+  --(4.563,3.293)--(4.602,3.293)--(4.754,3.293)--(4.944,3.293)--(5.021,3.293)--(5.059,3.293)%
+  --(5.097,3.293)--(5.173,3.293)--(5.211,3.293)--(5.249,3.293)--(5.287,3.293)--(5.325,3.293)%
+  --(5.363,3.293)--(5.440,3.293)--(5.516,3.293)--(5.592,3.293)--(5.668,3.293)--(5.706,3.293)%
+  --(5.782,3.293)--(5.859,3.293)--(5.897,3.293)--(5.973,3.293)--(5.973,7.032)--(5.973,6.980)%
+  --(6.011,6.865)--(6.011,6.686)--(6.011,6.598)--(6.011,6.558)--(6.011,6.439)--(6.011,6.297)%
+  --(6.011,6.228)--(6.011,6.132)--(6.011,6.086)--(6.011,6.056)--(6.011,5.992)--(6.011,5.913)%
+  --(6.011,5.827)--(6.011,5.777)--(6.011,5.713)--(6.011,5.646)--(6.011,5.634)--(6.011,5.600)%
+  --(6.011,5.559)--(6.011,5.541)--(6.011,5.521)--(6.011,5.492)--(6.011,5.486)--(6.011,5.453)%
+  --(6.011,5.441)--(6.011,5.436)--(6.011,5.389)--(6.011,5.374)--(6.011,5.362)--(6.011,5.343)%
+  --(6.011,5.335)--(6.011,5.306)--(6.011,5.304)--(6.011,5.302)--(6.011,5.295)--(6.011,5.291)%
+  --(6.011,5.288)--(6.011,5.287)--(6.011,5.284)--(6.011,5.279)--(6.011,5.263)--(6.011,5.258)%
+  --(6.011,5.256)--(6.011,5.255)--(6.011,5.205)--(6.011,5.183)--(6.011,5.182)--(6.011,5.179)%
+  --(6.011,5.168)--(6.011,5.167)--(6.011,5.153)--(6.011,5.151)--(6.011,5.149)--(6.011,5.150)%
+  --(6.011,5.143)--(6.049,5.140)--(6.049,5.137)--(6.049,5.134)--(6.049,5.123)--(6.049,5.122)%
+  --(6.049,5.121)--(6.049,5.109)--(6.049,5.103)--(6.049,5.095)--(6.049,5.093)--(6.049,5.089)%
+  --(6.049,5.084)--(6.049,5.082)--(6.049,5.081)--(6.049,5.080)--(6.049,5.077)--(6.049,5.075)%
+  --(6.087,5.075)--(6.087,5.064)--(6.087,5.063)--(6.087,5.060)--(6.087,5.059)--(6.087,5.057)%
+  --(6.125,5.051)--(6.125,5.050)--(6.125,5.048)--(6.125,5.043)--(6.163,5.041)--(6.201,5.041)%
+  --(6.201,5.040)--(6.239,5.040)--(6.239,5.039)--(6.278,5.039)--(6.316,5.039)--(6.354,5.039)%
+  --(6.392,5.039)--(6.430,5.039)--(6.468,5.039)--(6.506,5.039)--(6.544,5.039)--(6.582,5.039)%
+  --(6.620,5.039)--(6.658,5.039)--(6.697,5.039)--(6.735,5.039)--(6.773,5.039)--(6.811,5.039)%
+  --(6.849,5.039)--(6.887,5.039)--(6.925,5.039)--(6.963,5.039)--(7.001,5.039)--(7.039,5.039)%
+  --(7.116,5.039)--(7.154,5.039)--(7.192,5.039)--(7.230,5.039)--(7.268,5.039)--(7.306,5.039)%
+  --(7.306,5.038)--(7.344,5.038)--(7.382,5.038)--(7.420,5.038)--(7.458,5.038)--(7.496,5.038)%
+  --(7.535,5.038)--(7.573,5.038)--(7.611,5.038)--(7.649,5.038)--(7.687,5.038)--(7.725,5.038)%
+  --(7.763,5.038)--(7.801,5.038)--(7.839,5.038)--(7.915,5.038)--(8.030,5.038)--(8.068,5.038)%
+  --(8.106,5.038)--(8.144,5.038)--(8.182,5.038)--(8.258,5.038)--(8.296,5.038)--(8.372,5.038)%
+  --(8.525,5.038)--(8.601,5.038)--(8.639,5.038)--(8.677,5.038)--(8.715,5.038)--(8.753,5.038)%
+  --(8.830,5.038)--(8.944,5.038)--(9.096,5.038)--(9.172,5.038)--(9.363,5.038)--(9.401,5.038)%
+  --(9.439,5.038)--(9.477,5.038)--(9.782,5.038)--(9.820,10.653)--(9.820,10.629)--(9.820,10.622)%
+  --(9.820,10.596)--(9.820,10.557)--(9.820,10.536)--(9.820,10.513)--(9.820,10.502)--(9.820,10.496)%
+  --(9.820,10.466)--(9.820,10.436)--(9.820,10.412)--(9.820,10.401)--(9.858,10.395)--(9.858,10.379)%
+  --(9.858,10.357)--(9.858,10.351)--(9.858,10.344)--(9.896,10.329)--(9.896,10.317)--(9.896,10.302)%
+  --(9.896,10.285)--(9.896,10.274)--(9.896,10.272)--(9.972,10.267)--(9.972,10.264)--(9.972,10.252)%
+  --(9.972,10.249)--(9.972,10.248)--(9.972,10.243)--(10.010,10.239)--(10.010,10.236)--(10.010,10.227)%
+  --(10.048,10.206)--(10.048,10.203)--(10.048,10.198)--(10.048,10.195)--(10.048,10.193)--(10.087,10.190)%
+  --(10.125,10.186)--(10.125,10.184)--(10.125,10.177)--(10.125,10.175)--(10.163,10.173)--(10.239,10.169)%
+  --(10.239,10.166)--(10.239,10.164)--(10.277,10.160)--(10.353,10.158)--(10.353,10.157)--(10.353,10.156)%
+  --(10.353,10.149)--(10.391,10.146)--(10.391,10.143)--(10.582,10.133)--(10.582,10.129)--(10.620,10.127)%
+  --(10.620,10.126)--(10.658,10.126)--(10.696,10.124)--(10.696,10.123)--(10.696,10.120)--(10.734,10.114)%
+  --(10.772,10.113)--(10.848,10.112)--(10.848,10.105)--(10.886,10.102)--(10.925,10.102)--(11.001,10.101)%
+  --(11.001,10.100)--(11.115,10.098)--(11.115,10.097)--(11.191,10.097)--(11.229,10.096)--(11.229,10.094)%
+  --(11.267,10.094)--(11.305,10.088)--(11.420,10.088)--(11.496,10.086)--(11.534,10.084)--(11.610,10.084)%
+  --(11.648,10.082)--(11.686,10.081)--(11.724,10.080)--(11.801,10.076)--(11.953,10.075)--(12.067,10.074)%
+  --(12.067,10.073);
 \gpcolor{color=gp lt color border}
 \gpsetlinewidth{1.00}
-\draw[gp path] (2.424,11.075)--(2.424,1.845)--(15.447,1.845)--(15.447,11.075)--cycle;
+\draw[gp path] (2.240,11.075)--(2.240,1.845)--(13.667,1.845)--(13.667,11.075)--cycle;
 \node[gp node center,rotate=-270] at (-0.812,6.460) {Objective value};
-\node[gp node center] at (8.935,0.215) {Relative time ($\tau$) [S]};
-\node[gp node center] at (8.935,11.537) {Objective value for Weekly Schedule};
+\node[gp node center,rotate=-270] at (16.397,6.460) {Resource Penalty [Hours]};
+\node[gp node center] at (7.953,0.215) {Relative time ($\tau$) [S]};
+\node[gp node center] at (7.953,11.537) {Objective Value for Weekly Schedule};
 %% coordinates of the plot area
-\gpdefrectangularnode{gp plot 1}{\pgfpoint{2.424cm}{1.845cm}}{\pgfpoint{15.447cm}{11.075cm}}
+\gpdefrectangularnode{gp plot 1}{\pgfpoint{2.240cm}{1.845cm}}{\pgfpoint{13.667cm}{11.075cm}}
 \endtikzpicture
 %% gnuplot variables
