--- a/papers/actor-based-large-neighborhood-search/figures/strategic_objective_value_weight_change_plot.tex
+++ b/papers/actor-based-large-neighborhood-search/figures/strategic_objective_value_weight_change_plot.tex
@@ -1,89 +1,87 @@
 \tikzpicture[gnuplot]
 %% generated with GNUPLOT 6.0p1 (Lua 5.2; terminal rev. Jun 2020, script rev. 118)
-%% tir 17 dec 2024 22:52:05 CET
+%% Tue 07 Jan 2025 09:16:09 AM UTC
 \path (0.000,0.000) rectangle (16.000,12.000);
 \gpcolor{rgb color={0.753,0.753,0.753}}
 \gpsetlinetype{gp lt border}
 \gpsetdashtype{gp dt solid}
 \gpsetlinewidth{2.00}
-\draw[gp path] (2.424,1.845)--(15.447,1.845);
+\draw[gp path] (2.424,1.845)--(13.667,1.845);
 \gpcolor{color=gp lt color border}
 \gpsetlinewidth{1.00}
 \draw[gp path] (2.424,1.845)--(2.604,1.845);
-\draw[gp path] (15.447,1.845)--(15.267,1.845);
-\node[gp node right] at (2.240,1.845) {$1.95\times10^{11}$};
+\node[gp node right] at (2.240,1.845) {$8.5\times10^{10}$};
 \gpcolor{rgb color={0.753,0.753,0.753}}
 \gpsetlinewidth{2.00}
-\draw[gp path] (2.424,2.871)--(15.447,2.871);
+\draw[gp path] (2.424,2.768)--(13.667,2.768);
 \gpcolor{color=gp lt color border}
 \gpsetlinewidth{1.00}
-\draw[gp path] (2.424,2.871)--(2.604,2.871);
-\draw[gp path] (15.447,2.871)--(15.267,2.871);
-\node[gp node right] at (2.240,2.871) {$2\times10^{11}$};
+\draw[gp path] (2.424,2.768)--(2.604,2.768);
+\node[gp node right] at (2.240,2.768) {$9\times10^{10}$};
 \gpcolor{rgb color={0.753,0.753,0.753}}
 \gpsetlinewidth{2.00}
-\draw[gp path] (2.424,3.896)--(15.447,3.896);
+\draw[gp path] (2.424,3.691)--(13.667,3.691);
 \gpcolor{color=gp lt color border}
 \gpsetlinewidth{1.00}
-\draw[gp path] (2.424,3.896)--(2.604,3.896);
-\draw[gp path] (15.447,3.896)--(15.267,3.896);
-\node[gp node right] at (2.240,3.896) {$2.05\times10^{11}$};
+\draw[gp path] (2.424,3.691)--(2.604,3.691);
+\node[gp node right] at (2.240,3.691) {$9.5\times10^{10}$};
 \gpcolor{rgb color={0.753,0.753,0.753}}
 \gpsetlinewidth{2.00}
-\draw[gp path] (2.424,4.922)--(15.447,4.922);
+\draw[gp path] (2.424,4.614)--(13.667,4.614);
 \gpcolor{color=gp lt color border}
 \gpsetlinewidth{1.00}
-\draw[gp path] (2.424,4.922)--(2.604,4.922);
-\draw[gp path] (15.447,4.922)--(15.267,4.922);
-\node[gp node right] at (2.240,4.922) {$2.1\times10^{11}$};
+\draw[gp path] (2.424,4.614)--(2.604,4.614);
+\node[gp node right] at (2.240,4.614) {$1\times10^{11}$};
 \gpcolor{rgb color={0.753,0.753,0.753}}
 \gpsetlinewidth{2.00}
-\draw[gp path] (2.424,5.947)--(15.447,5.947);
+\draw[gp path] (2.424,5.537)--(13.667,5.537);
 \gpcolor{color=gp lt color border}
 \gpsetlinewidth{1.00}
-\draw[gp path] (2.424,5.947)--(2.604,5.947);
-\draw[gp path] (15.447,5.947)--(15.267,5.947);
-\node[gp node right] at (2.240,5.947) {$2.15\times10^{11}$};
+\draw[gp path] (2.424,5.537)--(2.604,5.537);
+\node[gp node right] at (2.240,5.537) {$1.05\times10^{11}$};
 \gpcolor{rgb color={0.753,0.753,0.753}}
 \gpsetlinewidth{2.00}
-\draw[gp path] (2.424,6.973)--(15.447,6.973);
+\draw[gp path] (2.424,6.460)--(13.667,6.460);
 \gpcolor{color=gp lt color border}
 \gpsetlinewidth{1.00}
-\draw[gp path] (2.424,6.973)--(2.604,6.973);
-\draw[gp path] (15.447,6.973)--(15.267,6.973);
-\node[gp node right] at (2.240,6.973) {$2.2\times10^{11}$};
+\draw[gp path] (2.424,6.460)--(2.604,6.460);
+\node[gp node right] at (2.240,6.460) {$1.1\times10^{11}$};
 \gpcolor{rgb color={0.753,0.753,0.753}}
 \gpsetlinewidth{2.00}
-\draw[gp path] (2.424,7.998)--(15.447,7.998);
+\draw[gp path] (2.424,7.383)--(13.667,7.383);
 \gpcolor{color=gp lt color border}
 \gpsetlinewidth{1.00}
-\draw[gp path] (2.424,7.998)--(2.604,7.998);
-\draw[gp path] (15.447,7.998)--(15.267,7.998);
-\node[gp node right] at (2.240,7.998) {$2.25\times10^{11}$};
+\draw[gp path] (2.424,7.383)--(2.604,7.383);
+\node[gp node right] at (2.240,7.383) {$1.15\times10^{11}$};
 \gpcolor{rgb color={0.753,0.753,0.753}}
 \gpsetlinewidth{2.00}
-\draw[gp path] (2.424,9.024)--(15.447,9.024);
+\draw[gp path] (2.424,8.306)--(13.667,8.306);
 \gpcolor{color=gp lt color border}
 \gpsetlinewidth{1.00}
-\draw[gp path] (2.424,9.024)--(2.604,9.024);
-\draw[gp path] (15.447,9.024)--(15.267,9.024);
-\node[gp node right] at (2.240,9.024) {$2.3\times10^{11}$};
+\draw[gp path] (2.424,8.306)--(2.604,8.306);
+\node[gp node right] at (2.240,8.306) {$1.2\times10^{11}$};
 \gpcolor{rgb color={0.753,0.753,0.753}}
 \gpsetlinewidth{2.00}
-\draw[gp path] (2.424,10.049)--(15.447,10.049);
+\draw[gp path] (2.424,9.229)--(13.667,9.229);
 \gpcolor{color=gp lt color border}
 \gpsetlinewidth{1.00}
-\draw[gp path] (2.424,10.049)--(2.604,10.049);
-\draw[gp path] (15.447,10.049)--(15.267,10.049);
-\node[gp node right] at (2.240,10.049) {$2.35\times10^{11}$};
+\draw[gp path] (2.424,9.229)--(2.604,9.229);
+\node[gp node right] at (2.240,9.229) {$1.25\times10^{11}$};
 \gpcolor{rgb color={0.753,0.753,0.753}}
 \gpsetlinewidth{2.00}
-\draw[gp path] (2.424,11.075)--(15.447,11.075);
+\draw[gp path] (2.424,10.152)--(7.047,10.152);
+\draw[gp path] (13.483,10.152)--(13.667,10.152);
+\gpcolor{color=gp lt color border}
+\gpsetlinewidth{1.00}
+\draw[gp path] (2.424,10.152)--(2.604,10.152);
+\node[gp node right] at (2.240,10.152) {$1.3\times10^{11}$};
+\gpcolor{rgb color={0.753,0.753,0.753}}
+\gpsetlinewidth{2.00}
+\draw[gp path] (2.424,11.075)--(13.667,11.075);
 \gpcolor{color=gp lt color border}
 \gpsetlinewidth{1.00}
 \draw[gp path] (2.424,11.075)--(2.604,11.075);
-\draw[gp path] (15.447,11.075)--(15.267,11.075);
-\node[gp node right] at (2.240,11.075) {$2.4\times10^{11}$};
+\node[gp node right] at (2.240,11.075) {$1.35\times10^{11}$};
 \gpcolor{rgb color={0.753,0.753,0.753}}
 \gpsetlinewidth{2.00}
 \draw[gp path] (2.424,1.845)--(2.424,11.075);
@@ -94,131 +92,219 @@
 \node[gp node left,rotate=270] at (2.424,1.661) {$0$};
 \gpcolor{rgb color={0.753,0.753,0.753}}
 \gpsetlinewidth{2.00}
-\draw[gp path] (4.052,1.845)--(4.052,11.075);
+\draw[gp path] (3.829,1.845)--(3.829,11.075);
 \gpcolor{color=gp lt color border}
 \gpsetlinewidth{1.00}
-\draw[gp path] (4.052,1.845)--(4.052,2.025);
-\draw[gp path] (4.052,11.075)--(4.052,10.895);
-\node[gp node left,rotate=270] at (4.052,1.661) {$50$};
+\draw[gp path] (3.829,1.845)--(3.829,2.025);
+\draw[gp path] (3.829,11.075)--(3.829,10.895);
+\node[gp node left,rotate=270] at (3.829,1.661) {$50$};
 \gpcolor{rgb color={0.753,0.753,0.753}}
 \gpsetlinewidth{2.00}
-\draw[gp path] (5.680,1.845)--(5.680,11.075);
+\draw[gp path] (5.235,1.845)--(5.235,11.075);
 \gpcolor{color=gp lt color border}
 \gpsetlinewidth{1.00}
-\draw[gp path] (5.680,1.845)--(5.680,2.025);
-\draw[gp path] (5.680,11.075)--(5.680,10.895);
-\node[gp node left,rotate=270] at (5.680,1.661) {$100$};
+\draw[gp path] (5.235,1.845)--(5.235,2.025);
+\draw[gp path] (5.235,11.075)--(5.235,10.895);
+\node[gp node left,rotate=270] at (5.235,1.661) {$100$};
 \gpcolor{rgb color={0.753,0.753,0.753}}
 \gpsetlinewidth{2.00}
-\draw[gp path] (7.308,1.845)--(7.308,11.075);
+\draw[gp path] (6.640,1.845)--(6.640,11.075);
 \gpcolor{color=gp lt color border}
 \gpsetlinewidth{1.00}
-\draw[gp path] (7.308,1.845)--(7.308,2.025);
-\draw[gp path] (7.308,11.075)--(7.308,10.895);
-\node[gp node left,rotate=270] at (7.308,1.661) {$150$};
+\draw[gp path] (6.640,1.845)--(6.640,2.025);
+\draw[gp path] (6.640,11.075)--(6.640,10.895);
+\node[gp node left,rotate=270] at (6.640,1.661) {$150$};
 \gpcolor{rgb color={0.753,0.753,0.753}}
 \gpsetlinewidth{2.00}
-\draw[gp path] (8.936,1.845)--(8.936,11.075);
+\draw[gp path] (8.046,1.845)--(8.046,9.355);
+\draw[gp path] (8.046,10.895)--(8.046,11.075);
 \gpcolor{color=gp lt color border}
 \gpsetlinewidth{1.00}
-\draw[gp path] (8.936,1.845)--(8.936,2.025);
-\draw[gp path] (8.936,11.075)--(8.936,10.895);
-\node[gp node left,rotate=270] at (8.936,1.661) {$200$};
+\draw[gp path] (8.046,1.845)--(8.046,2.025);
+\draw[gp path] (8.046,11.075)--(8.046,10.895);
+\node[gp node left,rotate=270] at (8.046,1.661) {$200$};
 \gpcolor{rgb color={0.753,0.753,0.753}}
 \gpsetlinewidth{2.00}
-\draw[gp path] (10.563,1.845)--(10.563,11.075);
+\draw[gp path] (9.451,1.845)--(9.451,9.355);
+\draw[gp path] (9.451,10.895)--(9.451,11.075);
 \gpcolor{color=gp lt color border}
 \gpsetlinewidth{1.00}
-\draw[gp path] (10.563,1.845)--(10.563,2.025);
-\draw[gp path] (10.563,11.075)--(10.563,10.895);
-\node[gp node left,rotate=270] at (10.563,1.661) {$250$};
+\draw[gp path] (9.451,1.845)--(9.451,2.025);
+\draw[gp path] (9.451,11.075)--(9.451,10.895);
+\node[gp node left,rotate=270] at (9.451,1.661) {$250$};
 \gpcolor{rgb color={0.753,0.753,0.753}}
 \gpsetlinewidth{2.00}
-\draw[gp path] (12.191,1.845)--(12.191,11.075);
+\draw[gp path] (10.856,1.845)--(10.856,9.355);
+\draw[gp path] (10.856,10.895)--(10.856,11.075);
 \gpcolor{color=gp lt color border}
 \gpsetlinewidth{1.00}
-\draw[gp path] (12.191,1.845)--(12.191,2.025);
-\draw[gp path] (12.191,11.075)--(12.191,10.895);
-\node[gp node left,rotate=270] at (12.191,1.661) {$300$};
+\draw[gp path] (10.856,1.845)--(10.856,2.025);
+\draw[gp path] (10.856,11.075)--(10.856,10.895);
+\node[gp node left,rotate=270] at (10.856,1.661) {$300$};
 \gpcolor{rgb color={0.753,0.753,0.753}}
 \gpsetlinewidth{2.00}
-\draw[gp path] (13.819,1.845)--(13.819,11.075);
+\draw[gp path] (12.262,1.845)--(12.262,9.355);
+\draw[gp path] (12.262,10.895)--(12.262,11.075);
 \gpcolor{color=gp lt color border}
 \gpsetlinewidth{1.00}
-\draw[gp path] (13.819,1.845)--(13.819,2.025);
-\draw[gp path] (13.819,11.075)--(13.819,10.895);
-\node[gp node left,rotate=270] at (13.819,1.661) {$350$};
+\draw[gp path] (12.262,1.845)--(12.262,2.025);
+\draw[gp path] (12.262,11.075)--(12.262,10.895);
+\node[gp node left,rotate=270] at (12.262,1.661) {$350$};
 \gpcolor{rgb color={0.753,0.753,0.753}}
 \gpsetlinewidth{2.00}
-\draw[gp path] (15.447,1.845)--(15.447,11.075);
+\draw[gp path] (13.667,1.845)--(13.667,11.075);
 \gpcolor{color=gp lt color border}
 \gpsetlinewidth{1.00}
-\draw[gp path] (15.447,1.845)--(15.447,2.025);
-\draw[gp path] (15.447,11.075)--(15.447,10.895);
-\node[gp node left,rotate=270] at (15.447,1.661) {$400$};
-\draw[gp path] (2.424,11.075)--(2.424,1.845)--(15.447,1.845)--(15.447,11.075)--cycle;
+\draw[gp path] (13.667,1.845)--(13.667,2.025);
+\draw[gp path] (13.667,11.075)--(13.667,10.895);
+\node[gp node left,rotate=270] at (13.667,1.661) {$400$};
+\draw[gp path] (13.667,1.845)--(13.487,1.845);
+\node[gp node left] at (13.851,1.845) {$102000$};
+\draw[gp path] (13.667,3.164)--(13.487,3.164);
+\node[gp node left] at (13.851,3.164) {$103000$};
+\draw[gp path] (13.667,4.482)--(13.487,4.482);
+\node[gp node left] at (13.851,4.482) {$104000$};
+\draw[gp path] (13.667,5.801)--(13.487,5.801);
+\node[gp node left] at (13.851,5.801) {$105000$};
+\draw[gp path] (13.667,7.119)--(13.487,7.119);
+\node[gp node left] at (13.851,7.119) {$106000$};
+\draw[gp path] (13.667,8.438)--(13.487,8.438);
+\node[gp node left] at (13.851,8.438) {$107000$};
+\draw[gp path] (13.667,9.756)--(13.487,9.756);
+\node[gp node left] at (13.851,9.756) {$108000$};
+\draw[gp path] (13.667,11.075)--(13.487,11.075);
+\node[gp node left] at (13.851,11.075) {$109000$};
+\draw[gp path] (2.424,11.075)--(2.424,1.845)--(13.667,1.845)--(13.667,11.075)--cycle;
+\draw[gp path] (7.047,9.355)--(7.047,10.895)--(13.483,10.895)--(13.483,9.355)--cycle;
+\node[gp node right] at (12.199,10.510) {Strategic urgency};
 \gpcolor{rgb color={0.000,0.000,0.000}}
-\gpsetlinewidth{2.00}
-\draw[gp path] (2.424,3.082)--(2.424,3.047)--(2.457,2.990)--(2.457,2.987)--(2.457,2.955)%
-  --(2.457,2.900)--(2.457,2.888)--(2.457,2.873)--(2.457,2.849)--(2.457,2.845)--(2.457,2.836)%
-  --(2.457,2.816)--(2.457,2.803)--(2.489,2.802)--(2.489,2.786)--(2.489,2.770)--(2.489,2.764)%
-  --(2.489,2.752)--(2.489,2.742)--(2.489,2.731)--(2.489,2.715)--(2.489,2.714)--(2.489,2.686)%
-  --(2.489,2.673)--(2.489,2.667)--(2.522,2.659)--(2.522,2.654)--(2.522,2.643)--(2.522,2.640)%
-  --(2.522,2.627)--(2.522,2.617)--(2.522,2.616)--(2.522,2.609)--(2.522,2.608)--(2.522,2.598)%
-  --(2.522,2.592)--(2.522,2.576)--(2.554,2.576)--(2.554,2.571)--(2.554,2.567)--(2.554,2.558)%
-  --(2.554,2.554)--(2.554,2.553)--(2.554,2.546)--(2.554,2.539)--(2.554,2.534)--(2.554,2.526)%
-  --(2.587,2.526)--(2.587,2.524)--(2.587,2.522)--(2.587,2.520)--(2.587,2.513)--(2.587,2.511)%
-  --(2.587,2.506)--(2.587,2.500)--(2.587,2.497)--(2.619,2.495)--(2.619,2.493)--(2.619,2.485)%
-  --(2.619,2.484)--(2.619,2.482)--(2.619,2.481)--(2.619,2.475)--(2.652,2.474)--(2.652,2.473)%
-  --(2.652,2.467)--(2.652,2.464)--(2.652,2.454)--(2.652,2.450)--(2.652,2.435)--(2.684,2.431)%
-  --(2.684,2.423)--(2.684,2.420)--(2.684,2.417)--(2.684,2.401)--(2.717,2.394)--(2.717,2.393)%
-  --(2.717,2.392)--(2.717,2.384)--(2.717,2.383)--(2.717,2.376)--(2.717,2.372)--(2.717,2.369)%
-  --(2.750,2.369)--(2.750,2.368)--(2.750,2.364)--(2.750,2.363)--(2.750,2.355)--(2.782,2.353)%
-  --(2.782,2.352)--(2.782,2.350)--(2.782,2.349)--(2.815,2.348)--(2.815,2.346)--(2.815,2.343)%
-  --(2.815,2.342)--(2.815,2.338)--(2.815,2.337)--(2.815,2.335)--(2.847,2.332)--(2.847,2.327)%
-  --(2.847,2.323)--(2.847,2.319)--(2.847,2.315)--(2.847,2.311)--(2.880,2.309)--(2.880,2.307)%
-  --(2.912,2.307)--(2.912,2.306)--(2.912,2.302)--(2.945,2.296)--(2.945,2.295)--(2.945,2.290)%
-  --(2.945,2.286)--(2.945,2.285)--(2.977,2.284)--(2.977,2.283)--(3.010,2.278)--(3.010,2.277)%
-  --(3.043,2.275)--(3.043,2.267)--(3.043,2.262)--(3.108,2.255)--(3.108,2.254)--(3.108,2.253)%
-  --(3.108,2.251)--(3.140,2.251)--(3.140,2.250)--(3.173,2.247)--(3.173,2.245)--(3.205,2.244)%
-  --(3.205,2.242)--(3.238,2.241)--(3.238,2.240)--(3.238,2.238)--(3.270,2.237)--(3.270,2.235)%
-  --(3.270,2.231)--(3.303,2.231)--(3.336,2.229)--(3.336,2.228)--(3.336,2.226)--(3.368,2.226)%
-  --(3.368,2.223)--(3.368,2.219)--(3.433,2.219)--(3.466,2.218)--(3.466,2.217)--(3.498,2.216)%
-  --(3.498,2.215)--(3.498,2.214)--(3.498,2.212)--(3.531,2.210)--(3.531,2.209)--(3.564,2.207)%
-  --(3.564,2.204)--(3.596,2.204)--(3.596,2.203)--(3.629,2.176)--(3.629,2.175)--(3.661,2.175)%
-  --(3.661,2.174)--(3.694,2.171)--(3.694,2.170)--(3.726,2.167)--(3.726,2.126)--(3.726,2.125)%
-  --(3.759,2.121)--(3.791,2.121)--(3.791,2.117)--(3.791,2.114)--(3.824,2.114)--(3.857,2.112)%
-  --(3.857,2.109)--(3.889,2.107)--(3.889,2.106)--(3.889,2.105)--(3.889,2.104)--(3.922,2.104)%
-  --(3.922,2.101)--(3.954,2.100)--(3.954,2.099)--(3.987,2.097)--(3.987,2.096)--(4.019,2.094)%
-  --(4.084,2.091)--(4.084,2.090)--(4.150,2.088)--(4.215,2.087)--(4.345,2.085)--(4.377,2.083)%
-  --(4.410,2.082)--(4.410,2.081)--(4.475,3.051)--(4.475,3.050)--(4.703,3.049)--(4.736,3.046)%
-  --(4.768,3.043)--(4.833,3.041)--(4.931,3.040)--(4.931,3.038)--(4.931,3.037)--(5.029,3.035)%
-  --(5.061,3.034)--(5.094,3.034)--(5.126,3.030)--(5.126,3.029)--(5.191,3.028)--(5.289,3.028)%
-  --(5.322,3.028)--(5.322,3.027)--(5.354,3.027)--(5.387,3.027)--(5.419,3.025)--(5.419,3.022)%
-  --(5.615,3.022)--(5.615,3.021)--(5.647,3.018)--(5.680,3.018)--(5.712,3.018)--(5.712,3.016)%
-  --(5.777,3.016)--(5.777,3.015)--(5.843,3.013)--(5.908,3.012)--(6.070,3.012)--(6.136,3.011)%
-  --(6.168,3.011)--(6.363,3.010)--(6.363,3.009)--(6.363,3.008)--(6.396,4.436)--(6.429,4.435)%
-  --(6.461,4.434)--(6.526,4.434)--(6.624,4.433)--(6.819,4.432)--(6.852,4.432)--(6.949,4.432)%
-  --(7.015,4.431)--(7.015,4.430)--(7.015,4.429)--(7.047,4.429)--(7.177,4.429)--(7.308,4.427)%
-  --(7.340,4.426)--(7.438,4.425)--(7.438,4.424)--(7.470,4.424)--(7.536,4.423)--(7.666,4.421)%
-  --(7.763,4.421)--(7.796,4.420)--(7.829,4.420)--(8.122,4.419)--(8.187,4.419)--(8.252,4.418)%
-  --(8.317,4.418)--(8.382,5.159)--(8.675,5.159)--(8.740,5.158)--(8.773,5.158)--(8.773,5.157)%
-  --(8.805,5.156)--(8.805,5.154)--(8.838,5.154)--(8.903,5.154)--(8.936,5.153)--(9.001,5.152)%
-  --(9.033,5.151)--(9.554,5.150)--(9.782,5.150)--(9.815,5.148)--(9.815,5.147)--(9.912,5.146)%
-  --(9.945,5.145)--(10.075,5.143)--(10.108,5.140)--(10.368,7.955)--(10.628,7.953)--(10.759,7.951)%
-  --(10.889,7.950)--(10.922,7.950)--(11.117,7.949)--(11.149,7.947)--(11.247,7.946)--(11.377,7.946)%
-  --(11.442,7.943)--(11.540,7.942)--(11.638,7.942)--(11.703,7.942)--(11.735,7.941)--(11.735,7.940)%
-  --(11.898,7.940)--(11.898,7.939)--(11.931,7.936)--(11.963,7.934)--(12.094,7.934)--(12.256,10.557)%
-  --(12.419,10.556)--(12.484,10.555)--(12.517,10.554)--(12.549,10.553)--(12.614,10.552)--(12.647,10.552)%
-  --(12.680,10.551)--(12.777,10.550)--(12.810,10.549)--(12.908,10.548)--(12.973,10.546)--(13.005,10.544)%
-  --(13.201,10.543)--(13.396,10.542)--(13.787,10.537)--(13.852,10.535)--(13.917,10.535);
+\gpsetlinewidth{2.50}
+\draw[gp path] (12.383,10.510)--(13.299,10.510);
+\draw[gp path] (2.424,2.520)--(2.424,2.537)--(2.424,2.545)--(2.424,2.552)--(2.424,2.559)%
+  --(2.424,2.564)--(2.424,2.586)--(2.424,2.595)--(2.424,2.607)--(2.424,2.631)--(2.424,2.642)%
+  --(2.424,2.650)--(2.424,2.664)--(2.424,2.688)--(2.424,2.694)--(2.424,2.702)--(2.424,2.711)%
+  --(2.424,2.713)--(2.424,2.718)--(2.424,2.723)--(2.424,2.740)--(2.424,2.759)--(2.424,2.758)%
+  --(2.424,2.766)--(2.424,2.783)--(2.424,2.786)--(2.424,2.795)--(2.424,2.813)--(2.424,2.827)%
+  --(2.424,2.838)--(2.424,2.834)--(2.424,2.873)--(2.424,2.880)--(2.424,2.878)--(2.424,2.876)%
+  --(2.424,2.872)--(2.424,2.883)--(2.424,2.875)--(2.424,2.889)--(2.424,2.894)--(2.424,2.877)%
+  --(2.424,2.924)--(2.424,2.921)--(2.424,2.919)--(2.424,2.944)--(2.424,2.929)--(2.424,2.925)%
+  --(2.424,2.923)--(2.424,2.935)--(2.424,2.931)--(2.424,2.939)--(2.424,2.938)--(2.424,2.939)%
+  --(2.424,2.947)--(2.424,2.946)--(2.424,2.949)--(2.424,2.972)--(2.424,2.966)--(2.424,2.967)%
+  --(2.424,2.963)--(2.424,2.988)--(2.424,2.985)--(2.424,2.981)--(2.424,2.977)--(2.452,2.994)%
+  --(2.452,2.995)--(2.452,2.990)--(2.452,2.995)--(2.452,3.003)--(2.452,3.014)--(2.452,3.013)%
+  --(2.452,3.014)--(2.452,3.009)--(2.452,3.007)--(2.452,3.011)--(2.452,3.013)--(2.452,3.010)%
+  --(2.452,3.019)--(2.452,3.014)--(2.452,3.013)--(2.452,3.012)--(2.452,3.017)--(2.452,3.014)%
+  --(2.452,3.003)--(2.452,3.013)--(2.452,3.009)--(2.452,3.008)--(2.452,3.012)--(2.452,3.008)%
+  --(2.452,3.004)--(2.452,3.002)--(2.452,3.012)--(2.452,3.011)--(2.452,3.006)--(2.452,3.003)%
+  --(2.452,3.013)--(2.452,3.035)--(2.452,3.034)--(2.452,3.029)--(2.452,3.026)--(2.452,3.025)%
+  --(2.452,3.036)--(2.452,3.028)--(2.452,3.025)--(2.452,3.027)--(2.452,3.021)--(2.452,3.017)%
+  --(2.452,3.014)--(2.452,3.013)--(2.452,3.011)--(2.452,3.007)--(2.480,3.019)--(2.480,3.045)%
+  --(2.480,3.044)--(2.480,3.057)--(2.480,3.056)--(2.480,3.053)--(2.480,3.045)--(2.480,3.040)%
+  --(2.480,3.037)--(2.480,3.028)--(2.480,3.013)--(2.480,3.008)--(2.480,3.006)--(2.480,3.004)%
+  --(2.480,3.010)--(2.480,3.015)--(2.480,3.014)--(2.480,3.011)--(2.480,3.008)--(2.480,3.007)%
+  --(2.480,3.004)--(2.480,2.998)--(2.480,2.999)--(2.480,2.996)--(2.480,2.994)--(2.480,2.981)%
+  --(2.480,2.975)--(2.480,2.973)--(2.480,2.969)--(2.508,2.965)--(2.508,2.963)--(2.508,2.961)%
+  --(2.508,2.957)--(2.508,2.956)--(2.508,2.955)--(2.508,2.952)--(2.508,2.949)--(2.508,2.947)%
+  --(2.508,2.945)--(2.508,2.942)--(2.508,2.940)--(2.508,2.928)--(2.536,2.928)--(2.536,2.924)%
+  --(2.536,2.923)--(2.536,2.921)--(2.536,2.920)--(2.536,2.914)--(2.536,2.910)--(2.536,2.907)%
+  --(2.536,2.903)--(2.536,2.900)--(2.536,2.895)--(2.536,2.894)--(2.565,2.892)--(2.565,2.890)%
+  --(2.565,2.886)--(2.565,2.883)--(2.565,2.881)--(2.565,2.879)--(2.565,2.876)--(2.565,2.873)%
+  --(2.593,2.872)--(2.593,2.871)--(2.593,2.868)--(2.593,2.867)--(2.593,2.866)--(2.593,2.863)%
+  --(2.621,2.861)--(2.621,2.858)--(2.621,2.856)--(2.621,2.853)--(2.649,2.852)--(2.649,2.851)%
+  --(2.649,2.848)--(2.649,2.844)--(2.649,2.842)--(2.649,2.839)--(2.649,2.837)--(2.649,2.832)%
+  --(2.677,2.830)--(2.677,2.826)--(2.677,2.825)--(2.677,2.823)--(2.677,2.818)--(2.677,2.817)%
+  --(2.677,2.816)--(2.677,2.815)--(2.705,2.813)--(2.705,2.812)--(2.705,2.811)--(2.705,2.809)%
+  --(2.705,2.808)--(2.705,2.806)--(2.733,2.805)--(2.733,2.803)--(2.733,2.800)--(2.733,2.797)%
+  --(2.761,2.796)--(2.761,2.795)--(2.761,2.793)--(2.789,2.792)--(2.789,2.791)--(2.789,2.788)%
+  --(2.818,2.786)--(2.818,2.784)--(2.846,2.783)--(2.846,2.782)--(2.846,2.781)--(2.874,2.778)%
+  --(2.874,2.777)--(2.902,2.775)--(2.902,2.774)--(2.930,2.772)--(2.930,2.771)--(2.958,2.768)%
+  --(3.014,2.767)--(3.014,2.766)--(3.014,2.765)--(3.042,2.765)--(3.042,2.764)--(3.042,2.763)%
+  --(3.099,2.760)--(3.127,2.758)--(3.127,2.757)--(3.127,2.754)--(3.155,2.753)--(3.183,2.752)%
+  --(3.211,2.752)--(3.211,2.751)--(3.211,2.750)--(3.239,2.750)--(3.267,2.747)--(3.295,2.746)%
+  --(3.323,2.745)--(3.323,2.744)--(3.380,2.744)--(3.380,2.743)--(3.380,2.742)--(3.464,2.741)%
+  --(3.520,2.740)--(3.548,2.740)--(3.548,2.738)--(3.576,2.738)--(3.605,2.737)--(3.661,2.737)%
+  --(3.689,2.736)--(3.745,2.735)--(3.773,2.735)--(3.857,2.734)--(3.886,2.734)--(3.970,2.734)%
+  --(3.998,2.732)--(3.998,2.731)--(4.026,2.730)--(4.054,2.730)--(4.082,2.730)--(4.110,2.730)%
+  --(4.223,3.555)--(4.251,3.554)--(4.307,3.553)--(4.448,3.553)--(4.504,3.552)--(4.532,3.552)%
+  --(4.532,3.551)--(4.588,3.549)--(4.588,3.548)--(4.616,3.548)--(4.644,3.547)--(4.701,3.547)%
+  --(4.729,3.546)--(4.813,3.545)--(4.897,3.545)--(4.897,3.544)--(4.926,3.543)--(4.954,3.543)%
+  --(4.982,3.541)--(5.010,3.540)--(5.094,3.539)--(5.122,3.537)--(5.150,3.536)--(5.150,3.535)%
+  --(5.179,3.535)--(5.207,3.535)--(5.207,3.534)--(5.263,3.534)--(5.291,3.534)--(5.319,3.532)%
+  --(5.319,3.531)--(5.347,3.531)--(5.347,3.530)--(5.375,3.529)--(5.432,3.529)--(5.460,3.527)%
+  --(5.488,3.527)--(5.488,3.526)--(5.656,3.525)--(5.684,3.524)--(5.797,3.523)--(5.853,3.523)%
+  --(5.853,3.522)--(5.881,3.520)--(5.966,4.804)--(6.022,4.804)--(6.050,4.802)--(6.050,4.801)%
+  --(6.050,4.799)--(6.106,4.798)--(6.134,4.796)--(6.190,4.796)--(6.219,4.795)--(6.331,4.795)%
+  --(6.584,4.794)--(6.612,4.792)--(6.612,4.791)--(6.640,4.791)--(6.696,4.791)--(6.809,4.790)%
+  --(6.865,4.789)--(6.949,4.788)--(6.949,4.786)--(7.062,4.786)--(7.399,4.786)--(7.540,4.785)%
+  --(7.540,4.784)--(7.568,4.784)--(7.708,5.451)--(7.708,5.450)--(7.821,5.450)--(7.989,5.449)%
+  --(8.158,5.447)--(8.327,5.445)--(8.355,5.444)--(8.495,5.444)--(8.523,5.444)--(8.551,5.443)%
+  --(8.608,5.442)--(8.833,5.440)--(8.889,5.440)--(8.917,5.439)--(8.917,5.438)--(8.973,5.438)%
+  --(9.085,5.436)--(9.114,5.436)--(9.142,5.436)--(9.170,5.434)--(9.198,5.434)--(9.226,5.433)%
+  --(9.423,7.960)--(9.451,7.960)--(9.704,7.959)--(9.760,7.958)--(9.844,7.958)--(9.929,7.958)%
+  --(10.097,7.957)--(10.266,7.957)--(10.294,7.957)--(10.435,7.956)--(10.463,7.956)--(10.519,7.956)%
+  --(10.519,7.954)--(10.575,7.954)--(10.575,7.953)--(10.603,7.953)--(10.688,7.952)--(10.772,7.951)%
+  --(10.772,7.948)--(10.912,7.948)--(10.912,7.947)--(10.997,10.273)--(11.278,10.271)--(11.306,10.270)%
+  --(11.531,10.270)--(11.587,10.270)--(11.615,10.269)--(11.756,10.269)--(11.784,10.268)--(11.812,10.268)%
+  --(11.840,10.266)--(11.868,10.265)--(11.924,10.265)--(11.981,10.265)--(12.093,10.264)--(12.234,10.264)%
+  --(12.262,10.263)--(12.374,10.263)--(12.458,10.262)--(12.571,10.261);
+\gpcolor{color=gp lt color border}
+\node[gp node right] at (12.199,9.740) {Strategic Resource penalty};
+\gpcolor{rgb color={0.184,0.243,0.918}}
+\draw[gp path] (12.383,9.740)--(13.299,9.740);
+\draw[gp path] (2.424,10.482)--(2.424,10.157)--(2.424,9.846)--(2.424,9.547)--(2.424,9.381)%
+  --(2.424,9.273)--(2.424,9.002)--(2.424,8.814)--(2.424,8.613)--(2.424,8.433)--(2.424,8.090)%
+  --(2.424,8.008)--(2.424,7.783)--(2.424,7.689)--(2.424,7.611)--(2.424,7.527)--(2.424,7.227)%
+  --(2.424,7.113)--(2.424,7.040)--(2.424,6.991)--(2.424,6.766)--(2.424,6.616)--(2.424,6.486)%
+  --(2.424,6.428)--(2.424,6.254)--(2.424,6.225)--(2.424,6.137)--(2.424,6.071)--(2.424,5.964)%
+  --(2.424,5.919)--(2.424,5.711)--(2.424,5.645)--(2.424,5.599)--(2.424,5.403)--(2.424,5.351)%
+  --(2.424,5.313)--(2.424,5.082)--(2.424,5.062)--(2.424,4.983)--(2.424,4.826)--(2.424,4.820)%
+  --(2.424,4.787)--(2.424,4.772)--(2.424,4.743)--(2.424,4.580)--(2.424,4.539)--(2.424,4.499)%
+  --(2.424,4.490)--(2.424,4.462)--(2.424,4.374)--(2.424,4.370)--(2.424,4.358)--(2.424,4.301)%
+  --(2.424,4.251)--(2.424,4.154)--(2.424,4.146)--(2.424,4.073)--(2.424,4.052)--(2.424,4.036)%
+  --(2.424,3.911)--(2.424,3.891)--(2.424,3.886)--(2.424,3.849)--(2.424,3.785)--(2.424,3.688)%
+  --(2.424,3.683)--(2.424,3.678)--(2.424,3.663)--(2.452,3.646)--(2.452,3.535)--(2.452,3.520)%
+  --(2.452,3.480)--(2.452,3.460)--(2.452,3.444)--(2.452,3.443)--(2.452,3.422)--(2.452,3.390)%
+  --(2.452,3.365)--(2.452,3.352)--(2.452,3.336)--(2.452,3.305)--(2.452,3.269)--(2.452,3.245)%
+  --(2.452,3.243)--(2.452,3.233)--(2.452,3.223)--(2.452,3.005)--(2.452,2.997)--(2.452,2.984)%
+  --(2.452,2.964)--(2.452,2.953)--(2.452,2.928)--(2.452,2.756)--(2.452,2.698)--(2.452,2.690)%
+  --(2.452,2.661)--(2.452,2.653)--(2.452,2.645)--(2.452,2.637)--(2.452,2.616)--(2.452,2.608)%
+  --(2.452,2.603)--(2.480,2.545)--(2.480,2.520)--(2.480,2.510)--(2.480,2.496)--(2.480,2.481)%
+  --(2.480,2.440)--(2.480,2.429)--(2.480,2.426)--(2.480,2.419)--(2.480,2.417)--(2.480,2.407)%
+  --(2.480,2.399)--(2.508,2.399)--(2.536,2.399)--(2.565,2.399)--(2.593,2.399)--(2.621,2.399)%
+  --(2.649,2.399)--(2.677,2.399)--(2.705,2.399)--(2.733,2.399)--(2.761,2.399)--(2.789,2.399)%
+  --(2.818,2.399)--(2.846,2.399)--(2.874,2.399)--(2.902,2.399)--(2.930,2.399)--(2.958,2.399)%
+  --(3.014,2.399)--(3.042,2.399)--(3.099,2.399)--(3.127,2.399)--(3.155,2.399)--(3.183,2.399)%
+  --(3.211,2.399)--(3.239,2.399)--(3.267,2.399)--(3.295,2.399)--(3.323,2.399)--(3.380,2.399)%
+  --(3.464,2.399)--(3.520,2.399)--(3.548,2.399)--(3.576,2.399)--(3.605,2.399)--(3.661,2.399)%
+  --(3.689,2.399)--(3.745,2.399)--(3.773,2.399)--(3.857,2.399)--(3.886,2.399)--(3.970,2.399)%
+  --(3.998,2.399)--(4.026,2.399)--(4.054,2.399)--(4.082,2.399)--(4.110,2.399)--(4.223,2.399)%
+  --(4.251,2.399)--(4.307,2.399)--(4.448,2.399)--(4.504,2.399)--(4.532,2.399)--(4.588,2.399)%
+  --(4.616,2.399)--(4.644,2.399)--(4.701,2.399)--(4.729,2.399)--(4.813,2.399)--(4.897,2.399)%
+  --(4.926,2.399)--(4.954,2.399)--(4.982,2.399)--(5.010,2.399)--(5.094,2.399)--(5.122,2.399)%
+  --(5.150,2.399)--(5.179,2.399)--(5.207,2.399)--(5.263,2.399)--(5.291,2.399)--(5.319,2.399)%
+  --(5.347,2.399)--(5.375,2.399)--(5.432,2.399)--(5.460,2.399)--(5.488,2.399)--(5.656,2.399)%
+  --(5.684,2.399)--(5.797,2.399)--(5.853,2.399)--(5.881,2.399)--(5.966,2.399)--(6.022,2.399)%
+  --(6.050,2.399)--(6.106,2.399)--(6.134,2.399)--(6.190,2.399)--(6.219,2.399)--(6.331,2.399)%
+  --(6.584,2.399)--(6.612,2.399)--(6.640,2.399)--(6.696,2.399)--(6.809,2.399)--(6.865,2.399)%
+  --(6.949,2.399)--(7.062,2.399)--(7.399,2.399)--(7.540,2.399)--(7.568,2.399)--(7.708,2.399)%
+  --(7.821,2.399)--(7.989,2.399)--(8.158,2.399)--(8.327,2.399)--(8.355,2.399)--(8.495,2.399)%
+  --(8.523,2.399)--(8.551,2.399)--(8.608,2.399)--(8.833,2.399)--(8.889,2.399)--(8.917,2.399)%
+  --(8.973,2.399)--(9.085,2.399)--(9.114,2.399)--(9.142,2.399)--(9.170,2.399)--(9.198,2.399)%
+  --(9.226,2.399)--(9.423,2.399)--(9.451,2.399)--(9.704,2.399)--(9.760,2.399)--(9.844,2.399)%
+  --(9.929,2.399)--(10.097,2.399)--(10.266,2.399)--(10.294,2.399)--(10.435,2.399)--(10.463,2.399)%
+  --(10.519,2.399)--(10.575,2.399)--(10.603,2.399)--(10.688,2.399)--(10.772,2.399)--(10.912,2.399)%
+  --(10.997,2.399)--(11.278,2.399)--(11.306,2.399)--(11.531,2.399)--(11.587,2.399)--(11.615,2.399)%
+  --(11.756,2.399)--(11.784,2.399)--(11.812,2.399)--(11.840,2.399)--(11.868,2.399)--(11.924,2.399)%
+  --(11.981,2.399)--(12.093,2.399)--(12.234,2.399)--(12.262,2.399)--(12.374,2.399)--(12.458,2.399)%
+  --(12.571,2.399);
 \gpcolor{color=gp lt color border}
 \gpsetlinewidth{1.00}
-\draw[gp path] (2.424,11.075)--(2.424,1.845)--(15.447,1.845)--(15.447,11.075)--cycle;
+\draw[gp path] (2.424,11.075)--(2.424,1.845)--(13.667,1.845)--(13.667,11.075)--cycle;
 \node[gp node center,rotate=-270] at (-0.812,6.460) {Objective value};
-\node[gp node center] at (8.935,0.215) {Relative time ($\tau$) [S]};
-\node[gp node center] at (8.935,11.537) {Objective value for Weekly Schedule};
+\node[gp node center,rotate=-270] at (16.397,6.460) {Resource Penalty [Hours]};
+\node[gp node center] at (8.045,0.215) {Relative time ($\tau$) [S]};
+\node[gp node center] at (8.045,11.537) {Objective Value for Weekly Schedule};
 %% coordinates of the plot area
-\gpdefrectangularnode{gp plot 1}{\pgfpoint{2.424cm}{1.845cm}}{\pgfpoint{15.447cm}{11.075cm}}
+\gpdefrectangularnode{gp plot 1}{\pgfpoint{2.424cm}{1.845cm}}{\pgfpoint{13.667cm}{11.075cm}}
 \endtikzpicture
 %% gnuplot variables
