--- a/papers/optimizing-a-maintenance-scheduling-system-through-the-use-of-atomic-pointer-swaps/main.tex
+++ b/papers/optimizing-a-maintenance-scheduling-system-through-the-use-of-atomic-pointer-swaps/main.tex
@@ -147,7 +147,13 @@
 
 %% Abstract
 \begin{abstract}
-            
+This paper presents a way to modularize metaheuristics to enable optimization of an industrial maintenance
+scheduling problem. The maintenance scheduling problem has been difficult to optimize due to its
+reliance on multiple actors that each make up the scheduling process. 
+The approach will use atomic pointer swaps to share solutions between  
+the different metaheuristics keeping state consistent while having as little performance overhead
+as possible. The system is implemented in Rust due to the high requirements on memory safety 
+presented setup, and data is coming from Total Energies. 
 \end{abstract}
 
 %%Graphical abstract
@@ -180,6 +186,9 @@ Large Neighborhood Search
 \end{frontmatter}
 
 \input{../optimizing-a-maintenance-scheduling-system-through-the-use-of-atomic-pointer-swaps/tex/introduction.tex}
+\input{../optimizing-a-maintenance-scheduling-system-through-the-use-of-atomic-pointer-swaps/tex/solution_method.tex}
+\input{../optimizing-a-maintenance-scheduling-system-through-the-use-of-atomic-pointer-swaps/tex/results.tex}
+\input{../optimizing-a-maintenance-scheduling-system-through-the-use-of-atomic-pointer-swaps/tex/discussion.tex}
 
 \bibliography{refs}
 
