--- a/papers/optimizing-a-maintenance-scheduling-system-through-the-use-of-atomic-pointer-swaps/main.tex
+++ b/papers/optimizing-a-maintenance-scheduling-system-through-the-use-of-atomic-pointer-swaps/main.tex
@@ -190,7 +190,7 @@ Large Neighborhood Search
 \input{../optimizing-a-maintenance-scheduling-system-through-the-use-of-atomic-pointer-swaps/tex/results.tex}
 \input{../optimizing-a-maintenance-scheduling-system-through-the-use-of-atomic-pointer-swaps/tex/discussion.tex}
 
-\bibliography{refs}
+\bibliography{optimizing-a-maintenance-scheduling-system-through-the-use-of-atomic-pointer-swaps}
 
 \bibliographystyle{elsarticle-harv}
 
