Updates from Overleaf

--- a/papers/actor-based-large-neighborhood-search/tex/solution_method.tex
+++ b/papers/actor-based-large-neighborhood-search/tex/solution_method.tex
@@ -129,6 +129,6 @@ message passing. This method provides a streamlined, modular way to integrate
 metaheuristics, aligning with modern software architecture principles while
 avoiding their typical pitfalls \citep{richards_fundamentals_2020}. It should
 be noted that message passing is exceptional at dealing with one-off events that
-have varied and sporatic nature such as interfacing with stakeholders and external
+have varied and sporadic nature such as interfacing with stakeholders and external
 systems.
 
